all po update 2021.07.13 + fr.po latest

--- a/po/ar.po
+++ b/po/ar.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OBH enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2019-04-12 12:36+0300\n"
 "Last-Translator: mosad - مساعد الجعيد <abo-mishal@hotmail.com>\n"
 "Language-Team: mosad - مساعد الجعيد\n"
@@ -1903,6 +1903,9 @@ msgstr "التحقق من إتصال الإنترنت"
 msgid "Check the internet connection again"
 msgstr "تحقق من إتصال الإنترنت مرة أخرى"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "التحقق من نظام الملفات..."
 
@@ -2165,9 +2168,6 @@ msgstr ""
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "إعدادات الترجمة الفرعية يجب تبديل بين وضع الخط إلى عادي، مائل، عريض و عريض مائل"
-
-msgid "Configure interface"
-msgstr "تكوين الواجهه"
 
 msgid "Configure nameservers"
 msgstr "تكوين أسم الخادم"
@@ -2446,9 +2446,6 @@ msgstr "تهيئة أي مؤالف سيكون المفضل، عندما يتوف
 
 msgid "Configure your internal LAN"
 msgstr "تكوين شبة الإنترنت الداخليه الخاصة بك"
-
-msgid "Configure your network again"
-msgstr "تكوين الشبكة مره ثانيه"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3651,6 +3648,9 @@ msgstr "ادخل الرقم المخزن في موقع النظام المتحر
 msgid "Enter the service pin"
 msgstr "أدخل الرقم السري للخدمة"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "ادخل خط الطول الحالي. هذا هو عدد الدرجات التي تكون من صفر الزوال كعشري."
 
@@ -4631,7 +4631,7 @@ msgstr "عناون الايبي"
 msgid "I do not want to perform any service scans"
 msgstr "هل تريد عمل بحث؟"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5209,9 +5209,6 @@ msgstr "متصل:"
 msgid "Linked titles with a DVD menu"
 msgstr "العناوين المرتبطة مع قائمة الدي"
 
-msgid "List available networks"
-msgstr "قائمة الشبكات المتاحة"
-
 #, fuzzy
 msgid "List mode"
 msgstr "وضع الاختبار"
@@ -5380,9 +5377,6 @@ msgstr "يدوي"
 
 msgid "Manual Scan"
 msgstr "بحـث يدوي"
-
-msgid "Manual configuration"
-msgstr "التفعيل اليدوي"
 
 msgid "Manual scan"
 msgstr "بحـث يدوي"
@@ -6296,6 +6290,9 @@ msgstr "المعلومات الخاصة بالبرامج ومعرف مزودين
 msgid "PPanel"
 msgstr "لوحة تحكم البرامج"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "تحديث قائمة الباقات"
 
@@ -6479,23 +6476,9 @@ msgstr "من فضلك قم بتغيير وقت إنتهاء التسجيل"
 msgid "Please choose an extension..."
 msgstr "من فضلك أختار من الملحقات..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"من فضلك فم بتكوين أو تأكد من أسم الخادم بوضع القيم المطلوبه.\n"
-"عندما تكون مستعد أضغط موافق للاستمرار."
-
 #, fuzzy
 msgid "Please configure the fallback tuner setup"
 msgstr "ضبط مؤالف التراجع"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"من فضلك قم بتكوين الإتصال بالانترنت بملأ القيم المطلوبه \n"
-"عندما تكون مستعد أضغط موافق للاستمرار."
 
 msgid "Please connect your receiver to the internet"
 msgstr "الرجاء توصيل جهاز الاستقبال الخاص بك على شبكة الإنترنت"
@@ -6534,9 +6517,6 @@ msgstr "من فضلك أدخل الرقم السري الجديد"
 msgid "Please enter the old PIN code"
 msgstr "الرجاء إدخال الرمز السري القديم"
 
-msgid "Please follow the instructions on the TV"
-msgstr "من فضلك اتبع التعليمات على التليفزيون"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "من فضلك أعلم ان الوسيط المختار لا يمكن الدخول اليه ، ولهذا سيتم استخدام الدليل الافتراضى بدلا منه ."
 
@@ -6573,24 +6553,6 @@ msgstr "الرجاء اختيار العلامة للتصفية..."
 
 msgid "Please select the movie path..."
 msgstr "من فضلك أختار مسار الفلم..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"من فضلك أختار واجهة الشبكة التى تريد استخدامها فى الاتصال بالانترنت.\n"
-"\n"
-"أضغط موافق للاستمرار."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"من فضلك أختار الشبكة اللاسلكيه التى تريد الاتصال بها \n"
-"\n"
-"أضغط موافق للاستمرار."
 
 msgid "Please set up tuner A"
 msgstr "من فضلك أضبط المؤالف أ"
@@ -7193,9 +7155,6 @@ msgstr "معدل التحديث"
 
 msgid "Refresh rate"
 msgstr "معدل التحديث"
-
-msgid "Refresh rate selection."
-msgstr "إختيار معدل التحديث."
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -8071,9 +8030,6 @@ msgstr "أختار المجلد المراد"
 msgid "Select provider to add..."
 msgstr "أختار مزود الخدمة لإضافته..."
 
-msgid "Select refresh rate"
-msgstr "أختار معدل التحديث"
-
 msgid "Select satellites"
 msgstr "اختيار الأقمار الصناعية"
 
@@ -8176,17 +8132,8 @@ msgstr "تحديد مصدر الترقية"
 msgid "Select update source to edit"
 msgstr "أختار مصدر الترقيه المراد تحريره."
 
-msgid "Select video input with up/down buttons"
-msgstr "أختار مدخل الفيديو بالزر الأعلى/الأسفل"
-
-msgid "Select video mode"
-msgstr "أختار صيغة بث الفديو"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-msgid "Select wireless network"
-msgstr "أختار الشبكة اللاسلكيه"
 
 msgid "Select your ATSC provider."
 msgstr "حدد مزود خدمات لجنة أنظمة التلفزيون المتقدمة."
@@ -9233,6 +9180,10 @@ msgstr "الانتقال إلى الوقت الحالي"
 msgid "Stop entry"
 msgstr "توقف المدخل"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "تعيين قناة بدء التشغيل"
+
 msgid "Stop play TV"
 msgstr "إيقاف تشغيل التلفزيون"
 
@@ -9613,13 +9564,6 @@ msgstr "التايلاندية"
 msgid "Thailand"
 msgstr "التايلندية"
 
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"شكرا لإستخدامك نافذة الإعدادات.\n"
-"من فضلك أضغط موافق للاستمرار."
-
 #, fuzzy
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
@@ -9746,13 +9690,6 @@ msgstr "جاري إعادة تشغيل واجهة المستخدم على %s %s 
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"لم يتم تثبيت بلج إنز الشبكة الاسلكية!\n"
-"الرجاء تثبيته وأختار ما تريد القيام به بعد ذلك."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "لم يتم تثبيت بلج إنز الشبكة الاسلكية!\n"
@@ -9811,6 +9748,9 @@ msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "هذا هو الترتيب الذي يتم إرسال الأوامر دايزك إلى النظام الجوي. الأمر يجب ان تتوافق تماما مع النظام يتم ترتيب الاجهزه المادية علي طول كابل الاشاره (بدءا من نهاية المتلقي)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "هذا الخيار يسمح للحد من كتلة الضوضاء في الصورة. من الواضح أن هذا هو على حساب الحدة في الصورة."
@@ -10023,6 +9963,9 @@ msgid ""
 msgstr ""
 
 msgid "This test detects your configured LAN adapter."
+msgstr ""
+
+msgid "This valid ONID/TSID"
 msgstr ""
 
 msgid ""
@@ -10743,6 +10686,9 @@ msgstr "ملف الترجمة فوب"
 msgid "VU+"
 msgstr "الفوبلس"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "فانواتو"
 
@@ -10775,17 +10721,6 @@ msgstr "اعداد تحسين الفيديو"
 
 msgid "Video enhancement setup"
 msgstr "اعداد تحسين الفيديو"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-
-msgid "Video mode selection."
-msgstr "إختيار وضعية الفيديو."
 
 msgid "Video output"
 msgstr "إخراج الفيديو"
@@ -11020,20 +10955,6 @@ msgstr ""
 "تقديم بداية الاشياء التي تريد قطعها.أضغط مفتاح موافق,أختار'تشغيل القص'.\n"
 "\n"
 "أصغط على مفتاح موافق لإختيار نهاية القص. هذا كل شي."
-
-#, fuzzy
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"أهلا وسهلا.\n"
-"\n"
-" إذا كنت ترغب في الاتصال %s %s على شبكة الإنترنت، وهذا المعالج سوف يذلك من خلال إعداد شبكة إتصال أساسية من الضبط الخاص بك %s %s.\n"
-"\n"
-"اضغط على زر موافق لبدء تكوين الشبكة"
 
 #, fuzzy
 msgid ""
@@ -11322,12 +11243,6 @@ msgstr "الشبكة الاسلكية"
 msgid "Wireless network configuration..."
 msgstr "تكوين شبكة الانترنت الاسلكية ..."
 
-msgid "Wireless network connection setup"
-msgstr "إعداد اتصال الشبكة اللاسلكية"
-
-msgid "Wireless network connection setup."
-msgstr "إعداد اتصال الشبكة اللاسلكية."
-
 msgid "Wireless network state"
 msgstr "حالة الشبكة اللاسلكية"
 
@@ -11554,13 +11469,6 @@ msgstr ""
 "الرجاء الانتظار حتى يتم %s %s أعاده تشغيل جهازك\n"
 "هذا قد يستغرق بضع دقائق"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"اتصال شبكة الإنترنت الخاصة بك لا يعمل!\n"
-"الرجاء اختيار ما تريد القيام به بعد ذلك."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "اتصال الانترنت الخاص بك يعمل (الايبي: %s)"
@@ -11590,18 +11498,6 @@ msgstr ""
 "\n"
 
 #, fuzzy
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"الاتصال بالإنترنت يعمل الآن.\n"
-"\n"
-"الرجاء الضغط علي \"موافق\" للمتابعة."
-
-#, fuzzy
 msgid "Your receiver is rebooting"
 msgstr "جاري إعادة تشغيل الجهاز %s %s الخاص بك"
 
@@ -11624,17 +11520,6 @@ msgstr "جهاز الاستقبال الخاص بك غير متصل بالإنت
 #, fuzzy
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "سيتم إعادة تشغيل جهاز الفوبلس الخاص بك بعد الضغط على زر موافق من الريموت كونترول."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"تعثر تشغيل إتصال كيبل الإنترنت الخاص بك!\n"
-"هل مرفق فلاش إتصال الشبكة اللاسلكية الخاص بك?\n"
-"\n"
-"الرجاء اختيار ما تريد القيام به بعد ذلك."
 
 msgid "Zambia"
 msgstr "زامبيا"
