--- a/po/ca.po
+++ b/po/ca.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2021-06-02 18:22+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: angelodos angelo2807@hotmail.com\n"
@@ -1980,6 +1980,9 @@ msgstr "Comproveu internet"
 msgid "Check the internet connection again"
 msgstr "Comproveu de nou la connexió a Internet"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Comprovació del sistema de fitxers …"
 
@@ -2252,10 +2255,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr "Configureu si el subtítol ha de canviar entre normal, cursiva, negreta i negreta"
 
 #
-msgid "Configure interface"
-msgstr "Configura la interface"
-
-#
 msgid "Configure nameservers"
 msgstr "Configura nom servidors"
 
@@ -2504,10 +2503,6 @@ msgstr "Configureu quin sintonitzador es preferirà quan hi hagi més d’un sin
 #
 msgid "Configure your internal LAN"
 msgstr "Configureu la vostra LAN interna"
-
-#
-msgid "Configure your network again"
-msgstr "Configura de nou la xarxa"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Configureu la configuració de xarxa i premeu OK per escanejar"
@@ -3773,6 +3768,9 @@ msgstr "Introduïu el número emmagatzemat al posicionador que correspon a aques
 msgid "Enter the service pin"
 msgstr "Entra el pin del canal"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Introduïu la latitud actual. Aquest és el nombre de graus que provenen de l’equador com a decimal."
 
@@ -4782,7 +4780,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Vols fer una recerca de canals"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+#, fuzzy
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "I55SE/H7(nou model)/H9(nou model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
 
 msgid "IDLE"
@@ -5396,9 +5395,6 @@ msgstr "Enllaç"
 msgid "Linked titles with a DVD menu"
 msgstr "Títulos vinculados con un menú de DVD"
 
-msgid "List available networks"
-msgstr "Llista les xarxes disponibles"
-
 msgid "List mode"
 msgstr "Mode de llista"
 
@@ -5571,9 +5567,6 @@ msgstr "Manual"
 #
 msgid "Manual Scan"
 msgstr "Recerca manual"
-
-msgid "Manual configuration"
-msgstr "Configuració manual"
 
 #
 msgid "Manual scan"
@@ -6541,6 +6534,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Actualització de la llista de paquets"
@@ -6736,25 +6732,9 @@ msgstr "Sisplau canvia l'hora d'aturar la gravació"
 msgid "Please choose an extension..."
 msgstr "Sisplau escull una extensió..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configureu o verifiqueu els servidors de noms omplint els valors requerits.\n"
-"Quan estiguis preparat, premeu OK per continuar."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
 "Configureu o verifiqueu els servidors de noms omplint els valors requerits.\n"
-"Quan estiguis preparat, premeu OK per continuar."
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configureu la vostra connexió a Internet omplint els valors requerits.\n"
 "Quan estiguis preparat, premeu OK per continuar."
 
 msgid "Please connect your receiver to the internet"
@@ -6799,10 +6779,6 @@ msgstr "Introduïu el nou codi PIN"
 
 msgid "Please enter the old PIN code"
 msgstr "Introduïu l’antic codi PIN"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Seguiu les instruccions del televisor"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -6850,26 +6826,6 @@ msgstr "Seleccioneu l’etiqueta per filtrar …"
 #
 msgid "Please select the movie path..."
 msgstr "Seleccioneu el camí de la pel·lícula …"
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Seleccioneu la interfície de xarxa que voleu utilitzar per a la vostra connexió a Internet.\n"
-"\n"
-"Premeu OK per continuar."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Seleccioneu la xarxa sense fil a la qual voleu connectar-vos.\n"
-"\n"
-"Premeu OK per continuar."
 
 #
 msgid "Please set up tuner A"
@@ -7521,10 +7477,6 @@ msgstr "Refrescar"
 
 msgid "Refresh rate"
 msgstr "Refrescar rate"
-
-#
-msgid "Refresh rate selection."
-msgstr "Refrescar rate seleccio"
 
 msgid "Refusing to move to the same directory"
 msgstr "Negant-se a passar al mateix directori"
@@ -8441,10 +8393,6 @@ msgstr "Seleccioneu la ruta del fitxer de registre"
 msgid "Select provider to add..."
 msgstr "Selecciona proveïdor per afegir …"
 
-#
-msgid "Select refresh rate"
-msgstr "Seleccioneu el percentatge de refresc"
-
 msgid "Select satellites"
 msgstr "Selecciona satèl·lits"
 
@@ -8540,20 +8488,8 @@ msgstr "Seleccioneu l’origen de l’actualització"
 msgid "Select update source to edit"
 msgstr "Seleccioneu l’origen de l’actualització per editar"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Seleccioneu l’entrada de vídeo amb botons de dalt / baix"
-
-#
-msgid "Select video mode"
-msgstr "Selecciona la manera de vídeo"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Seleccioneu si el vostre dispositiu SCR està alimentat externament."
-
-#
-msgid "Select wireless network"
-msgstr "Seleccioneu xarxa sense fils"
 
 #
 msgid "Select your ATSC provider."
@@ -9616,6 +9552,11 @@ msgstr "Atureu el stream actual"
 msgid "Stop entry"
 msgstr "Aturar entrada"
 
+#
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Protegir canal"
+
 msgid "Stop play TV"
 msgstr "Parar TV"
 
@@ -10013,14 +9954,6 @@ msgstr "Tailandès"
 msgid "Thailand"
 msgstr "Tailàndia"
 
-#
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Gràcies per utilitzar l’assistent.\n"
-"Premeu OK per continuar."
-
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
@@ -10169,14 +10102,6 @@ msgstr "La interfície d’usuari del receptor es reinicia en mode de depuració
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"El complement LAN sense fils no està instal·lat.\n"
-"Instal·leu-lo i escolliu què voleu fer a continuació."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "El complement LAN sense fils no està instal·lat.\n"
@@ -10242,6 +10167,9 @@ msgstr "Es tracta d’un sintonitzador multiusos. Les opcions disponibles depene
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Aquest és l’ordre en què s’envien les comandes de DiSEqC al sistema aeri. La comanda ha de correspondre exactament amb la comanda que els dispositius físics estan disposats al llarg del cable de senyal (a partir del final del receptor)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Aquesta opció permet reduir el soroll bloqueig de la imatge. Evidentment, això costa la nitidesa de la imatge."
@@ -10431,6 +10359,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Aquesta prova detecta l’adaptador LAN configurat."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11189,6 +11120,9 @@ msgstr "Fitxer VOB"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 msgid "Vanuatu"
 msgstr "Vanuatu"
@@ -11223,23 +11157,6 @@ msgstr "Configuració de millora del vídeo"
 #
 msgid "Video enhancement setup"
 msgstr "Configuració de millora del vídeo"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Selecció d’entrada de vídeo\n"
-"\n"
-"Si us plau, premeu OK si podeu veure aquesta pàgina al vostre televisor (o seleccioneu un port d’entrada diferent).\n"
-"\n"
-"El següent port d’entrada es sondarà automàticament en 20 segons."
-
-#
-msgid "Video mode selection."
-msgstr "Selecció del mode de vídeo."
 
 #
 msgid "Video output"
@@ -11501,19 +11418,6 @@ msgstr ""
 "Cerqueu l’inici de les coses que voleu treure. Premeu D’acord i seleccioneu “Inici de tall”\n"
 "\n"
 "A continuació, busqueu fins al final, premeu OK, seleccioneu “tall tall”. Això és."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Benvingut.\n"
-"\n"
-"Si voleu connectar el receptor a Internet, aquest assistent us guiarà a través de la configuració bàsica de xarxa del receptor.\n"
-"\n"
-"Premeu OK per començar a configurar la vostra xarxa"
 
 msgid ""
 "Welcome.\n"
@@ -11780,12 +11684,6 @@ msgstr "Xarxa sense fils"
 msgid "Wireless network configuration..."
 msgstr "Configuració de la xarxa sense fil …"
 
-msgid "Wireless network connection setup"
-msgstr "Configuració de la connexió de xarxa sense fils"
-
-msgid "Wireless network connection setup."
-msgstr "Configuració de la connexió de xarxa sense fils."
-
 msgid "Wireless network state"
 msgstr "Estat de xarxa sense fils"
 
@@ -12030,14 +11928,6 @@ msgstr ""
 "Espereu fins que el receptor es reiniciï\n"
 "Això pot trigar uns minuts"
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"La vostra connexió a Internet no funciona.\n"
-"Seleccioneu què voleu fer a continuació."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "La vostra connexió a Internet funciona (ip:% s)"
@@ -12065,19 +11955,6 @@ msgstr ""
 "\n"
 "La vostra connexió a Internet funciona.\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"El receptor ja està preparat per utilitzar-lo.\n"
-"\n"
-"La vostra connexió a Internet funciona ara.\n"
-"\n"
-"Premeu OK per continuar."
-
 msgid "Your receiver is rebooting"
 msgstr "El vostre receptor s’inicia"
 
@@ -12095,18 +11972,6 @@ msgstr "El seu receptor haurà d’estar en espera per inactivitat."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "El receptor es reiniciarà després de prémer OK del comandament a distància."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"La connexió a Internet LAN sense fils no s’ha pogut iniciar.\n"
-"Heu adjuntat el vostre USB WLAN Stick?\n"
-"\n"
-"Seleccioneu què voleu fer a continuació."
 
 msgid "Zambia"
 msgstr "Zambia"
