--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -2037,6 +2037,9 @@ msgstr "Zkontrolujte připojení k internetu"
 msgid "Check the internet connection again"
 msgstr "Zkontrolujte znovu připojení k internetu"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 msgid "Checking filesystem..."
 msgstr "Ověřuje se souborový systém..."
@@ -2313,10 +2316,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr "Nastavuje, zda se mají titulky přepínat mezi normálními, kurzívou, tučnými a tučnou kurzívou."
 
 #
-msgid "Configure interface"
-msgstr "Nastavuje interface"
-
-#
 msgid "Configure nameservers"
 msgstr "Nastavuje DNS servery"
 
@@ -2578,10 +2577,6 @@ msgstr "Nastavuje, který tuner bude preferovaný, jestliže je k dispozici víc
 #
 msgid "Configure your internal LAN"
 msgstr "Nastavte vnitřní LAN"
-
-#
-msgid "Configure your network again"
-msgstr "Nastavte znovu Vaši síť"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Nastavte Vaši síť a stiskněte OK pro začátek vyhledávání"
@@ -3898,6 +3893,9 @@ msgstr "Zadejte číslo uložené v pozicioneru, které odpovídá tomuto sateli
 msgid "Enter the service pin"
 msgstr "Zadejte programový PIN"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Zadejte aktuální zeměpisnou šířku. Jde o počet stupňů a desetin stupně o které jste vzdáleni od rovníku."
 
@@ -4924,7 +4922,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Nechci provést žádné vyhledání programů"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+#, fuzzy
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "I55SE/H7(nový model)/H9(nový model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
 
 msgid "IDLE"
@@ -5563,9 +5562,6 @@ msgstr "Spojení:"
 msgid "Linked titles with a DVD menu"
 msgstr "Připojené tituly s DVD nabídkou"
 
-msgid "List available networks"
-msgstr "Seznam dostupných sítí"
-
 msgid "List mode"
 msgstr "Seznam"
 
@@ -5745,9 +5741,6 @@ msgstr "Ručně"
 #
 msgid "Manual Scan"
 msgstr "Ruční prohledávání"
-
-msgid "Manual configuration"
-msgstr "Ruční konfigurace"
 
 #
 msgid "Manual scan"
@@ -6736,6 +6729,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Aktualizace seznamu doplňků"
@@ -6940,24 +6936,8 @@ msgstr "Změňte dobu ukončení nahrávání"
 msgid "Please choose an extension..."
 msgstr "Vyberte si z nabídky rozšíření..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Nakonfigurujte nebo zkontrolujte DNS servery vyplněním požadovaných hodnot.\n"
-"Pro pokračování stiskněte OK."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Nastavit záložní tuner"
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Nakonfigurujte internetové připojení vyplněním požadovaných hodnot.\n"
-"Pro pokračování stiskněte OK."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Připojte přijímač do internetu"
@@ -7001,10 +6981,6 @@ msgstr "Zadejte nový PIN"
 
 msgid "Please enter the old PIN code"
 msgstr "Zadejte starý PIN kód"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Následujte instrukce na TV"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -7052,26 +7028,6 @@ msgstr "Zvolte tag do filtru..."
 #
 msgid "Please select the movie path..."
 msgstr "Vyberte cestu k filmům..."
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Zvolte síťový interface, který chcete používat pro internetové připojení.\n"
-"\n"
-"Stiskněte OK pro pokračování."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Zvolte bezdrátovou síť ke které se chcete připojit.\n"
-"\n"
-"Stiskněte OK pro pokračování."
 
 #
 msgid "Please set up tuner A"
@@ -7749,10 +7705,6 @@ msgstr "Obnovit"
 #
 msgid "Refresh rate"
 msgstr "Obnovovací frekvence"
-
-#
-msgid "Refresh rate selection."
-msgstr "Volba obnovovací rychlosti."
 
 #
 msgid "Refusing to move to the same directory"
@@ -8688,10 +8640,6 @@ msgid "Select provider to add..."
 msgstr "Vyberte poskytovatele pro přidání..."
 
 #
-msgid "Select refresh rate"
-msgstr "Vyberte obnovovací frekvenci"
-
-#
 msgid "Select satellites"
 msgstr "Vyberte satelity"
 
@@ -8790,20 +8738,8 @@ msgstr "Vyberte zdroje pro aktualizaci"
 msgid "Select update source to edit"
 msgstr "Výběr zdroje pro aktualizaci k úpravě"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Vybere video vstup pomocí tlačítek nahoru/dolů"
-
-#
-msgid "Select video mode"
-msgstr "Zvolte video mód"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Vyberte, zda je Vaše SCR zařízení externě napájeno."
-
-#
-msgid "Select wireless network"
-msgstr "Vyberte bezdrátovou síť"
 
 msgid "Select your ATSC provider."
 msgstr "Vyberte ATSC poskytovatele."
@@ -9910,6 +9846,10 @@ msgstr "Zrušit aktuální stream"
 msgid "Stop entry"
 msgstr "Zastavit záznam"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Přejít na poslední program"
+
 msgid "Stop play TV"
 msgstr "Zastavit přehrávání TV"
 
@@ -10318,14 +10258,6 @@ msgstr "Thajsky"
 msgid "Thailand"
 msgstr "Thajsko"
 
-#
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Děkujeme za použití průvodce.\n"
-"Stiskněte OK pro pokračování."
-
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
@@ -10472,13 +10404,6 @@ msgstr "Uživatelské rozhraní se restartuje v debug módu"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Plugin pro bezdrátovou LAN není nainstalován!\n"
-"Nainstalujte plugin a zvolte, co chcete dělat dál."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Plugin pro bezdrátovou LAN není nainstalován!\n"
@@ -10545,6 +10470,9 @@ msgstr "Jde o multityp tuner. Dostupné možnosti závisí na hardwaru."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Jde o pořadí ve kterém jsou příkazy DiSEqC odeslány do anténního systému. Pořadí musí přesně odpovídat pořadí fyzických zařízení na signálovém kabelu (začínající od konce přijímače)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Umožňuje snížit blokový šum za cenu snížení ostrosti obrazu."
@@ -10741,6 +10669,9 @@ msgstr ""
 #
 msgid "This test detects your configured LAN adapter."
 msgstr "Tento test detekuje nakonfigurovaný síťový adaptér (LAN)."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11510,6 +11441,9 @@ msgstr "VOB soubor"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 msgid "Vanuatu"
 msgstr "Vanuatu"
@@ -11546,24 +11480,6 @@ msgstr "Korekce obrazu"
 #
 msgid "Video enhancement setup"
 msgstr "Nastavení korekce obrazu"
-
-#
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Výběr zdroje signálu\n"
-"\n"
-"Stiskněte OK jestliže vidíte tuto stránku na TV (nebo vyberte jiný zdroj signálu).\n"
-"\n"
-"Další zdroj signálu bude automaticky prozkoumán během 10 sekund."
-
-#
-msgid "Video mode selection."
-msgstr "Výběr video módu"
 
 #
 msgid "Video output"
@@ -11827,19 +11743,6 @@ msgstr ""
 "Najděte začátek materiálu, který chcete vystřihnout, stiskněte OK a zvolte 'začátek střihu'.\n"
 "\n"
 "Poté najděte konec, stiskněte OK a zvolte 'konec střihu'. To je vše."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Vítáme Vás.\n"
-"\n"
-"Chcete-li připojit Váš přijímač do internetu, tento průvodce Vás provede základním nastavením sítě přijímače.\n"
-"\n"
-"Stiskněte OK pro spuštění konfigurace Vaší sítě"
 
 msgid ""
 "Welcome.\n"
@@ -12111,12 +12014,6 @@ msgstr "Bezdrátová síť"
 msgid "Wireless network configuration..."
 msgstr "Nastavení bezdrátové sítě..."
 
-msgid "Wireless network connection setup"
-msgstr "Nastavení připojení bezdrátové sítě"
-
-msgid "Wireless network connection setup."
-msgstr "Nastavení připojení bezdrátové sítě."
-
 msgid "Wireless network state"
 msgstr "Stav bezdrátové sítě"
 
@@ -12371,14 +12268,6 @@ msgstr ""
 "Čekejte, dokud se přijímač nerestartuje\n"
 "To může trvat několik minut"
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Vaše internetové připojení nepracuje!\n"
-"Zvolte prosím, co chcete dělat dál."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Internetové připojení je funkční (ip: %s)"
@@ -12408,19 +12297,6 @@ msgstr ""
 "Internetové připojení nyní pracuje.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Váš přijímač je nyní připraven k používání.\n"
-"\n"
-"Vaše internetové připojení nyní pracuje.\n"
-"\n"
-"Prosím, stiskněte OK pro pokračování."
-
 msgid "Your receiver is rebooting"
 msgstr "Přijímač se restartuje"
 
@@ -12438,18 +12314,6 @@ msgstr "Přijímač přešel do standby z důvodu neaktivity."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Váš přijímač bude restartován po stisknutí OK na dálkovém ovladači."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Vaše bezdrátové LAN internetové připojení nemůže být spuštěno!\n"
-"Máte připojeno Váše USB WLAN zařízení?\n"
-"\n"
-"Zvolte prosím, co chcete dělat dál."
 
 msgid "Zambia"
 msgstr "Zambie"
