--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2021-04-30 16:06+0200\n"
 "Last-Translator: kueken\n"
 "Language-Team: OpenPLi\n"
@@ -1779,6 +1779,9 @@ msgstr "Überprüfe die Internet-Verbindung"
 msgid "Check the internet connection again"
 msgstr "Wiederholter Test der Internet-Verbindung"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Überprüfe Dateisystem…"
 
@@ -2018,9 +2021,6 @@ msgstr "Konfiguriere, ob die HDMI-EDID Überprüfung übersprungen werden soll, 
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Konfiguration ob Untertitel zwischen normal, kursiv, fett, und fettkursiv wechseln sollen."
-
-msgid "Configure interface"
-msgstr "Netzwerkkarte konfigurieren"
 
 msgid "Configure nameservers"
 msgstr "DNS-Server konfigurieren"
@@ -2271,9 +2271,6 @@ msgstr "Bevorzugter Tuner, falls mehr als einer verfügbar ist. Bei 'Automatisch
 
 msgid "Configure your internal LAN"
 msgstr "Internes Netzwerk konfigurieren"
-
-msgid "Configure your network again"
-msgstr "Netzwerk erneut konfigurieren"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Konfigurieren Sie Ihre Netzwerkeinstellungen und drücken Sie zum Scannen OK"
@@ -3386,6 +3383,9 @@ msgstr "Geben Sie die Nummer ein, die im Stellungsregler für diesen Satelliten 
 msgid "Enter the service pin"
 msgstr "Geben Sie den Kanal-PIN-Code ein"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Geben Sie Ihren aktuellen Breitengrad ein. Dies ist die Anzahl der Grade, die Sie vom Äquator als Dezimalzahl haben."
 
@@ -4307,7 +4307,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Ich will keine Service-Scans durchführen"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+#, fuzzy
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "Zgemma H7(neues Modell)/H9(neues Modell)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
@@ -4861,9 +4862,6 @@ msgstr "Verbindung:"
 msgid "Linked titles with a DVD menu"
 msgstr "Verknüpfte Titel mit einem DVD-Menü"
 
-msgid "List available networks"
-msgstr "Verfügbare Netzwerke anzeigen"
-
 msgid "List mode"
 msgstr "Listen Modus"
 
@@ -5016,9 +5014,6 @@ msgstr "Benutzerhandbuch"
 
 msgid "Manual Scan"
 msgstr "Manuelle Suche"
-
-msgid "Manual configuration"
-msgstr "Manuelle Konfiguration"
 
 msgid "Manual scan"
 msgstr "Manuelle Suche"
@@ -5874,6 +5869,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Paketlistenaktualisierung"
 
@@ -6047,22 +6045,8 @@ msgstr "Bitte Aufnahmeendzeit ändern"
 msgid "Please choose an extension..."
 msgstr "Bitte eine Erweiterung auswählen…"
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Konfigurieren Sie Ihre DNS-Server durch Ausfüllen der entsprechenden Werte.\n"
-"Drücken Sie OK zum Fortfahren"
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Die Reserve-Tuner-Einstellung konfigurieren"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Konfigurieren Sie Ihr Netzwerk durch Ausfüllen der entsprechenden Werte.\n"
-"Drücken Sie OK zum Fortfahren"
 
 msgid "Please connect your receiver to the internet"
 msgstr "Bitte verbinden Sie Ihren Receiver mit dem Internet"
@@ -6100,9 +6084,6 @@ msgstr "Bitte den neuen PIN-Code eingeben"
 msgid "Please enter the old PIN code"
 msgstr "Bitte den alten PIN-Code eingeben"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Bitte folgen Sie den Angaben auf Ihrem Fernseher"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Auf das zuletzt ausgewählte Medium konnte nicht zugegriffen werden, daher wird stattdessen das Standardverzeichnis benutzt."
 
@@ -6138,24 +6119,6 @@ msgstr "Bitte einen Tag zum Filtern auswählen…"
 
 msgid "Please select the movie path..."
 msgstr "Bitte den Pfad zum Movie Ordner angeben…"
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Bitte wählen Sie die Netzwerkschnittstelle welche Sie für Ihren Internetzugang nutzen wollen.\n"
-"\n"
-"Drücken Sie OK zum Fortfahren"
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Bitte wählen Sie das Funk-Netzwerk, mit dem Sie sich verbinden wollen.\n"
-"\n"
-"Drücken Sie OK zum Fortfahren."
 
 msgid "Please set up tuner A"
 msgstr "Einstellungen für Tuner A"
@@ -6722,9 +6685,6 @@ msgstr "Aktualisieren"
 
 msgid "Refresh rate"
 msgstr "Bildwiederholfrequenz"
-
-msgid "Refresh rate selection."
-msgstr "Auswahl der Bildwiederholfrequenz."
 
 msgid "Refusing to move to the same directory"
 msgstr "Weigert sich, in dasselbe Verzeichnis zu wechseln"
@@ -7526,9 +7486,6 @@ msgstr "Wählen Sie den Pfad für die Protokolldatei aus"
 msgid "Select provider to add..."
 msgstr "Wählen Sie einen Anbieter zum Hinzufügen…"
 
-msgid "Select refresh rate"
-msgstr "Wählen Sie eine Bildwiederholfrequenz"
-
 msgid "Select satellites"
 msgstr "Wähle Satelliten"
 
@@ -7619,17 +7576,8 @@ msgstr "Wählen Sie eine Update-Quelle"
 msgid "Select update source to edit"
 msgstr "Wählen Sie eine Update-Quelle zum Bearbeiten"
 
-msgid "Select video input with up/down buttons"
-msgstr "Wählen Sie den Video-Eingang mit den Hoch/Runter-Tasten"
-
-msgid "Select video mode"
-msgstr "Wählen Sie den Video-Modus"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Bitte wählen sie aus ob ihr SCR Gerät extern mit Strom gespeist wird."
-
-msgid "Select wireless network"
-msgstr "Funk-Netzwerk auswählen"
 
 msgid "Select your ATSC provider."
 msgstr "Wählen Sie Ihren ATSC-Anbieter aus."
@@ -8599,6 +8547,10 @@ msgstr "Stoppen Sie den aktuellen Stream"
 msgid "Stop entry"
 msgstr "Element stoppen"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Springe zum letzten Kanal"
+
 msgid "Stop play TV"
 msgstr "Stoppen Sie das Fernsehen"
 
@@ -8956,13 +8908,6 @@ msgid "Thailand"
 msgstr "Thailand"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Vielen Dank, dass Sie den Assistenten benutzt haben.\n"
-"Drücken Sie OK zum Fortfahren."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9103,13 +9048,6 @@ msgstr "Die Benutzeroberfläche Ihres Empfängers wird im Debug-Modus neu gestar
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Das Wireless LAN Plugin ist nicht installiert!\n"
-"Bitte installieren Sie es und wählen Sie dann eine Option zum Fortfahren."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Das Wireless LAN Plugin ist nicht installiert!\n"
@@ -9169,6 +9107,9 @@ msgstr "Das ist ein MultiTyp-Tuner. Verfügbare Optionen sind abhängig von der 
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "In dieser Reihenfolge werden DiSEqC-Befehle an das Antennensystem gesendet. Die Reihenfolge muss genau der Reihenfolge entsprechen, in der die physikalischen Geräte entlang des Signalkabels angeordnet sind (ausgehend vom Empfängerende)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Mit dieser Option können Sie das Blockrauschen im Bild reduzieren. Das geht natürlich auf Kosten der Schärfe des Bildes."
@@ -9358,6 +9299,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Dieser Test ermittelt Ihren konfigurierten Netzwerkadapter."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10021,6 +9965,9 @@ msgstr "VOB Datei"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10050,22 +9997,6 @@ msgstr "Erweiterte A/V-Einstellungen"
 
 msgid "Video enhancement setup"
 msgstr "Erweiterte A/V-Einstellungen"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Auswahl des Videoeingangs\n"
-"\n"
-"Bitte drücken Sie OK, wenn Sie diese Seite auf Ihrem Fernseher sehen können (oder wählen Sie einen anderen Eingang aus).\n"
-"\n"
-"Der nächste Videoeingang wird automatisch nach 20 Sekunden getestet."
-
-msgid "Video mode selection."
-msgstr "Auswahl des Videomodus."
 
 msgid "Video output"
 msgstr "Videoausgabe"
@@ -10290,19 +10221,6 @@ msgstr ""
 "Spule zum Anfang des Bereiches, der entfernt werden soll. Drücke OK und wähle 'Cut starten'.\n"
 "\n"
 "Dann spule zum Ende des Bereiches, drücke OK und wähle 'Cut beenden' - fertig."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Willkommen.\n"
-"\n"
-"Wenn Sie Ihren Receiver mit dem Internet verbinden wollen, wird Sie dieser Assistent durch die grundlegenden Netzwerkeinstellungen führen.\n"
-"\n"
-"Drücken Sie OK, um Ihr Netzwerk zu konfigurieren"
 
 msgid ""
 "Welcome.\n"
@@ -10570,12 +10488,6 @@ msgstr "Funk-Netzwerk"
 msgid "Wireless network configuration..."
 msgstr "Funk-Netzwerk Konfiguration…"
 
-msgid "Wireless network connection setup"
-msgstr "Funk-Netzwerk Konfiguration"
-
-msgid "Wireless network connection setup."
-msgstr "Funk-Netzwerk Konfiguration."
-
 msgid "Wireless network state"
 msgstr "Funk-Netzwerk Status"
 
@@ -10803,13 +10715,6 @@ msgstr ""
 "Bitte warten Sie, bis Ihr Receiver neu startet\n"
 "Das kann einige Minuten dauern"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Ihre Internetverbindung funktioniert nicht!\n"
-"Bitte wählen Sie eine Option zum Fortfahren."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Verbindung zum Internet aufgebaut (ip: %s)"
@@ -10837,19 +10742,6 @@ msgstr ""
 "Ihre Internetverbindung funktioniert nun.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Ihr Receiver ist jetzt konfiguriert.\n"
-"\n"
-"Ihre Internetverbindung funktioniert nun.\n"
-"\n"
-"Bitte OK drücken zum Fortfahren."
-
 msgid "Your receiver is rebooting"
 msgstr "Ihr Receiver startet neu"
 
@@ -10867,17 +10759,6 @@ msgstr "Der Receiver geht jetzt wegen Inaktivität in den Standby."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Ihr Receiver startet neu nach Betätigung der OK-Taste."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Ihre Funk-Internetverbindung konnte nicht gestartet werden!\n"
-"Ist Ihr USB WLAN-Stick korrekt angeschlossen?\n"
-"\n"
-"Bitte wählen Sie eine Option zum Fortfahren."
 
 msgid "Zambia"
 msgstr "Sambia"
