--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2021-05-25 18:08+0200\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -1977,6 +1977,9 @@ msgstr "Compruebe la conexión a Internet"
 msgid "Check the internet connection again"
 msgstr "Compruebe la conexión a Internet de nuevo"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 msgid "Checking filesystem..."
 msgstr "Chequear sistema de archivos..."
@@ -2246,10 +2249,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr "Configure si los subtítulos deben cambiar entre normal, cursiva, negrita y negrita"
 
 #
-msgid "Configure interface"
-msgstr "Configurar interfaz"
-
-#
 msgid "Configure nameservers"
 msgstr "Configurar DNSs"
 
@@ -2508,10 +2507,6 @@ msgstr "Configure qué sintonizador será preferido, cuando haya más de un sint
 #
 msgid "Configure your internal LAN"
 msgstr "Configurar su RED interna"
-
-#
-msgid "Configure your network again"
-msgstr "Configurar su red de nuevo"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Configure su configuración de red y presione OK para escanear"
@@ -3773,6 +3768,9 @@ msgstr "Ingrese el número almacenado en el posicionador que corresponde a este 
 msgid "Enter the service pin"
 msgstr "Ponga el pin del canal"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Ingrese su latitud actual. Este es el número de grados que eres del ecuador como un decimal."
 
@@ -4776,7 +4774,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "No quiero realizar ningún escaneo de servicio"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+#, fuzzy
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "Zgemma H7(nuevo modelo)/H9(nuevo modelo)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
@@ -5394,9 +5393,6 @@ msgstr "Enlace:"
 msgid "Linked titles with a DVD menu"
 msgstr "Enlazar los títulos con un menú de DVD"
 
-msgid "List available networks"
-msgstr "Lista de redes disponibles"
-
 msgid "List mode"
 msgstr "Modo de lista"
 
@@ -5571,9 +5567,6 @@ msgstr "Manual"
 #
 msgid "Manual Scan"
 msgstr "Búsqueda Manual"
-
-msgid "Manual configuration"
-msgstr "manual configuración"
 
 #
 msgid "Manual scan"
@@ -6535,6 +6528,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Actualización de lista de paquetes"
@@ -6735,24 +6731,8 @@ msgstr "Por favor, cambie la finalización de la grabación"
 msgid "Please choose an extension..."
 msgstr "Por favor, elija una extensión..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configure o verifique su DNS rellenando los valores requeridos.\n"
-"Cuanto esté preparado pulse OK para continuar."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Por favor, configure la configuración del sintonizador de respaldo"
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Por favor configure su conexión a internet rellenando los valores requeridos.\n"
-"Cuando esté preparado pulse OK para continuar."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Conecte su receptor a Internet"
@@ -6796,10 +6776,6 @@ msgstr "Introduzca el nuevo código PIN"
 
 msgid "Please enter the old PIN code"
 msgstr "Por favor, introduca el PIN anterior"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Siga las instrucciones en la TV"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -6847,26 +6823,6 @@ msgstr "Seleccione una etiqueta para filtrar..."
 #
 msgid "Please select the movie path..."
 msgstr "Por favor, seleccione un directorio de películas..."
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Seleccione el interfaz de red que quiere usar para su conexión a internet.\n"
-"\n"
-"Pulse OK para continuar."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Seleccione la red inalámbrica a la que quiere conectar.\n"
-"\n"
-"Pulse OK para continuar."
 
 #
 msgid "Please set up tuner A"
@@ -7513,10 +7469,6 @@ msgstr "Refresco"
 #
 msgid "Refresh rate"
 msgstr "Velocidad de refresco"
-
-#
-msgid "Refresh rate selection."
-msgstr "Selección de velocidad de refresco."
 
 msgid "Refusing to move to the same directory"
 msgstr "Se niega a moverse al mismo directorio"
@@ -8419,10 +8371,6 @@ msgstr "Seleccionar la ruta de acceso para el archivo de registro"
 msgid "Select provider to add..."
 msgstr "Seleccione proveedor a añadir..."
 
-#
-msgid "Select refresh rate"
-msgstr "Seleccionar la velocidad de refresco"
-
 msgid "Select satellites"
 msgstr "Seleccionar satélites"
 
@@ -8518,20 +8466,8 @@ msgstr "Seleccionar fuente de actualización"
 msgid "Select update source to edit"
 msgstr "Seleccione fuente de actualización a editar"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Seleccione entrada de vídeo con los botones arriba/abajo"
-
-#
-msgid "Select video mode"
-msgstr "Seleccionar el modo de video"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Seleccione si su dispositivo SCR está alimentado externamente."
-
-#
-msgid "Select wireless network"
-msgstr "Seleccione red inalámbrica"
 
 msgid "Select your ATSC provider."
 msgstr "Seleccione su proveedor de ATSC."
@@ -9598,6 +9534,11 @@ msgstr "Detener la corriente actual"
 msgid "Stop entry"
 msgstr "Detener la entrada"
 
+#
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Ir al último servicio"
+
 msgid "Stop play TV"
 msgstr "Deja de jugar TV"
 
@@ -10000,14 +9941,6 @@ msgstr "Thailandia"
 
 #
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Gracias por usar el asistente.\n"
-"Pulse OK para continuar."
-
-#
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -10157,14 +10090,6 @@ msgstr "La interfaz de usuario de su receptor se está reiniciando en modo de de
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"El plugin de RED inalámbrica no está instalado!\n"
-"Por favor, instálelo y elija que quiere hacer lo siguiente."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "El plugin de la red inalámbrica no ha sido instalado!\n"
@@ -10231,6 +10156,9 @@ msgstr "Este es un sintonizador multitipo. Las opciones disponibles dependen del
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "el suyo es el orden en que los comandos DiSEqC se envían al sistema aéreo. La orden debe corresponderse exactamente con el orden en que los dispositivos físicos están dispuestos a lo largo del cable de señal (comenzando desde el extremo del receptor)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Esta opción te permite reducir el bloqueo de ruido en la imagen. Obviamente, se reduce la nitidez de la imagen."
@@ -10428,6 +10356,9 @@ msgstr ""
 #
 msgid "This test detects your configured LAN adapter."
 msgstr "Esta prueba detecta su adaptador LAN configurado."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11178,6 +11109,9 @@ msgstr "Archivo VOB"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -11211,24 +11145,6 @@ msgstr "Configuración de mejora de vídeo"
 #
 msgid "Video enhancement setup"
 msgstr "Configuración de mejora de video"
-
-#
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Selección de entrada de vídeo\n"
-"\n"
-"Pulse OK si puede ver esta página en su televisor (o seleccione otro puerto de entrada).\n"
-"\n"
-"El siguiente puerto de entrada se probará automáticamente en 20 segundos."
-
-#
-msgid "Video mode selection."
-msgstr "Selección de modo de vídeo."
 
 #
 msgid "Video output"
@@ -11492,19 +11408,6 @@ msgstr ""
 "Busque el comienzo de las cosas que desea cortar. Pulse OK, seleccione ‘iniciar corte’.\n"
 "\n"
 "Luego busque hasta el final, presione OK, seleccione ‘end cut’. Eso es."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Bienvenido.\n"
-"\n"
-"Si desea conectar su receptor a Internet, este asistente le guiará a través de la configuración de red básica de su receptor.\n"
-"\n"
-"Pulse OK para iniciar la configuración de su red"
 
 msgid ""
 "Welcome.\n"
@@ -11774,12 +11677,6 @@ msgstr "Red inalámbrica"
 msgid "Wireless network configuration..."
 msgstr "Configuración de la red inalámbrica."
 
-msgid "Wireless network connection setup"
-msgstr "Configuración de la conexión de red inalámbrica"
-
-msgid "Wireless network connection setup."
-msgstr "Configuración de la conexión de red inalámbrica."
-
 msgid "Wireless network state"
 msgstr "Estado de la red inalámbrica"
 
@@ -12025,14 +11922,6 @@ msgstr ""
 "Espere hasta que el receptor se reinicie\n"
 "Esto puede tomar unos pocos minutos"
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"¡Su conexión a internet está funcionando!\n"
-"Elija que quiere hacer lo siguiente."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Su conexión a Internet funciona (ip:% s)"
@@ -12061,17 +11950,6 @@ msgstr ""
 "\n"
 "Su conexión a Internet está funcionando.\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Su receptor ya está listo para usar.\n"
-"\n"
-"Su conexión a Internet está funcionando ahora."
-
 msgid "Your receiver is rebooting"
 msgstr "El receptor está reiniciando"
 
@@ -12089,18 +11967,6 @@ msgstr "Su receptor se pondrá en espera debido a la inactividad."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "El receptor se reiniciará después de pulsar OK en el mando a distancia."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Su conexión a internet inalámbrica no puede iniciarse!\n"
-"Ha conectado un dispositivo WLAN USB?\n"
-"\n"
-"Pulse que quiere hacer lo siguiente."
 
 msgid "Zambia"
 msgstr "Zambia"
