--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2020-05-16 18:41+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -1958,6 +1958,9 @@ msgstr "Tarkista Internet-yhteys"
 msgid "Check the internet connection again"
 msgstr "Tarkista internet-yhteys uudestaan"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 msgid "Checking filesystem..."
 msgstr "Tarkistetaan tiedostojärjestelmää..."
@@ -2229,10 +2232,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr "Määritä vaihteleeko ulkoisen tekstityksen fontti tekstityksen määritysten mukaisesti (normal, italic, bold, bolditalic)"
 
 #
-msgid "Configure interface"
-msgstr "Määritä verkkosovitin"
-
-#
 msgid "Configure nameservers"
 msgstr "Määritä nimipalvelimet"
 
@@ -2479,10 +2478,6 @@ msgstr "Määrittää mitä viritintä suositaan, kun enemmän kuin yksi viritin
 #
 msgid "Configure your internal LAN"
 msgstr "Määritä LAN-asetukset"
-
-#
-msgid "Configure your network again"
-msgstr "Määritä verkko uudelleen"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Määritä verkkoasetukset ja aloita haku painamalla OK"
@@ -3769,6 +3764,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Syötä kanavan tunnusluku"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4769,7 +4767,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "En halua tehdä kanavahakua"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5396,9 +5394,6 @@ msgstr "Tila:"
 msgid "Linked titles with a DVD menu"
 msgstr "Linkitetyt tallenteet ja DVD-valikko"
 
-msgid "List available networks"
-msgstr "Näytä verkot"
-
 msgid "List mode"
 msgstr "Luettelotila"
 
@@ -5575,9 +5570,6 @@ msgstr "Manuaalinen"
 #
 msgid "Manual Scan"
 msgstr "Manuaalihaku"
-
-msgid "Manual configuration"
-msgstr "Manuaalinen määritys"
 
 msgid "Manual scan"
 msgstr "Manuaalihaku"
@@ -6565,6 +6557,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Ohjelmapakettilistan päivitys"
@@ -6765,24 +6760,8 @@ msgstr "Aseta tallennuksen päättymisaika"
 msgid "Please choose an extension..."
 msgstr "Valitse laajennus..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Määritä ja tarkista nimipalvelimien tiedot.\n"
-"Paina OK-näppäintä kun olet valmis."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Määritä lähiverkkoyhteys syöttämällä tarvittavat arvot.\n"
-"Paina OK-näppäintä kun olet valmis."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Yhdistä vastaanotin internettiin"
@@ -6830,10 +6809,6 @@ msgid "Please enter the old PIN code"
 msgstr "Syötä vanha PIN-koodi"
 
 #
-msgid "Please follow the instructions on the TV"
-msgstr "Seuraa ruudulla näkyviä ohjeita"
-
-#
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Huomaa, että oletushakemisto on käytössä, koska aikaisemmin valittua levyä ei voitu ladata."
 
@@ -6879,25 +6854,6 @@ msgstr "Valitse suodatettava avainsana..."
 #
 msgid "Please select the movie path..."
 msgstr "Valitse tallennehakemisto..."
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Valitse verkkosovitin jota haluat käyttää lähiverkkoyhteyteen.\n"
-"\n"
-"Jatka painamalla OK-näppäintä."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Valitse WLAN-verkko johon haluat kytkeytyä.\n"
-"\n"
-"Jatka painamalla OK-näppäintä."
 
 msgid "Please set up tuner A"
 msgstr "Määritä viritin-A"
@@ -7562,10 +7518,6 @@ msgstr "Päivitä"
 
 msgid "Refresh rate"
 msgstr "Virkistystaajuus"
-
-#
-msgid "Refresh rate selection."
-msgstr "Virkistystaajuuden valinta."
 
 #
 msgid "Refusing to move to the same directory"
@@ -8483,10 +8435,6 @@ msgid "Select provider to add..."
 msgstr "Valitse lisättävä palveluntarjoaja..."
 
 #
-msgid "Select refresh rate"
-msgstr "Valitse virkistystaajuus"
-
-#
 msgid "Select satellites"
 msgstr "Valitse satelliitit"
 
@@ -8588,20 +8536,8 @@ msgstr "Valitse päivityksen lähde"
 msgid "Select update source to edit"
 msgstr "Valitse muokattava päivityslähde"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Valitse video-sisäänmeno ylös/alas-näppäimillä"
-
-#
-msgid "Select video mode"
-msgstr "Valitse video-tila"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-#
-msgid "Select wireless network"
-msgstr "Valitse WLAN-verkko"
 
 msgid "Select your ATSC provider."
 msgstr "ATSC palveluntarjoaja"
@@ -9701,6 +9637,10 @@ msgstr "Pysäytä striimi"
 msgid "Stop entry"
 msgstr "Pysäytä"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Mene viimeiselle kanavalle"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -10108,13 +10048,6 @@ msgid "Thailand"
 msgstr "Thaimaa"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Ohjattu verkkoasennus on päättynyt.\n"
-"Jatka painamalla OK-näppäintä."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -10261,14 +10194,6 @@ msgstr "Vastaanottimesi käyttöliittymä käynnistyy uudelleen debug tilaan"
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"WLAN-lisäosaa ei ole asennettu!\n"
-"Asenna se ja valitse mitä haluat tehdä seuraavaksi."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "WLAN-lisäosaa ei ole asennettu!\n"
@@ -10325,6 +10250,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr "Tämä viritin soveltuu erityyppisiin verkkoihin. Käytettävissä olevan valinnat riippuvat laitteistosta."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10524,6 +10452,9 @@ msgstr ""
 #
 msgid "This test detects your configured LAN adapter."
 msgstr "Tämä testi tunnistaa määrittelemäsi verkkosovittimen."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11291,6 +11222,9 @@ msgstr "VOB-tiedosto"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 msgid "Vanuatu"
 msgstr "Vanuatu"
@@ -11323,24 +11257,6 @@ msgstr "Kuvasäädöt"
 
 msgid "Video enhancement setup"
 msgstr "Kuvasäätöjen asetukset"
-
-#
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video-sisäänmenon valinta\n"
-"\n"
-"Paina OK jos näet tämän ruudun TV:ssä (tai valitse TV:stä toinen sisäänmeno)\n"
-"\n"
-"Seuraavaa sisäänmenoa tunnistetaan automaattisesti 20 sekunnin kuluttua."
-
-#
-msgid "Video mode selection."
-msgstr "Video-tilan valinta."
 
 msgid "Video output"
 msgstr "Video-ulostulo"
@@ -11599,19 +11515,6 @@ msgstr ""
 "Hae kohta, josta haluat aloittaa poisleikkauksen. Paina OK-näppäintä ja valitse 'Aloita leikkaus'.\n"
 "\n"
 "Hae seuraavaksi kohta, johon haluat lopettaa leikkauksen. Paina OK-näppäintä ja valitse 'Lopeta leikkaus'."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Tervetuloa.\n"
-"\n"
-"Jos haluat kytkeä vastaanottimesi Internettiin tämä avustaja ohjaa sinua perus verkkoasetusten teossa vastaanottimeesi.\n"
-"\n"
-"Paina OK näppäintä aloittaaksesi verkkomäärityksien teon."
 
 msgid ""
 "Welcome.\n"
@@ -11881,12 +11784,6 @@ msgstr "Langaton verkko"
 msgid "Wireless network configuration..."
 msgstr "Langattoman verkon asetukset..."
 
-msgid "Wireless network connection setup"
-msgstr "WLAN-verkon asetukset"
-
-msgid "Wireless network connection setup."
-msgstr "WLAN-verkon asetukset."
-
 msgid "Wireless network state"
 msgstr "WLAN-verkon tila"
 
@@ -12130,14 +12027,6 @@ msgstr ""
 "Odota kunnes viritin käynnistyy uudellee\n"
 "Tämä saattaa kestää muutaman minuutin"
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Lähiverkkoyhteys ei toimi!\n"
-"Valitse mitä haluat tehdä seuraavaksi."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Internet-yhteys toimii (ip: %s)"
@@ -12166,19 +12055,6 @@ msgstr ""
 "Internet yhteytesi toimii.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vastaanottimesi on valmiina käyttöön.\n"
-"\n"
-"Internet yhteytesi toimii nyt.\n"
-"\n"
-"Paina OK jatkaaksesi."
-
 msgid "Your receiver is rebooting"
 msgstr "Vastaanotin käynnistyy uudelleen"
 
@@ -12196,18 +12072,6 @@ msgstr "Vastaanottimesi siirtyy valmiustilaan aktiivisuuden puutteen vuoksi."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Vastaanottimesi uudelleenkäynnistyy kun painat OK näppäintä kaukosäätimessäsi."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"WLAN-yhteyttä ei voitu käynnistää!\n"
-"Oletko kytkenyt USB WLAN-tikun?\n"
-"\n"
-"Valitse mitä haluat tehdä seuraavaksi."
 
 msgid "Zambia"
 msgstr "Zambia"
