--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
-"PO-Revision-Date: 2021-06-05 17:33+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
+"PO-Revision-Date: 2021-07-13 15:44+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -1778,6 +1778,9 @@ msgstr "Vérifiez la connexion Internet"
 msgid "Check the internet connection again"
 msgstr "Vérifiez à nouveau la connexion Internet"
 
+msgid "Checking ONID/TSID"
+msgstr "Vérification du ONID/TSID"
+
 msgid "Checking filesystem..."
 msgstr "Vérification du système de fichiers..."
 
@@ -2017,9 +2020,6 @@ msgstr "Configurer si la vérification HDMI EDID doit être contournée étant d
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Configure si les sous-titres doivent basculer entre normal, italique, gras et gras-italique"
-
-msgid "Configure interface"
-msgstr "Configure l'interface"
 
 msgid "Configure nameservers"
 msgstr "Configure les serveurs de noms"
@@ -2266,9 +2266,6 @@ msgstr "Configure quel tuner sera préféré, lorsque plus d'un tuner est dispon
 
 msgid "Configure your internal LAN"
 msgstr "Configure votre réseau interne"
-
-msgid "Configure your network again"
-msgstr "Configure encore votre réseau"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Configure vos paramètres réseau, puis appuyez sur OK pour lancer la recherche"
@@ -3382,6 +3379,9 @@ msgstr "Entrez le numéro stocké dans le positionneur qui correspond à ce sate
 msgid "Enter the service pin"
 msgstr "Entrer le code PIN de maintenace"
 
+msgid "Enter valid ONID/TSID"
+msgstr "Entrez un ONID/TSID valide"
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Entrer votre latitude actuelle. C’est le nombre de degré qui vous sépare de l’équateur sous forme décimale."
 
@@ -4304,8 +4304,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Je ne désire pas rechercher les services"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
-msgstr "I55SE/H7(nouveau modèle)/H9(nouveau modèle)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
+msgstr "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 
 msgid "IDLE"
 msgstr "VEILLE"
@@ -4855,9 +4855,6 @@ msgstr "Lien:"
 msgid "Linked titles with a DVD menu"
 msgstr "Titres liés avec un menu DVD"
 
-msgid "List available networks"
-msgstr "Liste des réseaux disponibles"
-
 msgid "List mode"
 msgstr "Mode liste"
 
@@ -5010,9 +5007,6 @@ msgstr "Manuel"
 
 msgid "Manual Scan"
 msgstr "Recherche manuelle"
-
-msgid "Manual configuration"
-msgstr "Configuration manuelle"
 
 msgid "Manual scan"
 msgstr "Recherche manuelle"
@@ -5866,6 +5860,9 @@ msgstr "PID PMT"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr "PULSe 4K"
+
 msgid "Package list update"
 msgstr "Mise à jour de la liste des paquets"
 
@@ -6039,22 +6036,8 @@ msgstr "Veuillez changer l'heure de fin de l'enregistrement"
 msgid "Please choose an extension..."
 msgstr "Veuillez choisir une extension..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Veuillez configurer ou vérifier vos serveurs de noms en renseignant les valeurs nécessaires.\n"
-"Quand vous serez prêt, appuyez sur OK pour continuer."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Veuillez configurer le tuner de repli"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Veuillez configurer votre connexion Internet en renseignant les valeurs nécessaires.\n"
-"Quand vous serez prêt, appuyez sur OK pour continuer."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Veuillez connecter votre récepteur à Internet"
@@ -6092,9 +6075,6 @@ msgstr "Veuillez saisir le nouveau code PIN"
 msgid "Please enter the old PIN code"
 msgstr "Veuillez saisir l'ancien code PIN"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Veuillez suivre les instructions sur la TV"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Veuillez noter que le média sélectionné précédent n'est pas accessible, par conséquent, le répertoire par défaut sera utilisé à la place."
 
@@ -6130,24 +6110,6 @@ msgstr "Veuillez choisir une étiquette pour filtrer..."
 
 msgid "Please select the movie path..."
 msgstr "Veuillez choisir le chemin d’accès au film..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Veuillez sélectionner l'interface réseau que vous voulez utiliser pour votre connexion Internet.\n"
-"\n"
-"Veuillez appuyer sur OK pour continuer."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Veuillez sélectionner le réseau sans fil auquel se connecter.\n"
-"\n"
-"Veuillez appuyer sur OK pour continuer."
 
 msgid "Please set up tuner A"
 msgstr "Veuillez paramétrer le tuner A"
@@ -6713,9 +6675,6 @@ msgstr "Rafraîchissement"
 
 msgid "Refresh rate"
 msgstr "Vitesse de rafraîchissement"
-
-msgid "Refresh rate selection."
-msgstr "Sélection de vitesse de rafraîchissement"
 
 msgid "Refusing to move to the same directory"
 msgstr "Refus de déplacer vers le même répertoire"
@@ -7514,9 +7473,6 @@ msgstr "Sélectionner le répertoire pour le fichier log"
 msgid "Select provider to add..."
 msgstr "Sélectionner l’opérateur à ajouter..."
 
-msgid "Select refresh rate"
-msgstr "Sélectionner la vitesse rafraîchissement"
-
 msgid "Select satellites"
 msgstr "Sélectionner les satellites"
 
@@ -7607,17 +7563,8 @@ msgstr "Sélectionnez la source de mise à jour"
 msgid "Select update source to edit"
 msgstr "Sélectionnez la source de mise à niveau pour éditer"
 
-msgid "Select video input with up/down buttons"
-msgstr "Sélectionner l’entrée vidéo avec les boutons haut/bas"
-
-msgid "Select video mode"
-msgstr "Sélectionner le mode vidéo"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Sélectionnez si votre appareil SCR a une alimentation externe."
-
-msgid "Select wireless network"
-msgstr "Sélectionner l'interface sans fil"
 
 msgid "Select your ATSC provider."
 msgstr "Sélectionner votre opérateur ATSC"
@@ -8582,6 +8529,9 @@ msgstr "Stopper le stream courant (diffusion)"
 msgid "Stop entry"
 msgstr "Arrêter entrée"
 
+msgid "Stop live TV service"
+msgstr "Arrêter le service TV en direct"
+
 msgid "Stop play TV"
 msgstr "Arrêter d’afficher la TV"
 
@@ -8870,7 +8820,7 @@ msgstr ""
 "\n"
 "Traducteur: Pr2\n"
 "Support: www.openpli.org\n"
-"Dernière MAJ: 17-02-2021"
+"Dernière MAJ: 13-07-2021"
 
 msgid "TS file is too large for ISO9660 level 1!"
 msgstr "Fichier TS trop grand pour le niveau 1 ISO9660!"
@@ -8946,13 +8896,6 @@ msgstr "Thaï"
 
 msgid "Thailand"
 msgstr "Thailand"
-
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Merci d'utiliser l'assistant.\n"
-"Veuillez appuyer sur OK pour continuer."
 
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
@@ -9094,13 +9037,6 @@ msgstr "L'interface utilisateur de votre récepteur redémarre en mode déboggag
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"L'extension LAN sans fil n'est pas installée !\n"
-"Veuillez l'installer et choisir ce que vous voulez faire ensuite."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "L'extension LAN sans fil n'est pas installée!\n"
@@ -9159,6 +9095,9 @@ msgstr "Ceci est un tuner multi type. Les options disponibles diffèrent en fonc
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Ceci est l’ordre dans laquelle les commandes DiSEqC sont envoyées vers un système aérien. L’ordre doit correspondre exactement avec l’ordre des périphériques physiques le long du câble (en démarrant du récepteur vers la fin)."
+
+msgid "This not valid ONID/TSID"
+msgstr "Ce ONID/TSID n'est pas valide"
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Cette option permet de réduire le bloc-bruit dans l'image. Evidemment, cela est au détriment de la netteté de l'image."
@@ -9346,6 +9285,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Ce test détecte votre adaptateur LAN configuré."
+
+msgid "This valid ONID/TSID"
+msgstr "Ce ONID/TSID est valide"
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10013,6 +9955,9 @@ msgstr "Fichier VOB"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr "ONID/TSID valide regarder sur www.lyngsat.com..."
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10042,22 +9987,6 @@ msgstr "Paramètres pour vidéo améliorée"
 
 msgid "Video enhancement setup"
 msgstr "Configuration pour vidéo améliorée"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Sélection entrée vidéo\n"
-"\n"
-"Veuillez appuyer sur OK si vous pouvez voir cette page sur la TV (ou choisir un port d'entrée différent).\n"
-"\n"
-"Le port entrée suivant sera automatiquement scanné dans 20 secondes."
-
-msgid "Video mode selection."
-msgstr "Sélection du mode vidéo."
 
 msgid "Video output"
 msgstr "Sortie vidéo"
@@ -10282,19 +10211,6 @@ msgstr ""
 "Rechercher le départ de la partie que vous voulez couper. Appuyer sur OK, sélectionner 'départ de coupe'.\n"
 "\n"
 "Puis rechercher la fin, appuyer sur OK, sélectionner 'fin de coupe'. C'est fait."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Bienvenue.\n"
-"\n"
-"Si vous souhaitez connecter votre récepteur à Internet, cet assistant vous guidera à travers la configuration réseau de base de votre récepteur.\n"
-"\n"
-"Appuyez sur OK pour commencer à configurer votre réseau"
 
 msgid ""
 "Welcome.\n"
@@ -10556,12 +10472,6 @@ msgstr "Réseau sans fil"
 msgid "Wireless network configuration..."
 msgstr "Configuration connexion réseau sans fil."
 
-msgid "Wireless network connection setup"
-msgstr "Configuration connexion réseau sans fil"
-
-msgid "Wireless network connection setup."
-msgstr "Configuration connexion réseau sans fil."
-
 msgid "Wireless network state"
 msgstr "État du réseau sans fil"
 
@@ -10791,13 +10701,6 @@ msgstr ""
 "S'il vous plaît attendez le redémarrage de votre récepteur\n"
 "Cela peut prendre quelques minutes"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Votre connexion Internet ne fonctionne pas!\n"
-"Veuillez choisir ce que vous voulez faire ensuite."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Votre connexion Internet fonctionne (ip: %s)"
@@ -10825,19 +10728,6 @@ msgstr ""
 "Votre connexion Internet fonctionne.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Votre récepteur est maintenant prêt à être utilisé.\n"
-"\n"
-"Votre connexion Internet fonctionne maintenant.\n"
-"\n"
-"S'il vous plaît appuyez sur OK pour continuer."
-
 msgid "Your receiver is rebooting"
 msgstr "Votre récepteur redémarre"
 
@@ -10855,17 +10745,6 @@ msgstr "Votre récepteur va se mettre en veille faute d'activité."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Votre récepteur va redémarrer après avoir appuyé sur OK de votre télécommande."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Votre connexion Internet LAN sans fil ne peut démarrer!\n"
-"Avez-vous connecté correctement votre clé USB WLAN?\n"
-"\n"
-"Veuillez choisir ce que vous voulez faire ensuite."
 
 msgid "Zambia"
 msgstr "Zambie"
