--- a/po/gl.po
+++ b/po/gl.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2021-02-20 16:11+0100\n"
 "Last-Translator: Luis A. Martínez <luis.a.martinez@gmail.com>\n"
 "Language-Team: LAMS\n"
@@ -1987,6 +1987,9 @@ msgstr "Comprobar a conexión a internet"
 msgid "Check the internet connection again"
 msgstr "Comprobar de novo a conexión a internet"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 msgid "Checking filesystem..."
 msgstr "Comprobando sistema de arquivos…"
@@ -2256,10 +2259,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr "Configurar se os subtítulos deben cambiar entre normal, cursiva, grosa e cursiva grosa"
 
 #
-msgid "Configure interface"
-msgstr "Configurar interface"
-
-#
 msgid "Configure nameservers"
 msgstr "Configurar DNSs"
 
@@ -2518,10 +2517,6 @@ msgstr "Configurar o sintonizador preferido cando hai máis de un dispoñible. A
 #
 msgid "Configure your internal LAN"
 msgstr "Configurar a rede LAN"
-
-#
-msgid "Configure your network again"
-msgstr "Configurar de novo a rede"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Configura a rede e preme OK para escanear"
@@ -3784,6 +3779,9 @@ msgstr "Insire o número almacenado no posicionador que corresponde a este saté
 msgid "Enter the service pin"
 msgstr "Insire o PIN do servizo"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Insire a latitude actual. Isto é a distancia en graos en formato decimal á que te atopas da liña do Ecuador."
 
@@ -4788,7 +4786,7 @@ msgid "I do not want to perform any service scans"
 msgstr "Non quero realizar ningún escaneo de servizo"
 
 #, fuzzy
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "Zgemma H7(modelo novo)/H9(modelo novo)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
@@ -5407,9 +5405,6 @@ msgstr "Enlace:"
 msgid "Linked titles with a DVD menu"
 msgstr "Títulos enlazados cun menú DVD"
 
-msgid "List available networks"
-msgstr "Lista de redes dispoñibles"
-
 msgid "List mode"
 msgstr "Modo de lista"
 
@@ -5584,9 +5579,6 @@ msgstr "Manual"
 #
 msgid "Manual Scan"
 msgstr "Busca manual"
-
-msgid "Manual configuration"
-msgstr "Configuración manual"
 
 #
 msgid "Manual scan"
@@ -6548,6 +6540,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Actualización de lista de paquetes"
@@ -6748,24 +6743,8 @@ msgstr "Por favor, cambia a hora de remate da gravación"
 msgid "Please choose an extension..."
 msgstr "Por favor, elixe unha extensión…"
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configura ou verifica o teu DNS enchendo os valores requiridos.\n"
-"Cando esteas preparado preme OK para continuar."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Por favor, configura o sintonizador de reserva"
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Por favor, configura a conexión a internet enchendo os valores requiridos.\n"
-"Cando esteas preparado preme OK para continuar."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Por favor, conecta o teu receptor a internet"
@@ -6809,10 +6788,6 @@ msgstr "Por favor, insire o novo código PIN"
 
 msgid "Please enter the old PIN code"
 msgstr "Por favor, insire o anterior código PIN"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Por favor, sigue as instruccións no TV"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -6860,26 +6835,6 @@ msgstr "Por favor, selecciona unha etiqueta pola que filtrar…"
 #
 msgid "Please select the movie path..."
 msgstr "Por favor, selecciona a localización das películas…"
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Por favor, selecciona o interface de rede que queres usar para a conexión a internet.\n"
-"\n"
-"Preme OK para continuar."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Por favor, selecciona a rede sen fíos á que queres conectar.\n"
-"\n"
-"Preme OK para continuar."
 
 #
 msgid "Please set up tuner A"
@@ -7526,10 +7481,6 @@ msgstr "Refresco"
 #
 msgid "Refresh rate"
 msgstr "Taxa de refresco"
-
-#
-msgid "Refresh rate selection."
-msgstr "Selección da taxa de refresco."
 
 msgid "Refusing to move to the same directory"
 msgstr "Négase a moverse ao mesmo directorio"
@@ -8432,10 +8383,6 @@ msgstr "Seleccionar a ruta ao ficheiro de rexistro"
 msgid "Select provider to add..."
 msgstr "Seleccionar provedor para engadir…"
 
-#
-msgid "Select refresh rate"
-msgstr "Seleccionar velocidade de refresco"
-
 msgid "Select satellites"
 msgstr "Seleccionar satélites"
 
@@ -8531,20 +8478,8 @@ msgstr "Seleccionar fonte de actualización"
 msgid "Select update source to edit"
 msgstr "Seleccionar fonte de actualización para editar"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Seleccionar entrada de vídeo cos botóns arriba/abaixo"
-
-#
-msgid "Select video mode"
-msgstr "Seleccionar modo de video"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Seleccionar se o dispositivo SCR ten alimentación externa."
-
-#
-msgid "Select wireless network"
-msgstr "Seleccionar rede sen fíos"
 
 msgid "Select your ATSC provider."
 msgstr "Seleccionar o provedor de ATSC."
@@ -9611,6 +9546,11 @@ msgstr "Deter o fluxo actual"
 msgid "Stop entry"
 msgstr "Deter a entrada"
 
+#
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Ir ao último servizo"
+
 msgid "Stop play TV"
 msgstr "Deter a reprodución de TV"
 
@@ -10011,14 +9951,6 @@ msgstr "Tailandia"
 
 #
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Grazas por usar o asistente.\n"
-"Preme OK para continuar."
-
-#
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -10168,14 +10100,6 @@ msgstr "Está a reiniciarse a interface de usuario do receptor en modo de depura
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"O complemento de rede sen fíos non está instalado!\n"
-"Por favor, instálao e elixe o seguinte que queres facer."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "O complemento de rede sen fíos non está instalado!\n"
@@ -10242,6 +10166,9 @@ msgstr "Este é un sintonizador multitipo. As opcións dispoñibles dependen do 
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Esta é a orde na que se envían os comandos DiSEqC ao sistema aéreo. A orde ten que corresponder exactamente coa orde coa que se dispoñen os dispositivos físicos ao longo do cable de sinal (comezando polo receptor)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Esta opción permite reducir o ruído de bloque na imaxe. Obviamente, tamén se reduce a nitidez da imaxe."
@@ -10438,6 +10365,9 @@ msgstr ""
 #
 msgid "This test detects your configured LAN adapter."
 msgstr "Esta proba detecta o adaptador de rede configurado."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11188,6 +11118,9 @@ msgstr "Ficheiro VOB"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -11221,24 +11154,6 @@ msgstr "Configuración da mellora de vídeo"
 #
 msgid "Video enhancement setup"
 msgstr "Configuración da mellora de video"
-
-#
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Selección de entrada de vídeo\n"
-"\n"
-"Preme OK se podes ver esta páxina no teu televisor (ou selecciona outro porto de entrada).\n"
-"\n"
-"O seguinte porto de entrada probarase automaticamente en 20 segundos."
-
-#
-msgid "Video mode selection."
-msgstr "Selección de modo de vídeo."
 
 #
 msgid "Video output"
@@ -11502,19 +11417,6 @@ msgstr ""
 "Busca o comezo das cousas que queres cortar. Preme OK e selecciona ‘iniciar corte’.\n"
 "\n"
 "Logo busca o final, preme OK e selecciona ‘terminar corte’. Iso é todo."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Benvido.\n"
-"\n"
-"Se queres conectar o receptor a Internet, este asistente guiarache a través da configuración básica de rede.\n"
-"\n"
-"Preme OK para iniciar a configuración da rede"
 
 msgid ""
 "Welcome.\n"
@@ -11784,12 +11686,6 @@ msgstr "Rede sen fíos"
 msgid "Wireless network configuration..."
 msgstr "Configuración da rede sen fíos…"
 
-msgid "Wireless network connection setup"
-msgstr "Configuración da conexión á rede sen fíos"
-
-msgid "Wireless network connection setup."
-msgstr "Configuración da conexión á rede sen fíos."
-
 msgid "Wireless network state"
 msgstr "Estado da rede sen fíos"
 
@@ -12036,14 +11932,6 @@ msgstr ""
 "Espera ata que o receptor se reinicie\n"
 "Isto pode levar uns poucos minutos"
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"A conexión a internet non funciona!\n"
-"Elixe o que queres facer a seguir."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "A conexión a Internet funciona (ip: %s)"
@@ -12073,19 +11961,6 @@ msgstr ""
 "A conexión a Internet está a funcionar.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"O receptor xa está listo para ser utilizado.\n"
-"\n"
-"A conexión a Internet está a funcionar.\n"
-"\n"
-"Por favor, preme OK para continuar."
-
 msgid "Your receiver is rebooting"
 msgstr "O receptor está a reiniciar"
 
@@ -12103,18 +11978,6 @@ msgstr "O receptor vai pasar a repouso debido á inactividade."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "O receptor reiniciarase despois de pulsar OK no mando a distancia."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"A conexión sen fíos non pode iniciarse!\n"
-"Conectaches algún dispositivo WLAN USB?\n"
-"\n"
-"Elixe que queres facer a continuación."
 
 msgid "Zambia"
 msgstr "Zambia"
