--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2021-01-17 18:31+0100\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -1794,6 +1794,9 @@ msgstr "Provjerite internetsku vezu"
 msgid "Check the internet connection again"
 msgstr "Ponovno provjerite internetsku vezu"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Provjera datotečnog sustava..."
 
@@ -2033,9 +2036,6 @@ msgstr "Konfigurirajte HDMI EDID-a ako treba zaobići provjeru jer to može rije
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Konfigurirajte ako se podnaslov mijenja između normalnog, kurzivog, podebljanog i podebljanog italic"
-
-msgid "Configure interface"
-msgstr "Konfigurirajte sučelje"
 
 msgid "Configure nameservers"
 msgstr "Konfigurirajte imena poslužitelja (DNS)"
@@ -2282,9 +2282,6 @@ msgstr "Konfigurirajte koji će tjuner imati prednost kada je dostupno više od 
 
 msgid "Configure your internal LAN"
 msgstr "Konfigurirajte svoj interni LAN"
-
-msgid "Configure your network again"
-msgstr "Ponovno konfigurirajte mrežu"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Konfigurirajte postavke mreže i pritisnite OK za skeniranje"
@@ -3402,6 +3399,9 @@ msgstr "Unesite broj pohranjen u pozicioneru koji odgovara ovom satelitu."
 msgid "Enter the service pin"
 msgstr "Unesite servisni pin"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Unesite trenutnu zemljopisnu širinu. To je broj stupnjeva od ekvatora kao decimalni."
 
@@ -4324,7 +4324,7 @@ msgid "I do not want to perform any service scans"
 msgstr "Ne želim izvršiti nikakvo skeniranje usluga"
 
 #, fuzzy
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "Zgemma H7(novi model)/H9(novi model)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
@@ -4878,9 +4878,6 @@ msgstr "Veza:"
 msgid "Linked titles with a DVD menu"
 msgstr "Povezani naslovi s DVD izbornikom"
 
-msgid "List available networks"
-msgstr "Popis dostupnih mreža"
-
 msgid "List mode"
 msgstr "Način liste"
 
@@ -5034,9 +5031,6 @@ msgstr "Ručno"
 
 msgid "Manual Scan"
 msgstr "Ručno pretraživanje"
-
-msgid "Manual configuration"
-msgstr "Ručna konfiguracija"
 
 msgid "Manual scan"
 msgstr "Ručno pretraživanje"
@@ -5891,6 +5885,9 @@ msgstr "РМТ PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Ažuriranje popisa paketa."
 
@@ -6064,22 +6061,8 @@ msgstr "Promijenite vrijeme završetka snimanja"
 msgid "Please choose an extension..."
 msgstr "Odaberite proširenje..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Konfigurirajte ili provjerite konfiguraciju imena poslužitelja (DNS) popunjavanjem potrebnih podataka.\n"
-"Kada ste spremni - pritisnite OK za nastavak."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Želite li konfigurirati rezervni prijemnik"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Konfigurirajte internetsku vezu ispunjavanjem traženih vrijednosti.\n"
-"Kada ste spremni, pritisnite OK za nastavak."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Povežite prijemnik s internetom"
@@ -6117,9 +6100,6 @@ msgstr "Unesite novi PIN kod"
 msgid "Please enter the old PIN code"
 msgstr "Unesite stari PIN kod"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Slijedite upute na TV-u"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Imajte na umu da se prethodno odabranom mediju ne može pristupiti i da se umjesto toga koristi zadani direktorij."
 
@@ -6155,24 +6135,6 @@ msgstr "Odaberite oznaku za filtriranje..."
 
 msgid "Please select the movie path..."
 msgstr "Odaberite putanju za videozapis..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Odaberite mrežno sučelje koje želite koristiti za internetsku vezu.\n"
-"\n"
-"Pritisnite OK za nastavak."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Odaberite bežičnu mrežu s kojom se želite povezati.\n"
-"\n"
-"Pritisnite OK za nastavak."
 
 msgid "Please set up tuner A"
 msgstr "Postavite tjuner A"
@@ -6738,9 +6700,6 @@ msgstr "Osvježiti"
 
 msgid "Refresh rate"
 msgstr "Brzina osvježavanja"
-
-msgid "Refresh rate selection."
-msgstr "Odabir brzine osvježavanja."
 
 msgid "Refusing to move to the same directory"
 msgstr "Odbija premještanje u isti direktorij"
@@ -7542,9 +7501,6 @@ msgstr "Odaberite putanju za datoteku dnevnika"
 msgid "Select provider to add..."
 msgstr "Odaberite pružatelja usluge za dodavanje..."
 
-msgid "Select refresh rate"
-msgstr "Odaberite brzinu osvježavanja"
-
 msgid "Select satellites"
 msgstr "Odaberite satelite"
 
@@ -7635,17 +7591,8 @@ msgstr "Odaberite izvor ažuriranja"
 msgid "Select update source to edit"
 msgstr "Odaberite izvor ažuriranja za uređivanje"
 
-msgid "Select video input with up/down buttons"
-msgstr "Odaberite video ulaz pomoću tipki gore/dolje"
-
-msgid "Select video mode"
-msgstr "Odaberite video način rada"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Odaberite želite li da se vaš SCR uređaj napaja izvana."
-
-msgid "Select wireless network"
-msgstr "Odaberite bežičnu mrežu"
 
 msgid "Select your ATSC provider."
 msgstr "Odaberite svog ATSC pružatelja usluga."
@@ -8611,6 +8558,10 @@ msgstr "Zaustavite trenutni web prijenos"
 msgid "Stop entry"
 msgstr "Zaustavite unos"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Idite na zadnju uslugu"
+
 msgid "Stop play TV"
 msgstr "Zaustavite reprodukciju TV-a"
 
@@ -8968,13 +8919,6 @@ msgid "Thailand"
 msgstr "Tajland"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Hvala vam što koristite vodiča.\n"
-"Pritisnite OK za nastavak."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9114,13 +9058,6 @@ msgstr "Korisničko sučelje vašeg prijemnika ponovno se pokreće u načinu za 
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"WLAN dodatak nije instaliran!\n"
-"Instalirajte ga i odaberite ono što želite učiniti sljedeće."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "WLAN dodatak nije instaliran!\n"
@@ -9179,6 +9116,9 @@ msgstr "Ovo je višenamjenski tjuner. Dostupne opcije ovise o hardveru."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Ovo je redoslijed slanja DiSEqC naredbi u antenski sustav. Poredak mora točno odgovarati poretku postavljanja uređaja koji su postavljeni duž signalnog kabela (počevši od kraja prijemnika)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Ova opcija omogućuje smanjenje smetnji na slici. Manifestira se kao oštrina slike."
@@ -9366,6 +9306,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Ovaj test otkriva konfigurirani LAN adapter."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10030,6 +9973,9 @@ msgstr "VOB fajl"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10059,22 +10005,6 @@ msgstr "Postavke poboljšanja videozapisa"
 
 msgid "Video enhancement setup"
 msgstr "Postavljanje poboljšanja videozapisa"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Odabir video ulaza\n"
-"\n"
-"Pritisnite OK ako možete vidjeti ovu stranicu na televizoru (ili odaberite drugi ulazni priključak).\n"
-"\n"
-"Sljedeći ulazni priključak automatski će se odabrati nakon 20 sekundi."
-
-msgid "Video mode selection."
-msgstr "Odabir video načina."
 
 msgid "Video output"
 msgstr "Video izlaz"
@@ -10299,19 +10229,6 @@ msgstr ""
 "Potražite početak koje želite odrezati. Pritisnite OK, odaberite 'početak izrezivanja'.\n"
 "\n"
 "Zatim potražite kraj, pritisnite OK i odaberite 'kraj izrezivanja'. To je to."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Dobrodošli.\n"
-"\n"
-"Ako želite povezati prijemnik s internetom, ovaj vodič će vas voditi kroz osnovno postavljanje vašeg prijemnika.\n"
-"\n"
-"Pritisnite OK za početak konfiguriranja mreže."
 
 msgid ""
 "Welcome.\n"
@@ -10573,12 +10490,6 @@ msgstr "Bežična mreža"
 msgid "Wireless network configuration..."
 msgstr "Konfiguracija bežične mreže..."
 
-msgid "Wireless network connection setup"
-msgstr "Postavljanje bežične mrežne veze"
-
-msgid "Wireless network connection setup."
-msgstr "Postavljanje bežične mrežne veze."
-
 msgid "Wireless network state"
 msgstr "Stanje bežične mreže"
 
@@ -10808,13 +10719,6 @@ msgstr ""
 "Pričekajte da se prijemnik ponovno pokrene\n"
 "što može potrajati nekoliko minuta"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Vaša internetska veza ne radi!\n"
-"Odaberite ono što želite učiniti sljedeće."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Vaša internetska veza radi (ip: %s)"
@@ -10841,19 +10745,6 @@ msgstr ""
 "\n"
 "Vaša internetska veza radi.\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vaš je prijemnik sada spreman za korištenje.\n"
-"\n"
-"Vaša internetska veza sada radi.\n"
-"\n"
-"Pritisnite OK za nastavak."
-
 msgid "Your receiver is rebooting"
 msgstr "Vaš se prijemnik ponovno pokreće."
 
@@ -10871,17 +10762,6 @@ msgstr "Vaš će prijemnik morati biti u stanju čekanja zbog neaktivnosti."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Prijemnik će se ponovno pokrenuti pritiskom na OK na daljinskom upravljaču."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Vašu bežičnu LAN internetsku vezu nije moguće pokrenuti!\n"
-"Je li priključen vaš USB WLAN stick?\n"
-"\n"
-"Odaberite što želite učiniti sljedeće."
 
 msgid "Zambia"
 msgstr "Zambija"
