--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2020-12-05 15:11+0100\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -1779,6 +1779,9 @@ msgstr "Internetkapcsolat ellenőrzése"
 msgid "Check the internet connection again"
 msgstr "Internetkapcsolat ismételt ellenőrzése"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Fájlrendszer ellenőrzése..."
 
@@ -2018,9 +2021,6 @@ msgstr "Állítsa be, ha a HDMI EDID ellenőrzést ki kell hagyni, mivel ez prob
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "A felirat váltson-e normál, dőlt, félkövér és félkövér dőlt között"
-
-msgid "Configure interface"
-msgstr "Interfész konfigurálása"
 
 msgid "Configure nameservers"
 msgstr "Névszerverek konfigurálása"
@@ -2267,9 +2267,6 @@ msgstr "Melyik tuner legyen választva, ha ugyanaz a csatorna egyszerre több tu
 
 msgid "Configure your internal LAN"
 msgstr "A hálózat konfigurálása"
-
-msgid "Configure your network again"
-msgstr "A hálózat újrakonfigurálása"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Állítsa be a hálózati paramétereket, majd nyomja meg az OK gombot a kereséshez"
@@ -3382,6 +3379,9 @@ msgstr "Adja meg ehhez a műholdhoz a pozicionerben tárolt számot."
 msgid "Enter the service pin"
 msgstr "Adja meg a csatornavédelem PIN kódját"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Adja mega földrajzi szélességét. Ez a Föld felszínén az Egyenlítőtől (0°) északra vagy délre való szögtávolságot jelenti, decimális értékben."
 
@@ -4300,7 +4300,7 @@ msgid "I do not want to perform any service scans"
 msgstr "Nem szeretnék csatornakeresést végezni"
 
 #, fuzzy
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "Zgemma H7(new model)/H9(new model)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
@@ -4856,9 +4856,6 @@ msgstr "Kapcsolat:"
 msgid "Linked titles with a DVD menu"
 msgstr "DVD menüvel linkelt címek"
 
-msgid "List available networks"
-msgstr "Elérhető hálózatok listázása"
-
 msgid "List mode"
 msgstr "Listázás módja"
 
@@ -5011,9 +5008,6 @@ msgstr "Kézi"
 
 msgid "Manual Scan"
 msgstr "Kézi keresés"
-
-msgid "Manual configuration"
-msgstr "Kézi konfiguráció"
 
 msgid "Manual scan"
 msgstr "Kézi keresés"
@@ -5870,6 +5864,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Csomaglista frissítés"
 
@@ -6043,22 +6040,8 @@ msgstr "Kérem, változtassa meg a felvétel vége idejét"
 msgid "Please choose an extension..."
 msgstr "Kérem, válasszon egy funkciót..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Kérem, ellenőrizze vagy állítsa be a névszervereket, a kért adatok kitöltésével.\n"
-"Befejezés után, nyomja le az OK gombot a folytatáshoz."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Kérjük, állítsa be a tartalék távoli vevőt"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Kérem, állítsa be az interket kapcsolatát a kért adatok kitöltésével.\n"
-"Befejezés után, nyomja le az OK gombot a folytatáshoz."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Kérem, csatlakoztassa a készüléket az internethez"
@@ -6096,9 +6079,6 @@ msgstr "Kérem, adja meg az új PIN kódot"
 msgid "Please enter the old PIN code"
 msgstr "Régi PIN kód"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Kérem, kövesse a képernyőn megjelenő instrukciókat"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Az előbb kiválaszott média nem elérhető és ezért inkább az alapmappa lesz használva."
 
@@ -6134,24 +6114,6 @@ msgstr "Válassza ki, milyen metaadatok legyenek szűrve..."
 
 msgid "Please select the movie path..."
 msgstr "Válassza ki a felvételek útvonalát..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Kérem, válassza ki azt a hálózati interfészt, amit használni kíván az internet kapcsolathoz.\n"
-"\n"
-"Nyomja le az OK gombot a folytatáshoz."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Kérem, válassza ki a vezeték nélküli hálózatot, amihez csatlakozni kíván.\n"
-"\n"
-"Nyomja le az OK gombot a folytatáshoz."
 
 msgid "Please set up tuner A"
 msgstr "Állítsa be az A tunert"
@@ -6717,9 +6679,6 @@ msgstr "Újraflashelés"
 
 msgid "Refresh rate"
 msgstr "Képernyőfrissítés"
-
-msgid "Refresh rate selection."
-msgstr "Frissítés kiválasztása."
 
 msgid "Refusing to move to the same directory"
 msgstr "Ugyanabba a mappába való áthelyezés elutasítása"
@@ -7516,9 +7475,6 @@ msgstr "Válassza ki a célmappát a logfájlhoz"
 msgid "Select provider to add..."
 msgstr "Válasszon hozzáadandó szolgáltatót..."
 
-msgid "Select refresh rate"
-msgstr "Válassza ki a frissítési arányt"
-
 msgid "Select satellites"
 msgstr "Válasszon műholdat"
 
@@ -7609,17 +7565,8 @@ msgstr "Válasszon szerkesztendő frissítési forrást"
 msgid "Select update source to edit"
 msgstr "Válasszon szerkesztendő frissítési forrást"
 
-msgid "Select video input with up/down buttons"
-msgstr "Válasszon videó bemenetet a FEL/LE gombokkal"
-
-msgid "Select video mode"
-msgstr "Válassza ki a video módot"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Válassza ki, hogy az SCR eszköze külső áramforrásról működik-e."
-
-msgid "Select wireless network"
-msgstr "Válasszon vezeték nélküli hálózatot"
 
 msgid "Select your ATSC provider."
 msgstr "Válassza ki az ATSC szolgáltatóját."
@@ -8586,6 +8533,10 @@ msgstr "Jelenlegi stream leállítása"
 msgid "Stop entry"
 msgstr "Bejegyzés leállítása"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Ugrás az utolsó csatornára"
+
 msgid "Stop play TV"
 msgstr "TV adás megállítása"
 
@@ -8949,13 +8900,6 @@ msgid "Thailand"
 msgstr "Thaiföld"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Köszönöm, hogy használta a Varázslót.\n"
-"Kérem, nyomja le az OK gombot a folytatáshoz."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9095,13 +9039,6 @@ msgstr "A kezelőfelület hibakeresési módban indul újra"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"A vezeték nélküli bővítmény nincs telepítve!\n"
-"Kérem, telepítse fel előbb, majd folytassa."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "A vezeték nélküli bővítmény nincs telepítve!\n"
@@ -9160,6 +9097,9 @@ msgstr "Ez egy multi-típusú tuner. Az elérhető opciók a hardvertől függen
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Ez a földfelszíni rendszerre küldött DiSEqC parancsok sorrendje. A sorrendnek teljesen meg kell egyeznie a jelkábelen található fizikai eszközök sorrendjével (a vevőkészüléktől indulva)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Ezzel csökkentheti a képernyő blokk-zajt. Így viszont a kép élességét is rontja."
@@ -9347,6 +9287,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Ez a teszt leellenőrzi a beállított hálótzati adaptert."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10011,6 +9954,9 @@ msgstr "VOB fájl"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10040,21 +9986,6 @@ msgstr "Videó-beállítások"
 
 msgid "Video enhancement setup"
 msgstr "Videó-beállítások"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video bementi kiválasztás\n"
-"\n"
-"Nyomja meg az OK-t ha látja ezt a képet a TV képernyőn (vagy válasszon más bemeneti portot).\n"
-"A következő bemeneti port automatikusan átkapcsol 10 mp múlva."
-
-msgid "Video mode selection."
-msgstr "Video mód kiválasztás."
 
 msgid "Video output"
 msgstr "Videó kimenet"
@@ -10276,19 +10207,6 @@ msgstr ""
 "Keresse meg a kivágandó rész elejét majd nyomja meg az OK gombot és válassza ki a 'Vágás eleje' opciót.\n"
 "\n"
 "Majd menjen a kivágandó rész végére, nyomja meg az OK gombot és válassza a \"Vágás vége\" opciót. Ennyi az egész."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Üdvözüljük.\n"
-"\n"
-"Ha szeretné a készülékét az Internetre csatlakoztatni, ez a Varázsló segíthet Önnek, hogy az alap-konfigurációt létrehozhassa.\n"
-"\n"
-"Kérem, nyomja le az OK gombot a hákózat konfigurálásához"
 
 msgid ""
 "Welcome.\n"
@@ -10550,12 +10468,6 @@ msgstr "Vezeték nélküli hálózat"
 msgid "Wireless network configuration..."
 msgstr "Vezeték nélküli hálózat beállítása..."
 
-msgid "Wireless network connection setup"
-msgstr "Vezeték nélküli hálózat beállítása"
-
-msgid "Wireless network connection setup."
-msgstr "Vezeték nélküli hálózat beállítása."
-
 msgid "Wireless network state"
 msgstr "Vezeték nélküli hálózat állapota"
 
@@ -10788,13 +10700,6 @@ msgstr ""
 "Kérem, várjon, míg a készülék újraindul.\n"
 "Ez eltarthat néhány percig..."
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Az internetkapcsolata nem működik!\n"
-"Kérem, válassza ki, mi legyen a teendő."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Az internetkapcsolat működik (IP: %s)"
@@ -10822,19 +10727,6 @@ msgstr ""
 "Az internetkapcsolata működőképes.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"A készülék most már használható állapotban van.\n"
-"\n"
-"Az internetkapcsolata működőképes.\n"
-"\n"
-"Nyomja le az OK gombot a folytatáshoz."
-
 msgid "Your receiver is rebooting"
 msgstr "A készülék most újraindul"
 
@@ -10852,17 +10744,6 @@ msgstr "A készülék most készenlétbe kapcsol inaktivitás miatt."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Az OK gomb megnyomása után a készülék újra fog indulni."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"A vezeték nélküli hálózati kapcsolata nem hozható létre!\n"
-"Csatlakoztatva van az USB-s vezeték nélküli adapter?\n"
-"\n"
-"Kérem, válassza ki, mi legyen a teendő."
 
 msgid "Zambia"
 msgstr "Zambia"
