--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2021-03-06\n"
 "Last-Translator: LinuxSTV\n"
 "Language-Team: \n"
@@ -1823,6 +1823,9 @@ msgstr "Periksa sambungan internet"
 msgid "Check the internet connection again"
 msgstr "Periksa kembali sambungan internet"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Memeriksa sistem berkas..."
 
@@ -2074,9 +2077,6 @@ msgstr "Atur jika pemeriksaan HDMI EDID seharusnya dilewatkan karna ini bisa men
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Atur apakah terjemahan bisa bertukar jenis huruf antara normal, miring, tebal dan miring tebal."
 
-msgid "Configure interface"
-msgstr "Atur antarmuka"
-
 msgid "Configure nameservers"
 msgstr "Atur nameserver"
 
@@ -2325,9 +2325,6 @@ msgstr "Atur penala mana yang ingin diutamakan, ketika lebih dari satu penala te
 
 msgid "Configure your internal LAN"
 msgstr "Atur LAN internal anda"
-
-msgid "Configure your network again"
-msgstr "Atur kembali jaringan anda"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3485,6 +3482,9 @@ msgstr "Masukkan nomor yg tersimpan pada posisioner yg berhubungan dgn satelit i
 msgid "Enter the service pin"
 msgstr "Masukkan pin layanan"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Masukkan latitud anda saat ini. Ini adalah nomor derajad anda berada dari garis lintang dalam desimal."
 
@@ -4448,7 +4448,7 @@ msgid "I do not want to perform any service scans"
 msgstr "Saya tidak ingin melakukan pelacakan layanan apapun"
 
 #, fuzzy
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "Zgemma H7(model baru)/H9(new model)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
@@ -5016,9 +5016,6 @@ msgstr "Tautan:"
 msgid "Linked titles with a DVD menu"
 msgstr "Tautkan judul dgn menu DVD"
 
-msgid "List available networks"
-msgstr "Daftar jaringan tersedia"
-
 msgid "List mode"
 msgstr "Mode daftar"
 
@@ -5176,9 +5173,6 @@ msgstr "Manual"
 
 msgid "Manual Scan"
 msgstr "Pelacakan Manual"
-
-msgid "Manual configuration"
-msgstr "Pengaturan manual"
 
 msgid "Manual scan"
 msgstr "Pelacakan manual"
@@ -6064,6 +6058,9 @@ msgstr "PID PMT"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Pembaruan daftar paket"
 
@@ -6241,23 +6238,9 @@ msgstr "Mohon ubah waktu akhir perekaman"
 msgid "Please choose an extension..."
 msgstr "Silakan pilih ekstensi..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Mohon atur atau periksa Namaserver anda dengan mengisi nilai y diminta.\n"
-"Jika anda sudah siap tekan OK untuk lanjut."
-
 #, fuzzy
 msgid "Please configure the fallback tuner setup"
 msgstr "Mohon setel pengaturan penala digunakan"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Mohon atur koneksi internet anda dengan mengisi nilai yang diperlukan.\n"
-"Jika anda sudah siap tekan OK untuk lanjut."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Mohon hubungkan Rx anda ke internet"
@@ -6295,9 +6278,6 @@ msgstr "Mohon masukkan kode PIN baru"
 msgid "Please enter the old PIN code"
 msgstr "Mohon masukkan kode PIN lama"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Mohon ikuti petunjuk pada TV"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Mohon diingat bahwa media yg dipilih sebelumnya tidak bisa diakses dan oleh karena itu direktori standar digunakan sebaliknya."
 
@@ -6333,24 +6313,6 @@ msgstr "Mohon pilih label untuk disaring..."
 
 msgid "Please select the movie path..."
 msgstr "Mohon pilih arah tujuan film..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Mohon pilih antarmuka jaringan yg ingin anda gunakan untuk koneksi internet.\n"
-"\n"
-"Mohon tekan OK untuk lanjut."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Mohon pilih jaringan nirkabel yg ingin anda hubungkan.\n"
-"\n"
-"Mohon tekan OK untuk lanjut."
 
 msgid "Please set up tuner A"
 msgstr "Mohon atur penala A"
@@ -6931,9 +6893,6 @@ msgstr "Segarkan"
 
 msgid "Refresh rate"
 msgstr "Rerata segaran"
-
-msgid "Refresh rate selection."
-msgstr "Pemilihan rerata segaran."
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -7757,9 +7716,6 @@ msgstr "Pilih arah tujuan berkaslog"
 msgid "Select provider to add..."
 msgstr "Pilih penyedia untuk ditambahkan..."
 
-msgid "Select refresh rate"
-msgstr "Pilih rerata penyegaran"
-
 msgid "Select satellites"
 msgstr "Pilih satelit"
 
@@ -7855,17 +7811,8 @@ msgstr "Pilih sumber update"
 msgid "Select update source to edit"
 msgstr "Pilih sumber update untuk diubah"
 
-msgid "Select video input with up/down buttons"
-msgstr "Pilih input video dengan tombol up/down"
-
-msgid "Select video mode"
-msgstr "Pilih mode video"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Pilih apakah peralatan SCR anda ditenagai dari luaran"
-
-msgid "Select wireless network"
-msgstr "Pilih jaringan nirkabel"
 
 #, fuzzy
 msgid "Select your ATSC provider."
@@ -8859,6 +8806,10 @@ msgstr "Hentikan stream saat ini"
 msgid "Stop entry"
 msgstr "Hentikan entri"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Menuju layanan terkahir"
+
 msgid "Stop play TV"
 msgstr "Hentikan pemutaran TV"
 
@@ -9230,13 +9181,6 @@ msgid "Thailand"
 msgstr "Thailand"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Terima kasih telah menggunakan wizard.\n"
-"Tekan OK untuk lanjut."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9377,13 +9321,6 @@ msgstr "Antarmuka pengguna rx anda sedang memulai ulang"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Plugin jaringan nirkabel tidak terpasang!\n"
-"Mohon pasang dan pilih apa yg akan anda lakukan selanjutnya."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Plugin jaringan nirkabel tidak terpasang!\n"
@@ -9444,6 +9381,9 @@ msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Ini urutan dimana perintah DiSEqC dikirim ke system antena. Urutannya harus sesuai secara tepat dengan urutan peralatan fisik yg disusun sepanjang kabel sinyal (mulai dari ujung Rx)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Pilihan ini memungkinkan mengurangi block-noise pada gambar. Lebih jelas, ini mengorbankan ketajaman gambar."
@@ -9634,6 +9574,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Tes ini mendeteksi adapter LAN yg anda atur."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10324,6 +10267,9 @@ msgstr "berkas VOB"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "Vanuatu"
@@ -10355,22 +10301,6 @@ msgstr "Setelan peningkatan video"
 
 msgid "Video enhancement setup"
 msgstr "Pengaturan peningkatan video"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Pilihan input video\n"
-"\n"
-"Mohon tekan OK jika anda bisa melihat halaman ini pada TV anda (atau pilih port input yg berbeda).\n"
-"\n"
-"Port input berikutnya akan diselidiki secara otomatis dalam 20 detik."
-
-msgid "Video mode selection."
-msgstr "Pilihan mode video."
 
 msgid "Video output"
 msgstr "Keluaran video"
@@ -10599,19 +10529,6 @@ msgstr ""
 "Cari ke awal bahan yg ingin anda potong. Tekan OK, pilih 'mulai potong'.\n"
 "\n"
 "Kemudian cari ke akhir, tekan OK, pilih 'akhiri potong'. Dah, itu saja."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Selamat Datang.\n"
-"\n"
-"Jika anda ingin menghubungkan Rx anda ke internet, wizard ini akan memandu anda melalui pengaturan jaringan dasar Rx anda.\n"
-"\n"
-"Tekan OK untuk mulai penyetelan jaringan anda"
 
 msgid ""
 "Welcome.\n"
@@ -10878,12 +10795,6 @@ msgstr "Jaringan nirkabel"
 msgid "Wireless network configuration..."
 msgstr "Setelan jaringan nirkabel..."
 
-msgid "Wireless network connection setup"
-msgstr "Pengaturan koneksi jaringan nirkabel"
-
-msgid "Wireless network connection setup."
-msgstr "Pengaturan koneksi jaringan nirkabel."
-
 msgid "Wireless network state"
 msgstr "Keadaan jaringan nirkabel"
 
@@ -11124,13 +11035,6 @@ msgstr ""
 "Mohon tunggu sampai Rx anda reboot\n"
 "Ini bisa memakan waktu beberapa menit"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Koneksi internet anda tidak berfungsi!\n"
-"Silakan pilih apa yang akan anda lakukan selanjutnya."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Koneksi internet anda berfungsi (ip: %s)"
@@ -11158,19 +11062,6 @@ msgstr ""
 "Koneksi internet anda berfungsi.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Rx anda sudah siap digunakan sekarang.\n"
-"\n"
-"Koneksi internet anda sudah bekerja sekarang.\n"
-"\n"
-"Mohon tekan OK untuk lanjut."
-
 msgid "Your receiver is rebooting"
 msgstr "Receiver anda sedang reboot"
 
@@ -11188,17 +11079,6 @@ msgstr "Rx anda akan menuju standby karena tidak ada aktifitas."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Rx anda akan memulai ulang setelah menekan OK pada remote kontrol anda."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Koneksi internet nirkabel anda tidak bisa dimulai!\n"
-"Sudahkah anda tancapkan stik WLAN USBnya?\n"
-"\n"
-"Mohon pilih apa yang akan anda lakukan selanjutnya."
 
 msgid "Zambia"
 msgstr "Zambia"
