--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2020-05-16 18:44+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -1923,6 +1923,9 @@ msgstr ""
 msgid "Check the internet connection again"
 msgstr ""
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #, fuzzy
 msgid "Checking filesystem..."
 msgstr "Athuga skráarkerfi..."
@@ -2178,9 +2181,6 @@ msgstr ""
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr ""
-
-msgid "Configure interface"
-msgstr "Stilla netkort"
 
 msgid "Configure nameservers"
 msgstr "Stilla nafnaþjón"
@@ -2445,9 +2445,6 @@ msgstr ""
 
 msgid "Configure your internal LAN"
 msgstr "Stilla innbyggt netkort"
-
-msgid "Configure your network again"
-msgstr "Stilla netkortið þitt aftur"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3730,6 +3727,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Sláðu inn rása kóða"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4755,7 +4755,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Viltu leita að rásum?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5401,9 +5401,6 @@ msgstr "Tenging:"
 msgid "Linked titles with a DVD menu"
 msgstr "Tengdir titlar við DVD valmynd"
 
-msgid "List available networks"
-msgstr "Sýna netkerfi í boði"
-
 msgid "List mode"
 msgstr ""
 
@@ -5584,9 +5581,6 @@ msgstr ""
 #
 msgid "Manual Scan"
 msgstr "Handvirk leitun"
-
-msgid "Manual configuration"
-msgstr "Handvirk stilling"
 
 #
 #, fuzzy
@@ -6605,6 +6599,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Listi uppfærðra pakka"
@@ -6817,24 +6814,8 @@ msgstr "Vinsamlega breytið lokatíma upptöku"
 msgid "Please choose an extension..."
 msgstr "Vinsamlega veldu viðbót..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Ýttu á stilla eða að athugaðu Nafnaþjóns stillingar.\n"
-"Ýttu á OK þegar þú ert búinn."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Til að stilla nettengingu filltu þá út viðeigandi gildi.\n"
-"Ýttu þá á OK til að halda áfram."
 
 msgid "Please connect your receiver to the internet"
 msgstr ""
@@ -6878,9 +6859,6 @@ msgstr ""
 
 msgid "Please enter the old PIN code"
 msgstr "Sláðu inn gamla PIN kóðann þinn"
-
-msgid "Please follow the instructions on the TV"
-msgstr "Fylgdu leiðbeiningum á skjá"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -6929,26 +6907,6 @@ msgstr "Vinsamlega veldu merki til að sía út..."
 #
 msgid "Please select the movie path..."
 msgstr "Veldu slóð að mynd..."
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Veldu það netkort sem að þú vilt nota fyrir veraldarvefs tengingu.\n"
-"\n"
-"Ýttu á OK til að halda áfram."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vinsamlegast veldu það þráðlausa net sem að þú vilt tengjast.\n"
-"\n"
-"Ýttu á OK til að halda áfram."
 
 #
 #, fuzzy
@@ -7613,10 +7571,6 @@ msgstr ""
 #, fuzzy
 msgid "Refresh rate"
 msgstr "Hressingar tíðni"
-
-#
-msgid "Refresh rate selection."
-msgstr "Hressingar tíðni val."
 
 #
 #, fuzzy
@@ -8567,9 +8521,6 @@ msgstr "Velja úttaks möppu"
 msgid "Select provider to add..."
 msgstr "Veldu sendanda til að bæta við..."
 
-msgid "Select refresh rate"
-msgstr "Veldu hressingar tíðni"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -8671,20 +8622,8 @@ msgstr "Veldu upphafs slóð til að breyta."
 msgid "Select update source to edit"
 msgstr "Veldu upphafs slóð til að breyta"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Veldu mynd inngang með up/niður tökkum"
-
-#
-msgid "Select video mode"
-msgstr "Veldu mynd stillingu"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-#
-msgid "Select wireless network"
-msgstr "Veldu þráðlaust net"
 
 #
 #, fuzzy
@@ -9822,6 +9761,11 @@ msgstr "hætta innslætti"
 msgid "Stop entry"
 msgstr "hætta innslætti"
 
+#
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Læsa rásum"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -10252,14 +10196,6 @@ msgid "Thailand"
 msgstr ""
 
 #
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Takk fyrir að nota álfinn.\n"
-"Ýttu á OK til að halda áfram."
-
-#
 #, fuzzy
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
@@ -10395,14 +10331,6 @@ msgstr "Vinsamlega bíðið á meðan netkerfið er endurræst..."
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Forrit fyrir þráðlausa net ekki uppsett!\n"
-"Settu það inn og veldu hvað þú vilt gera næst."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Þráðlausa netkortið er ekki tengt!\n"
@@ -10464,6 +10392,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10662,6 +10593,9 @@ msgstr ""
 #, fuzzy
 msgid "This test detects your configured LAN adapter."
 msgstr "Þessi prufun skynjar innstillt netkort."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11443,6 +11377,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 #, fuzzy
 msgid "Vanuatu"
@@ -11478,25 +11415,6 @@ msgstr "Mynd endurbóta stillingar"
 #
 msgid "Video enhancement setup"
 msgstr "Mynd endurbóta uppsetnging"
-
-#
-#, fuzzy
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Mynd inngangs val\n"
-" \n"
-"Ýttu á OK ef að þú sérð þessa mynd á sjónvarpinu (eða veldu annan inngang).\n"
-"\n"
-"Næsti inngangur verður prófaður eftir 10 sekúndur."
-
-#
-msgid "Video mode selection."
-msgstr "Mynd hams stilling."
 
 #
 #, fuzzy
@@ -11771,14 +11689,6 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-
-msgid ""
-"Welcome.\n"
-"\n"
 "This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
@@ -12043,12 +11953,6 @@ msgstr "Þráðlaust netkerfi"
 msgid "Wireless network configuration..."
 msgstr "Uppsetning á þráðlausu neti."
 
-msgid "Wireless network connection setup"
-msgstr "Uppsetning á þráðlausu neti"
-
-msgid "Wireless network connection setup."
-msgstr "Uppsetning á þráðlausu neti."
-
 msgid "Wireless network state"
 msgstr "Staða þráðlausa nets"
 
@@ -12279,14 +12183,6 @@ msgid ""
 "This may take a few minutes"
 msgstr ""
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Veraldarvefs tenging virkar ekki!\n"
-"Vinsamlega veldu hvað þú vilt gera næst."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr ""
@@ -12316,14 +12212,6 @@ msgstr ""
 "Veraldarvefs tengingin er virk núna.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
 msgid "Your receiver is rebooting"
 msgstr ""
 
@@ -12341,18 +12229,6 @@ msgstr ""
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr ""
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Það tókst ekki að ræsa þráðlausu net tenginguna þína!\n"
-"Ertu búinn að tengja þráðlausa USB stautinn?\n"
-"\n"
-"Vinsamlega veldu hvað þú vilt gera næst."
 
 msgid "Zambia"
 msgstr ""
