--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2020-05-16 18:46+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -1781,6 +1781,9 @@ msgstr "Verificare la connessione a Internet"
 msgid "Check the internet connection again"
 msgstr "Verificare di nuovo la connessione a Internet"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Verifica filesystem in corso..."
 
@@ -2022,9 +2025,6 @@ msgstr "Impostare se il controllo sul collegamento HDMI EDID (Extended Display I
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Impostare se visualizzare i sottotitoli in carattere normale, grassetto, inclinato o grassetto inclinato."
-
-msgid "Configure interface"
-msgstr "Impostare l'interfaccia"
 
 msgid "Configure nameservers"
 msgstr "Configurare i server dei nomi (DNS)"
@@ -2271,9 +2271,6 @@ msgstr "Impostare il sintonizzatore preferenziale da utilizzarsi quando più di 
 
 msgid "Configure your internal LAN"
 msgstr "Configurare la rete locale (cablata)."
-
-msgid "Configure your network again"
-msgstr "Configurare nuovamente la rete locale."
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Configurare le impostazioni della rete e premere OK per eseguire la scansione."
@@ -3397,6 +3394,9 @@ msgstr "Inserire il numero memorizzato nel motore che corrisponde a questo satel
 msgid "Enter the service pin"
 msgstr "Inserire il codice PIN del canale"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Inserire la latitudine attuale. Questo valore rappresenta il numero di gradi decimali di distanza dall'equatore."
 
@@ -4330,7 +4330,7 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Non voglio effettuare nessuna scansione"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4886,9 +4886,6 @@ msgstr "Connessione:"
 msgid "Linked titles with a DVD menu"
 msgstr "Titoli collegati al menu DVD"
 
-msgid "List available networks"
-msgstr "Elencare le reti disponibili"
-
 msgid "List mode"
 msgstr "Modalità elenco"
 
@@ -5041,9 +5038,6 @@ msgstr "Manuale"
 
 msgid "Manual Scan"
 msgstr "Ricerca manuale"
-
-msgid "Manual configuration"
-msgstr "Configurazione manuale"
 
 msgid "Manual scan"
 msgstr "Ricerca manuale"
@@ -5909,6 +5903,9 @@ msgstr "PID PMT"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Aggiornamento dell'elenco pacchetti"
 
@@ -6083,22 +6080,8 @@ msgstr "Cambiare l'ora di fine registrazione"
 msgid "Please choose an extension..."
 msgstr "Selezionare un'estensione..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configurare o verificare i server dei nomi (DNS) inserendo i parametri richiesti.\n"
-"Quando pronti, premere OK per continuare."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Configurare il tuner del ricevitore remoto di fallback"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configurare la connessione a Internet inserendo i parametri richiesti.\n"
-"Quando pronti, premere OK per continuare."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Collegare il ricevitore a Internet"
@@ -6136,9 +6119,6 @@ msgstr "Inserire il nuovo codice PIN"
 msgid "Please enter the old PIN code"
 msgstr "Inserire il vecchio codice PIN"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Seguire le istruzioni mostrate sullo schermo"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Il supporto selezionato in precedenza non è più accessibile: viene utilizzata la cartella predefinita."
 
@@ -6174,24 +6154,6 @@ msgstr "Selezionare un'etichetta come filtro..."
 
 msgid "Please select the movie path..."
 msgstr "Selezionare la cartella video..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Selezionare l'interfaccia di rete che verrà utilizzata per la connessione a Internet.\n"
-"\n"
-"Premere OK per continuare."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Selezionare la rete wireless a cui connettersi.\n"
-"\n"
-"Premere OK per continuare."
 
 msgid "Please set up tuner A"
 msgstr "Configurare il Sintonizzatore A"
@@ -6760,9 +6722,6 @@ msgstr "Aggiornare"
 
 msgid "Refresh rate"
 msgstr "Frequenza di aggiornamento"
-
-msgid "Refresh rate selection."
-msgstr "Selezione della frequenza di aggiornamento."
 
 msgid "Refusing to move to the same directory"
 msgstr "Impossibile spostare dentro la stessa cartella"
@@ -7564,9 +7523,6 @@ msgstr "Selezionare il percorso per i file di registro"
 msgid "Select provider to add..."
 msgstr "Selezionare il provider da aggiungere..."
 
-msgid "Select refresh rate"
-msgstr "Selezionare la frequenza di aggiornamento"
-
 msgid "Select satellites"
 msgstr "Selezionare i satelliti"
 
@@ -7661,17 +7617,8 @@ msgstr "Selezionare l'origine degli aggiornamenti"
 msgid "Select update source to edit"
 msgstr "Selezionare l'origine degli aggiornamenti da modificare"
 
-msgid "Select video input with up/down buttons"
-msgstr "Selezionare l'ingresso video con i tasti Su/Giù"
-
-msgid "Select video mode"
-msgstr "Selezionare la modalità video"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-msgid "Select wireless network"
-msgstr "Selezionare una rete wireless"
 
 msgid "Select your ATSC provider."
 msgstr "Selezionare il provider ATSC."
@@ -8642,6 +8589,10 @@ msgstr "Interrompere il flusso attuale"
 msgid "Stop entry"
 msgstr "Interrompere la voce"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Andare all'ultimo canale"
+
 msgid "Stop play TV"
 msgstr "Interrompere la visione della TV"
 
@@ -9005,13 +8956,6 @@ msgid "Thailand"
 msgstr "Tailandia"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Grazie per aver utilizzato la configurazione guidata.\n"
-"Premere OK per continuare."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9151,13 +9095,6 @@ msgstr "L'interfaccia utente del ricevitore si riavvia in modalità debug"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Il plugin Rete Wireless non è installato!\n"
-"Installarlo e scegliere come proseguire."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Il plugin Rete Wireless non è installato!\n"
@@ -9216,6 +9153,9 @@ msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Questo è l'ordine secondo il quale i comandi DiSEqC vengono inviati nell'impianto. L'ordine deve corrispondere esattamente all'ordine in cui i dispositivi fisici sono installati lungo il cavo di segnale (a partire dal lato ricevitore)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Questa opzione consente di ridurre il disturbo a blocchi nell'immagine. Ciò comporterà purtroppo una riduzione della nitidezza dell'immagine."
@@ -9404,6 +9344,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Questa prova controlla la scheda di rete locale installata."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10079,6 +10022,9 @@ msgstr "File VOB"
 msgid "VU+"
 msgstr "Vu+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10108,22 +10054,6 @@ msgstr "Impostazioni del miglioramento dell'immagine"
 
 msgid "Video enhancement setup"
 msgstr "Configurazione del miglioramento dell'immagine"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Selezione dell'ingresso video\n"
-"\n"
-"Se questa pagina è visibile sulla TV premere OK (oppure selezionare un ingresso video differente).\n"
-"\n"
-"Il successivo ingresso video sarà verificato automaticamente tra 20 secondi."
-
-msgid "Video mode selection."
-msgstr "Selezione della modalità video."
 
 msgid "Video output"
 msgstr "Uscita video"
@@ -10350,19 +10280,6 @@ msgstr ""
 "Portarsi all'inizio della sequenza da eliminare. Premere OK, poi selezionare \"Iniziare il taglio qui\".\n"
 "\n"
 "Portarsi quindi alla fine della sequenza da eliminare, premere OK, infine selezionare \"Terminare il taglio qui\". E' tutto."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Benvenuti.\n"
-"\n"
-"Se si desidera collegare il ricevitore ad Internet, questa procedura guidata fornirà supporto nella configurazione di base della rete del ricevitore.\n"
-"\n"
-"Premere OK per avviare la configurazione della rete."
 
 msgid ""
 "Welcome.\n"
@@ -10627,12 +10544,6 @@ msgstr "Rete wireless"
 msgid "Wireless network configuration..."
 msgstr "Configurazione della rete wireless..."
 
-msgid "Wireless network connection setup"
-msgstr "Configurazione della connessione di rete wireless"
-
-msgid "Wireless network connection setup."
-msgstr "Configurazione della connessione di rete wireless."
-
 msgid "Wireless network state"
 msgstr "Stato della rete wireless"
 
@@ -10865,13 +10776,6 @@ msgstr ""
 "Attendere il riavvio del ricevitore.\n"
 "Potrebbero essere necessari alcuni minuti."
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"La connessione a Internet non funziona!\n"
-"Selezionare un'opzione per proseguire."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "La connessione a Internet è attiva (IP: %s)"
@@ -10899,19 +10803,6 @@ msgstr ""
 "La connessione a Internet è attiva.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Il ricevitore è pronto per l'uso.\n"
-"\n"
-"La connessione a Internet è attiva.\n"
-"\n"
-"Premere OK per continuare."
-
 msgid "Your receiver is rebooting"
 msgstr "Il ricevitore è in fase di riavvio..."
 
@@ -10929,17 +10820,6 @@ msgstr "Il ricevitore sta per entrare in sospensione a causa del tempo di inutil
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Il ricevitore si riavvierà dopo aver premuto il tasto OK sul telecomando."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"La connessione di rete wireless per Internet non può essere stabilita!\n"
-"Controllare che la chiavetta wifi USB sia collegata correttamente.\n"
-"\n"
-"Selezionare un'opzione per proseguire."
 
 msgid "Zambia"
 msgstr "Zambia"
