--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -1794,6 +1794,9 @@ msgstr "Pārbaudīt interneta savienojumu"
 msgid "Check the internet connection again"
 msgstr "Pārbaudīt interneta savienojumu vēlreiz"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Pārbauda failu sistēmu..."
 
@@ -2033,9 +2036,6 @@ msgstr "Uzstāda vai netiks veikta HDMI EDID pārbaude lai novērstu problēmas 
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Uzstāda vai subtitri tiks pārslēgti starp slīpiem, trekniem vai slīpi trekniem"
-
-msgid "Configure interface"
-msgstr "Konfigurēt interfeisu"
 
 msgid "Configure nameservers"
 msgstr "Konfigurēt DNS"
@@ -2282,9 +2282,6 @@ msgstr "Uzstāda kuram uztvērējam dot priekšroku ja pieejams vairāk kā vien
 
 msgid "Configure your internal LAN"
 msgstr "Konfigurēt jūsu tīklu (LAN)"
-
-msgid "Configure your network again"
-msgstr "Atkārtoti konfigurēt jūsu tīklu"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Iestatiet jūsu tīkla iestatījumus un nospiediet OK lai sāktu pārbaudi"
@@ -3399,6 +3396,9 @@ msgstr "Ievadiet šī satelītam pozicionēšanas ierīcē saglabāto numuru."
 msgid "Enter the service pin"
 msgstr "Ievadiet kanāla PIN"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Ievadiet pašreizējo platumu. Tas ir grādu skaits kā decimāldaļa, kādā attālumā esat no ekvatora."
 
@@ -4320,7 +4320,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Es nevēlos veikt kanālu meklēšanu"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+#, fuzzy
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
 
 msgid "IDLE"
@@ -4872,9 +4873,6 @@ msgstr "Saite:"
 msgid "Linked titles with a DVD menu"
 msgstr "Saistītie nosaukumi ar DVD izvēlni"
 
-msgid "List available networks"
-msgstr "Skatīt pieejamos tīklus"
-
 msgid "List mode"
 msgstr "Saraksta režīms"
 
@@ -5028,9 +5026,6 @@ msgstr "Manuāli"
 
 msgid "Manual Scan"
 msgstr "Manuālā meklēšana"
-
-msgid "Manual configuration"
-msgstr "Manuālā konfigurācija"
 
 msgid "Manual scan"
 msgstr "Manuālā meklēšana"
@@ -5884,6 +5879,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanelis"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Pakotņu saraksta atjaunināšana"
 
@@ -6057,22 +6055,8 @@ msgstr "Lūdzu nomainiet ieraksta beigu laiku"
 msgid "Please choose an extension..."
 msgstr "Lūdzu izvēlieties paplašinājumu..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Lūdzu konfigurējiet vai pārbaudiet DNS aizpildot nepieciešamās vērtības.\n"
-"Kad esat gatavs nospiediet OK, lai turpinātu."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Iestatiet attālināto uztvērēju"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Lūdzu konfigurējiet interneta pieslēgumu aizpildot nepieciešamās vērtības.\n"
-"Kad esat gatavs nospiediet OK, lai turpinātu."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Lūdzu pieslēdziet uztvērēju internetam"
@@ -6110,9 +6094,6 @@ msgstr "Lūdzu ievadiet jauno PIN kodu"
 msgid "Please enter the old PIN code"
 msgstr "Lūdzu ievadiet iepriekšējo PIN kodu"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Lūdzu sekojiet instrukcijām TV ekrānā"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Lūdzu ievērojiet, ka iepriekš izvēlētais datu nesējs nebija pieejams, tādēļ tā vietā tika lietota noklusētā mape."
 
@@ -6148,24 +6129,6 @@ msgstr "Lūdzu izvēlieties etiķeti filtrēšanai..."
 
 msgid "Please select the movie path..."
 msgstr "Lūdzu izvēlieties ceļu uz mediju failu..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Lūdzu izvēlieties tīkla interfeisu, ko vēlaties izmantot savam interneta savienojumam.\n"
-"\n"
-"Lūdzu nospiediet OK, lai turpinātu."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Lūdzu izvēlieties bezvadu tīklu ar kuru veidot savienojumu.\n"
-"\n"
-"Lūdzu nospiediet OK, lai turpinātu."
 
 msgid "Please set up tuner A"
 msgstr "Lūdzu iestatiet uztvērēju A"
@@ -6731,9 +6694,6 @@ msgstr "Atjaunināt"
 
 msgid "Refresh rate"
 msgstr "Atjaunināšanas biežums"
-
-msgid "Refresh rate selection."
-msgstr "Atjaunināšanas ātruma izvēle."
 
 msgid "Refusing to move to the same directory"
 msgstr "Nevar pārvietot tajā pašā mapē!"
@@ -7535,9 +7495,6 @@ msgstr "Izvēlieties ceļu žurnāla failam"
 msgid "Select provider to add..."
 msgstr "Izvēlieties operatoru kuru pievienot..."
 
-msgid "Select refresh rate"
-msgstr "Izvēlieties atsvaidzināšanas biežumu"
-
 msgid "Select satellites"
 msgstr "Izvēlieties pavadoni"
 
@@ -7628,17 +7585,8 @@ msgstr "Izvēlieties atjaunināšanas avotu"
 msgid "Select update source to edit"
 msgstr "Izvēlieties atjaunināšanas avotu lai rediģētu"
 
-msgid "Select video input with up/down buttons"
-msgstr "Izvēlieties video ieeju ar augšup/lejup pogām"
-
-msgid "Select video mode"
-msgstr "Izvēlieties video režīmu"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Izvēlieties vai jūsu SCR ierīcei ir neatkarīga barošana."
-
-msgid "Select wireless network"
-msgstr "Izvēlieties bezvadu tīklu"
 
 msgid "Select your ATSC provider."
 msgstr "Izvēlieties ATSC operatoru."
@@ -8604,6 +8552,10 @@ msgstr "Apturēt"
 msgid "Stop entry"
 msgstr "Apturēt ievadi"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Iet uz pēdējo kanālu"
+
 msgid "Stop play TV"
 msgstr "Izslēgt atskaņošanu fonā"
 
@@ -8961,13 +8913,6 @@ msgid "Thailand"
 msgstr "Taizeme"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Paldies ka izmantojāt vedni.\n"
-"Lūdzu nospiediet OK, lai turpinātu."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9105,13 +9050,6 @@ msgstr "Uztvērēja lietotāja interfeiss tiek pārstartēts testa režīmā"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Bezvadu tīkla spraudnis nav instalēts!\n"
-"Lūdzu uzstādiet to un izvēlieties ko gribat darīt nākamo."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Bezvadu tīkla spraudnis nav instalēts!\n"
@@ -9170,6 +9108,9 @@ msgstr "Šis ir vairāku veidu uztvērējs. Pieejamās opcijas ir atkarīgas no 
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Komandu rinda, kādā DiSEqC komandas tiek nosūtītas. Komandu rindai precīzi jāatbilst kārtībai, kādā sākot no uztvērēja fiziskās ierīces tiek pieslēgtas kabelim."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Atļauj samazināt trokšņus attēlā. Diemžēl tas samazina arī attēla asumu."
@@ -9357,6 +9298,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Šis tests atrod konfigurēto tīkla adapteri."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10021,6 +9965,9 @@ msgstr "VOB fails"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10050,22 +9997,6 @@ msgstr "Video uzlabošanas iestatījumi"
 
 msgid "Video enhancement setup"
 msgstr "Video uzlabošanas iestatīšana"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Attēla ieejas izvēle\n"
-"\n"
-"Ja redzat šo lappusi uz sava TV, spiediet OK (vai izvēlieties citu ieeju).\n"
-"\n"
-"Pēc 20 sekundēm tiks automātiski aktivizēta nākamā ieeja."
-
-msgid "Video mode selection."
-msgstr "Video režīma izvēle."
 
 msgid "Video output"
 msgstr "Video izeja"
@@ -10290,19 +10221,6 @@ msgstr ""
 "Ejiet uz fragmenta, kuru jūs vēlaties izgriezt, sākumu. Spiediet OK, lai izvēlētos 'griezuma sākumu'.\n"
 "\n"
 "Tad ejiet uz beigām, spiediet OK, izvēlieties 'griezuma beigas'. Tas arī viss."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Laipni lūdzam.\n"
-"\n"
-"Ja jūs vēlaties, savienot jūsu uztvērēju ar internetu šis vednis veiks pamata tīkla iestatīšanu.\n"
-"\n"
-"Nospiediet OK, lai sāktu sava tīkla konfigurēšanu"
 
 msgid ""
 "Welcome.\n"
@@ -10564,12 +10482,6 @@ msgstr "Bezvadu tīkls"
 msgid "Wireless network configuration..."
 msgstr "Bezvadu tīkla konfigurācija..."
 
-msgid "Wireless network connection setup"
-msgstr "Bezvadu tīkla savienojuma iestatījumi"
-
-msgid "Wireless network connection setup."
-msgstr "Bezvadu tīkla savienojuma iestatījumi."
-
 msgid "Wireless network state"
 msgstr "Bezvadu tīkla statuss"
 
@@ -10799,13 +10711,6 @@ msgstr ""
 "Lūdzu uzgaidiet kamēr tas pārstartēsies\n"
 "Tas var prasīt kādu laiku"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Jūsu interneta savienojums nestrādā!\n"
-"Lūdzu izvēlieties ko vēlaties darīt tālāk."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Jūsu interneta savienojums strādā (ip: %s)"
@@ -10833,19 +10738,6 @@ msgstr ""
 "Jūsu interneta savienojums strādā.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Jūsu uztvērējs ir gatavs lietošanai.\n"
-"\n"
-"Jūsu interneta savienojums strādā.\n"
-"\n"
-"Lūdzu nospiediet OK lai turpinātu."
-
 msgid "Your receiver is rebooting"
 msgstr "Jūsu uztvērējs pārstartējas"
 
@@ -10863,17 +10755,6 @@ msgstr "Jūsu uztvērējs pāriet gaidstāvē jo nav aktivitātes."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Jūsu uztvērējs pārstartēsies pēc tam kad nospiedīsiet OK uz tālvadības pults."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Jūsu bezvadu LAN interneta pieslēgumu nevar uzsākt!\n"
-"Vai esat pievienots USB WLAN adapteri?\n"
-"\n"
-"Lūdzu izvēlieties, ko jūs vēlaties darīt tālāk."
 
 msgid "Zambia"
 msgstr "Zambija"
