--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -1784,6 +1784,9 @@ msgstr "Controleer of u een internetverbinding heeft."
 msgid "Check the internet connection again"
 msgstr "Controleer nogmaals of u een internetverbinding heeft"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Controleert bestandssysteem..."
 
@@ -2070,9 +2073,6 @@ msgstr "Configureer of de HDMI EDID controle  overgeslagen mag worden omdat dit 
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Configureer of de ondertitels moeten schakelen tussen normaal, schuin, vet en vet/schuin"
-
-msgid "Configure interface"
-msgstr "Configureer interface"
 
 msgid "Configure nameservers"
 msgstr "Configureer nameservers"
@@ -2440,9 +2440,6 @@ msgstr "Met deze optie stelt u in welke tuner de voorkeurstuner is indien er mee
 
 msgid "Configure your internal LAN"
 msgstr "Configureer uw interne netwerk"
-
-msgid "Configure your network again"
-msgstr "Configureer uw netwerk opnieuw"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Configureer uw netwerkinstellingen en druk 'Ok' om de scan te starten."
@@ -3576,6 +3573,9 @@ msgstr "Voor het in de positioner opgeslagen nummer in dat overeen komt met deze
 msgid "Enter the service pin"
 msgstr "Voer de zender pincode in"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Voor de huidige latitude in. Dit is het aantal (decimale) graden dat u verwijderd bent van de evenaar."
 
@@ -4497,7 +4497,8 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Ik wil verder geen (aanvullende) zenderscan uitvoeren."
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+#, fuzzy
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "I55SE/H7(nieuw model)/H9(nieuw model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
 
 msgid "IDLE"
@@ -5060,9 +5061,6 @@ msgstr "Verbinding:"
 msgid "Linked titles with a DVD menu"
 msgstr "Verbind titels met een DVD menu"
 
-msgid "List available networks"
-msgstr "Toon beschikbare netwerken"
-
 msgid "List mode"
 msgstr "Lijstmode"
 
@@ -5215,9 +5213,6 @@ msgstr "Handmatig"
 
 msgid "Manual Scan"
 msgstr "Handmatig zoeken"
-
-msgid "Manual configuration"
-msgstr "Handmatige configuratie"
 
 msgid "Manual scan"
 msgstr "Handmatig zoeken"
@@ -6078,6 +6073,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Pakketlijst vernieuwen"
 
@@ -6251,22 +6249,8 @@ msgstr "Wijzig de opname-eindtijd aub."
 msgid "Please choose an extension..."
 msgstr "Kies een plugin aub..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configureer of controleer uw nameservers door de verplichte velden in te vullen.\n"
-"Druk op Ok om verder te gaan."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Configureer aub de installatie van de Fallback tuner"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configureer uw internetverbinding door de verplichte velden in te vullen.\n"
-"Druk op Ok om verder te gaan."
 
 msgid "Please connect your receiver to the internet"
 msgstr ""
@@ -6309,9 +6293,6 @@ msgstr "Voer de nieuwe PIN code in"
 msgid "Please enter the old PIN code"
 msgstr "Toets de oude pincode in aub."
 
-msgid "Please follow the instructions on the TV"
-msgstr "Volg nu de instructies op uw TV"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Het eerder geselecteerde medium kon niet worden benaderd en om die reden wordt nu de standaard map gebruikt."
 
@@ -6347,24 +6328,6 @@ msgstr "Selecteer markering om te filteren..."
 
 msgid "Please select the movie path..."
 msgstr "Selecteer het opnamepad..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Selecteer de netwerkinterface die u wilt gebruiken voor uw internetverbinding.\n"
-"\n"
-"Druk op Ok om verder te gaan."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Selecteer het draadloze netwerk dat u wenst te gebruiken.\n"
-"\n"
-"Druk op Ok om verder te gaan."
 
 msgid "Please set up tuner A"
 msgstr ""
@@ -6953,9 +6916,6 @@ msgstr "Verversen"
 
 msgid "Refresh rate"
 msgstr "Herhaalfrequentie"
-
-msgid "Refresh rate selection."
-msgstr "Herhalingsfrequentie"
 
 msgid "Refusing to move to the same directory"
 msgstr "Verplaatsen naar dezelfde doelmap wordt niet geaccepteerd."
@@ -7758,9 +7718,6 @@ msgstr "Kies de doelmap t.b.v. het logfile"
 msgid "Select provider to add..."
 msgstr "Selecteer provider om toe te voegen..."
 
-msgid "Select refresh rate"
-msgstr "Selecteer herhalingsfrequentie"
-
 msgid "Select satellites"
 msgstr "Kies de satellieten"
 
@@ -7851,17 +7808,8 @@ msgstr "Kies de bron om te updaten"
 msgid "Select update source to edit"
 msgstr "Kies de te wijzigen updatefeed"
 
-msgid "Select video input with up/down buttons"
-msgstr "Selecteer video-ingang met de omhoog/omlaag toetsen"
-
-msgid "Select video mode"
-msgstr "Selecteer videomodus"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Kies of uw SCR apparaat is voorzien van een externe voeding."
-
-msgid "Select wireless network"
-msgstr "Selecteer draadloos netwerk"
 
 msgid "Select your ATSC provider."
 msgstr "Kies uw ATSC aanbieder."
@@ -8842,6 +8790,10 @@ msgstr "Beëindig de huidige stream"
 msgid "Stop entry"
 msgstr "Stop de invoer"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Ga naar het laatste kanaal"
+
 msgid "Stop play TV"
 msgstr "Stop met TV kijken."
 
@@ -9204,15 +9156,6 @@ msgid "Thailand"
 msgstr "Thailand"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Bedankt voor het gebruik van deze wizard.\n"
-"Druk op Ok om verder te gaan.\n"
-"\n"
-"Voor uitgebreide aanvullende informatie over tal van onderwerpen kunt u onze WIKI raadplegen. https://wiki.openpli.org"
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9356,13 +9299,6 @@ msgstr "De gebruikersomgeving van uw ontvanger wordt in debug modus herstart"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"De WiFi plugin is niet geïnstalleerd!\n"
-"Installeer deze en kies wat u vervolgens wilt doen."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr "De WiFi plugin is niet geïnstalleerd. Deze plugin eerst installeren aub."
 
@@ -9419,6 +9355,9 @@ msgstr "Dit is een multitype tuner. Beschikbare opties zijn afhankelijk van de h
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Dit is hoe de DiSEqC commando's naar het ontvangstsysteem verstuurd worden. Dit moet exact overeenkomen met de volgorde zoals de fysieke apparaten op de coax aangesloten zijn, te beginnen bij de ontvanger."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Deze optie staat toe om ruis in het beeld te blokken. Uiteraard gaat e.e.a. ten koste van de beeldscherpte."
@@ -9618,6 +9557,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Deze test detecteert uw ingestelde LAN adapter."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10287,6 +10229,9 @@ msgstr "VOB bestand"
 msgid "VU+"
 msgstr "Vu+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10316,27 +10261,6 @@ msgstr "Videoverbeteringsinstellingen..."
 
 msgid "Video enhancement setup"
 msgstr "Videoverbeteringsinstelling..."
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video uitgangsselectie.\n"
-"\n"
-"Druk op Ok zodra u dit bericht kunt zien (of selecteer een andere uitgang). In vrijwel alle gevallen is HDMI de standaard uitgang. De volgende video-optie wordt elke 10 seconden automatisch geprobeerd.\n"
-"\n"
-"Bevestig uw keuze met Ok."
-
-msgid "Video mode selection."
-msgstr ""
-"Video modeselectie.\n"
-"\n"
-"Deze keuze is afhankelijk van uw TV. Voor de meeste oudere toestellen functioneert 720p. Voor een full HD toestel is 1080P de juiste waarde. Bij een UHD / 4K TV is 2160P de juiste keuze. In het volgende scherm dienen alle pijlen zichtbaar te zijn. Dit kunt u later nog alsnog corrigeren met de overscanwizard. \n"
-"\n"
-"Bevestig uw keuze met Ok."
 
 msgid "Video output"
 msgstr "Video uitgang"
@@ -10564,19 +10488,6 @@ msgstr ""
 "Start met zoeken welke passage u wenst te verwijderen. Druk op Ok, selecteer 'start'.\n"
 "\n"
 "Ga naar het einde, druk op Ok, selecteer 'eindpunt'. Eenvoudiger kan niet."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Welkom.\n"
-"\n"
-"Indien u de ontvanger aan het internet wilt koppelen zal de wizard u daarbij begeleiden om de basis netwerksettings te plaatsen.\n"
-"\n"
-"Druk Ok om te beginnen met de configuratie van uw netwerk."
 
 msgid ""
 "Welcome.\n"
@@ -10874,12 +10785,6 @@ msgstr "WIFI netwerk"
 msgid "Wireless network configuration..."
 msgstr "WIFI netwerk instellingen..."
 
-msgid "Wireless network connection setup"
-msgstr "Installatie van het draadloos netwerk"
-
-msgid "Wireless network connection setup."
-msgstr "Installatie van het draadloos netwerk."
-
 msgid "Wireless network state"
 msgstr "Status draadloos netwerk"
 
@@ -11110,13 +11015,6 @@ msgstr ""
 "Wacht aub totdat de ontvanger herstart.\n"
 "Dit kan enige minuten duren."
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Uw internetverbinding werkt helaas niet!\n"
-"Kies wat u nu wilt te doen."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Uw internetverbinding is actief. Het IP adres is (ip: %s) "
@@ -11144,19 +11042,6 @@ msgstr ""
 "De internetverbinding werkt correct.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Uw ontvanger is gereed voor gebruik.\n"
-"\n"
-"De internetverbinding is nu actief.\n"
-"\n"
-"Druk Ok om verder te gaan."
-
 msgid "Your receiver is rebooting"
 msgstr "Uw ontvanger wordt herstart."
 
@@ -11174,17 +11059,6 @@ msgstr "Uw ontvanger wordt vanwege inactiviteit, naar stand-by geschakeld."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "De ontvanger zal herstarten nadat u op Ok gedrukt heeft."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Uw WiFi internetverbinding kan niet gestart worden!\n"
-"Is de USB WLAN Stick in de box geplaatst?\n"
-"\n"
-"Kies wat u vervolgens wilt doen."
 
 msgid "Zambia"
 msgstr "Zambia"
