--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -1941,6 +1941,9 @@ msgstr "Undersøk internett forbindelsen"
 msgid "Check the internet connection again"
 msgstr "Undersøk internett forbindelsen igjen"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 msgid "Checking filesystem..."
 msgstr "Undersøker filsystem..."
@@ -2216,10 +2219,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr ""
 
 #
-msgid "Configure interface"
-msgstr "Still inn grensesnitt"
-
-#
 msgid "Configure nameservers"
 msgstr "Still inn navnetjenerne"
 
@@ -2470,10 +2469,6 @@ msgstr "Velg den tuneren som skal foretrekkes når flere tunere er tilgjengelige
 #
 msgid "Configure your internal LAN"
 msgstr "Still inn ditt lokale LAN nettverk"
-
-#
-msgid "Configure your network again"
-msgstr "Still inn nettverket på nytt"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3747,6 +3742,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Skriv inn kanal pin"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4743,7 +4741,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Vil du gjøre et kanalsøk?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5363,9 +5361,6 @@ msgstr "Signal:"
 msgid "Linked titles with a DVD menu"
 msgstr "Koblede navn med en DVD-meny"
 
-msgid "List available networks"
-msgstr "Vis tilgjengelige nettverk"
-
 msgid "List mode"
 msgstr "Vis liste"
 
@@ -5542,9 +5537,6 @@ msgstr ""
 
 msgid "Manual Scan"
 msgstr "Manuelt søk"
-
-msgid "Manual configuration"
-msgstr "Manuell innstilling"
 
 msgid "Manual scan"
 msgstr "Manuelt søk"
@@ -6518,6 +6510,9 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Oppdaterer programvare"
@@ -6715,22 +6710,8 @@ msgstr "Vennligst endre sluttid for opptak"
 msgid "Please choose an extension..."
 msgstr "Vennligst velg en utvidelse"
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Vennligst skriv inn nødvendig informasjon for dine navnetjenere.\n"
-"Når du er klar, trykk OK for å fortsette."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Vennligst skriv inn nødvendig informasjon for internett-oppkoblingen.\n"
-"Når du er klar, trykk OK for å fortsette."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Vennligst, koble mottakeren til internett"
@@ -6774,9 +6755,6 @@ msgstr ""
 msgid "Please enter the old PIN code"
 msgstr "Vennligst tast inn den gamle PIN koden"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Vennligst følg instruksjonene på TV skjermen"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Vær oppmerksom at tidligere valgt medie ikke kunne nåes. Istedenfor brukes standard katalog."
 
@@ -6819,24 +6797,6 @@ msgstr "Vennligst velg en markør til filter..."
 
 msgid "Please select the movie path..."
 msgstr "Vennligst velg sti for lagring av opptak..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vennligst velg nettverksgrensesnittet du vil bruke for Internett-tilkobling.\n"
-"\n"
-"Vennligst trykk OK for å fortsette."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vennligst velg trådløst nettverk som du vil koble til.\n"
-"\n"
-"Vennligst trykk OK for å fortsette."
 
 msgid "Please set up tuner A"
 msgstr "Vennligst still inn tuner A"
@@ -7464,10 +7424,6 @@ msgstr ""
 #
 msgid "Refresh rate"
 msgstr "Oppfriskningsrate"
-
-#
-msgid "Refresh rate selection."
-msgstr "Valg av oppfriskningsrate"
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -8358,9 +8314,6 @@ msgstr "Velg målmappe"
 msgid "Select provider to add..."
 msgstr "Velg leverandør å legge til..."
 
-msgid "Select refresh rate"
-msgstr "Velg frekvensrate"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -8455,19 +8408,8 @@ msgstr "Velg oppdateringssted"
 msgid "Select update source to edit"
 msgstr "Velg og endre oppdateringssted"
 
-msgid "Select video input with up/down buttons"
-msgstr "Velg videoinngang med opp/ned tastene"
-
-#
-msgid "Select video mode"
-msgstr "Velg video modus"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-#
-msgid "Select wireless network"
-msgstr "Velg trådløst nettverk"
 
 #
 #, fuzzy
@@ -9540,6 +9482,11 @@ msgstr "Stoppe oppføring"
 msgid "Stop entry"
 msgstr "Stoppe oppføring"
 
+#
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Gå til siste kanal"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -9935,13 +9882,6 @@ msgid "Thailand"
 msgstr "Thailandsk"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Takk for at du bruker veiviseren.\n"
-"Vennligst trykk OK for å fortsette."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -10072,14 +10012,6 @@ msgstr "Enigma2 starter på nytt"
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Det trådløse LAN programtillegg er ikke installert!\n"
-"Vennligst installer det og velg hva som skal gjøres videre."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Det trådløse LAN programtillegg er ikke installert!\n"
@@ -10142,6 +10074,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10339,6 +10274,9 @@ msgstr ""
 #
 msgid "This test detects your configured LAN adapter."
 msgstr "Denne testen søker opp nettverkskortet."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11103,6 +11041,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 #, fuzzy
 msgid "Vanuatu"
@@ -11139,22 +11080,6 @@ msgstr "Video innstillinger"
 #
 msgid "Video enhancement setup"
 msgstr "Video oppsett"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video inngangsvalg\n"
-"\n"
-"Vennligst trykk OK hvis TV kan vise denne siden (eller velg en annen inngang).\n"
-"\n"
-"Den neste inngangen vil automatisk bli analysert i 20 sekunder."
-
-msgid "Video mode selection."
-msgstr "Videoinnstilling"
 
 #
 msgid "Video output"
@@ -11399,19 +11324,6 @@ msgstr ""
 "Gå til starten av det du ønsker å klippe bort. Trykk OK, velg 'start klipp'.\n"
 "\n"
 "Deretter gå til slutten, trykk OK, velg 'klipp slutt'. Det var det hele."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Velkommen.\n"
-"\n"
-"Hvis du vil koble mottakeren til internett, vil veiviseren hjelpe deg med å sette opp de vanligste innstillingene av mottakerens nettverk.\n"
-"\n"
-"Trykk OK for å komme igang."
 
 msgid ""
 "Welcome.\n"
@@ -11684,12 +11596,6 @@ msgstr "Trådløst nettverk"
 msgid "Wireless network configuration..."
 msgstr "Trådløst nettverksoppsett..."
 
-msgid "Wireless network connection setup"
-msgstr "Trådløst nettverksoppsett"
-
-msgid "Wireless network connection setup."
-msgstr "Trådløst nettverksoppsett."
-
 msgid "Wireless network state"
 msgstr "Trådløs nettverkstilstand"
 
@@ -11927,14 +11833,6 @@ msgstr ""
 "Vennligst vent til mottakeren starter på nytt\n"
 "Dette kan ta flere minutter"
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Internettforbindelsen fungerer ikke!\n"
-"Velg hva du vil gjøre videre."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Internettforbindelsen fungerer (ip:%s)"
@@ -11963,19 +11861,6 @@ msgstr ""
 "Internettforbindelsen fungerer.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Mottakeren er klar til bruk.\n"
-"\n"
-"Internett forbindelsen fungerer.\n"
-"\n"
-"Vennligst trykk OK for å fortsette."
-
 msgid "Your receiver is rebooting"
 msgstr "Mottakeren starter på nytt"
 
@@ -11993,18 +11878,6 @@ msgstr "Mottakeren vil nå bli slått av på grunn av inaktivitet"
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Mottakeren starter på nytt når du har trykket OK på fjernkontrollen."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Din trådløse LAN internett tilkobling kan ikke startes!\n"
-"Har du koblet til din USB WLAN minnepinne?\n"
-"\n"
-"Velg hva du vil gjøre videre."
 
 msgid "Zambia"
 msgstr ""
