--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2021-05-05 20:00+0200\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -1791,6 +1791,9 @@ msgstr "Sprawdź połączenie internetowe"
 msgid "Check the internet connection again"
 msgstr "Sprawdź połączenie internetowe ponownie"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Sprawdzanie systemu plików..."
 
@@ -2030,9 +2033,6 @@ msgstr "Skonfiguruj czy omijać sprawdzanie HDMI EDID, co może rozwiązać prob
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Ustaw czy czcionka napisów ma przełączać się pomiędzy  normalną, kursywą, pogrubioną i pogrubioną kursywą"
-
-msgid "Configure interface"
-msgstr "Skonfiguruj interfejs"
 
 msgid "Configure nameservers"
 msgstr "Skonfiguruj serwery nazw (DNS)."
@@ -2279,9 +2279,6 @@ msgstr "Skonfiguruj który tuner będzie preferowany gdy więcej niż jeden jest
 
 msgid "Configure your internal LAN"
 msgstr "Konfiguracja wewnętrznej sieci LAN"
-
-msgid "Configure your network again"
-msgstr "Skonfiguruj ponownie ustawienia sieci"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Skonfiguruj ustawienia sieci i wciśnij OK aby rozpocząć skanowanie."
@@ -3396,6 +3393,9 @@ msgstr "Wprowadź numer zapisany w obrotnicy odpowiadający temu satelicie."
 msgid "Enter the service pin"
 msgstr "Wpisz PIN kanału"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Wpisz twoją szerokość geograficzną. To liczba stopni od równika dziesiętnie."
 
@@ -4317,7 +4317,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Nie chcę wykonywać skanowania kanałów"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4871,9 +4871,6 @@ msgstr "Połączenie:"
 msgid "Linked titles with a DVD menu"
 msgstr "Dostępne tytuły DVD z menu"
 
-msgid "List available networks"
-msgstr "Pokaż listę dostępnych sieci"
-
 msgid "List mode"
 msgstr "Tryb listy"
 
@@ -5027,9 +5024,6 @@ msgstr "Ręcznie"
 
 msgid "Manual Scan"
 msgstr "Skanowanie ręczne"
-
-msgid "Manual configuration"
-msgstr "Konfiguracja ręczna"
 
 msgid "Manual scan"
 msgstr "Skanowanie ręczne"
@@ -5883,6 +5877,9 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Aktualizacja listy pakietów"
 
@@ -6056,22 +6053,8 @@ msgstr "Zmień czas zkończenia nagrywania"
 msgid "Please choose an extension..."
 msgstr "Menu rozszerzeń"
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Skonfiguruj lub zweryfikuj nameserwery poprzez wpisanie odpowiednich wartości\n"
-"Gdy będziesz gotowy wciśnij OK aby kontynuować."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Skonfiguruj ustawienia tunera rezerwowego."
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Skonfiguruj Twoje połączenie internetowe poprzez wpisanie odpowiednich wartości\n"
-"Gdy będziesz gotowy wciśnij OK aby kontynuować."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Podłącz odbiornik do internetu"
@@ -6109,9 +6092,6 @@ msgstr "Wpisz nowy kod PIN"
 msgid "Please enter the old PIN code"
 msgstr "Wpisz poprzedni kod PIN"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Postępuj zgodnie z instrukcjami wyświetlanymi na ekranie telewizora"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Brak dostępu do uprzednio wybranych plików. Użyto katalogu domyślnego."
 
@@ -6147,24 +6127,6 @@ msgstr "Wybierz 'tag' do filtrowania..."
 
 msgid "Please select the movie path..."
 msgstr "Wybierz ścieżkę do filmu..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Wybierz interfejs sieciowy, którego chcesz użyć do połączenia z internetem.\n"
-"\n"
-"Wciśnij OK, aby kontynuować."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Wybierz sieć bezprzewodową, z którą chcesz się połączyć.\n"
-"\n"
-"Wciśnij OK, aby kontynuować."
 
 msgid "Please set up tuner A"
 msgstr "Skonfiguruj tuner A"
@@ -6729,9 +6691,6 @@ msgid "Refresh"
 msgstr "Odśwież"
 
 msgid "Refresh rate"
-msgstr "Częstotliwość odświeżania"
-
-msgid "Refresh rate selection."
 msgstr "Częstotliwość odświeżania"
 
 msgid "Refusing to move to the same directory"
@@ -7534,9 +7493,6 @@ msgstr "Wybierz ścieżkę do loga"
 msgid "Select provider to add..."
 msgstr "Wybierz nadawcę do dodania..."
 
-msgid "Select refresh rate"
-msgstr "Wybierz częstotliwość odświeżania"
-
 msgid "Select satellites"
 msgstr "Wybierz satelity"
 
@@ -7627,17 +7583,8 @@ msgstr "Wybierz źródło aktualizacji"
 msgid "Select update source to edit"
 msgstr "Wybierz źródło aktualizacji do edycji"
 
-msgid "Select video input with up/down buttons"
-msgstr "Wybierz wejście video strzałkami góra / dół"
-
-msgid "Select video mode"
-msgstr "Wybierz tryb video"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Wybierz, czy twoje urządzenie SCR jest zewnętrznie zasilane."
-
-msgid "Select wireless network"
-msgstr "Wybierz sieć bezprzewodową"
 
 msgid "Select your ATSC provider."
 msgstr "Wybierz nadawcę ATSC."
@@ -8603,6 +8550,10 @@ msgstr "Zatrzymaj bieżący stream"
 msgid "Stop entry"
 msgstr "Zatrzymaj"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Idż do ostatniego kanału"
+
 msgid "Stop play TV"
 msgstr "Zatrzymaj odtwarzanie TV"
 
@@ -8963,13 +8914,6 @@ msgid "Thailand"
 msgstr "Tajlandia"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Dziękujemy za skorzystanie z kreatora.\n"
-"Naciśnij OK aby kontynuować."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9109,13 +9053,6 @@ msgstr "GUI odbiornika jest restartowane do trybu debugowania"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Wtyczka sieci bezprzewodowej nie jest zainstalowana!\n"
-"Zainstaluj ją, i wybierz co chcesz zrobić."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Wtyczka sieci bezprzewodowej nie jest zainstalowana!\n"
@@ -9174,6 +9111,9 @@ msgstr "Ta głowica jest wielosystemowa, dostępne opcje zależą od sprzętu."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "To jest kolejność w jakiej komendy DiSEqC są wysyłane do systemu. Kolejność musi dokładnie odpowiadać kolejności w jakiej urządzenia są podłączone kablem sygnałowym (zaczynając od odbiornika)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Ta opcja pozwala zredukować efekt block-noise (zakłóceń blokowych) obrazu. Oczywiście odbywa się to kosztem ostrości obrazu."
@@ -9361,6 +9301,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Test wykrywa skonfigurowany adapter sieci LAN."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10025,6 +9968,9 @@ msgstr "Plik VOB"
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr ""
 
@@ -10054,22 +10000,6 @@ msgstr "Korekcja obrazu"
 
 msgid "Video enhancement setup"
 msgstr "Ustawienia korekcji obrazu"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Wybór wejścia video\n"
-"\n"
-"Wciśnij OK, jeśli widzisz ten komunikat na ekranie telewizora (lub wybierz inne wejście).\n"
-"\n"
-"Następne wejście zostanie wypróbowane automatycznie za 20 sekund."
-
-msgid "Video mode selection."
-msgstr "Wybór trybu video."
 
 msgid "Video output"
 msgstr "Wyjście video"
@@ -10294,19 +10224,6 @@ msgstr ""
 "Przejdź do miejsca, które ma być nowym początkiem pliku. Naciśnij OK, wybierz 'początek cięcia'.\n"
 "\n"
 "Przejdź do miejsca, które ma być nowym końcem pliku. Naciśnij OK, wybierz 'koniec cięcia'. To wszystko."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Witaj.\n"
-"\n"
-"Jeśli chcesz podłączyć odbiornik do internetu, ten kreator przeprowadzi Cię przez podstawowe ustawienia sieci.\n"
-"\n"
-"Wciśnij OK, aby rozpocząć konfigurację sieci."
 
 msgid ""
 "Welcome.\n"
@@ -10568,12 +10485,6 @@ msgstr "Sieć bezprzewodowa"
 msgid "Wireless network configuration..."
 msgstr "Konfiguracja sieci bezprzewodowej..."
 
-msgid "Wireless network connection setup"
-msgstr "Konfiguracja sieci bezprzewodowej"
-
-msgid "Wireless network connection setup."
-msgstr "Konfiguracja sieci bezprzewodowej."
-
 msgid "Wireless network state"
 msgstr "Status sieci bezprzewodowej"
 
@@ -10803,13 +10714,6 @@ msgstr ""
 "Czekaj aż odbiornik zrestartuje się\n"
 "To może potrwać kilka minut"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Twoje połączenie internetowe nie działa!\n"
-"Wybierz co chcesz zrobić dalej."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Połączenie internetowe aktywne (IP: %s)"
@@ -10837,19 +10741,6 @@ msgstr ""
 "Połączenie z internetem jest aktywne.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Odbiornik jest gotowy do użytku.\n"
-"\n"
-"Połączenie z internetem jest aktywne.\n"
-"\n"
-"Wciśnij OK aby kontynuować."
-
 msgid "Your receiver is rebooting"
 msgstr "Trwa restart odbiornika"
 
@@ -10867,17 +10758,6 @@ msgstr "Odbiornik przejdzie w tryb czuwania z powodu bezczynności."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Odbiornik zostanie zrestartowany po wciśnięciu OK."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Twoje bezprzewodowe połączenie internetowe nie może zostać zainicjowane!\n"
-"Czy podłączyłeś pena USB WLAN?\n"
-"\n"
-"Wybierz co chcesz zrobić dalej."
 
 msgid "Zambia"
 msgstr ""
