--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -1783,6 +1783,9 @@ msgstr "Verificar conexão de internet"
 msgid "Check the internet connection again"
 msgstr "Verificar conexão de internet novamente"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Verificando sistema de arquivos..."
 
@@ -2029,9 +2032,6 @@ msgstr ""
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr ""
-
-msgid "Configure interface"
-msgstr "Configurar interface"
 
 msgid "Configure nameservers"
 msgstr "Configurar servidor DNS"
@@ -2280,9 +2280,6 @@ msgstr "Configurar a prioridade do tuner, quando mais de um tuner estiver dispon
 
 msgid "Configure your internal LAN"
 msgstr "Configurar rede LAN"
-
-msgid "Configure your network again"
-msgstr "Configurar a rede novamente"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3429,6 +3426,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Informe a senha"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4351,7 +4351,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Realizar uma busca de canais?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4909,9 +4909,6 @@ msgstr "Conexão:"
 msgid "Linked titles with a DVD menu"
 msgstr "Corresponder títulos a menu de DVD"
 
-msgid "List available networks"
-msgstr "Listar redes disponíveis"
-
 msgid "List mode"
 msgstr "Lista"
 
@@ -5067,9 +5064,6 @@ msgstr ""
 
 msgid "Manual Scan"
 msgstr "Busca avançada"
-
-msgid "Manual configuration"
-msgstr "Configuração manual"
 
 msgid "Manual scan"
 msgstr "Busca avançada"
@@ -5948,6 +5942,9 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Atualizando a lista de pacotes."
 
@@ -6125,22 +6122,8 @@ msgstr "Altere o tempo final da gravação"
 msgid "Please choose an extension..."
 msgstr "Escolha uma extensão"
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configure ou verifique o servidor DNS preenchendo os valores necessários.\n"
-"Quando estiver pronto pressione OK."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Configure a conexão de rede preenchendo os valores necessários.\n"
-"Quando estiver pronto pressione OK."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Configure a conexão de internet"
@@ -6178,9 +6161,6 @@ msgstr ""
 msgid "Please enter the old PIN code"
 msgstr "Informe a senha antiga"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Siga as instruções na tela"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Note que a mídia anteriormente selecionada não pôde ser acessada e, portanto, o diretório padrão está sendo usado."
 
@@ -6216,24 +6196,6 @@ msgstr "Selecione o marcador para filtrar"
 
 msgid "Please select the movie path..."
 msgstr "Selecione o diretório de gravações"
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Selecione uma interface de rede para conectar à internet.\n"
-"\n"
-"Pressione OK para continuar."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Escolha a rede sem fio que deseja conectar.\n"
-"\n"
-"Pressione OK para continuar"
 
 msgid "Please set up tuner A"
 msgstr "Configure o tuner A"
@@ -6814,9 +6776,6 @@ msgstr ""
 
 msgid "Refresh rate"
 msgstr "Frequência de atualização"
-
-msgid "Refresh rate selection."
-msgstr "Selecionar frequência de atualização."
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -7636,9 +7595,6 @@ msgstr "Selecione o diretório de destino"
 msgid "Select provider to add..."
 msgstr "Selecione a operadora para adicionar"
 
-msgid "Select refresh rate"
-msgstr "Selecione a taxa de atualização"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -7731,17 +7687,8 @@ msgstr "Servidores de atualizações"
 msgid "Select update source to edit"
 msgstr "Selecione a fonte de atualizações para editar"
 
-msgid "Select video input with up/down buttons"
-msgstr "Selecione a entrada de vídeo com os botões de cima/baixo"
-
-msgid "Select video mode"
-msgstr "Selecione o modo de vídeo"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-msgid "Select wireless network"
-msgstr "Selecione a rede sem fio"
 
 #, fuzzy
 msgid "Select your ATSC provider."
@@ -8733,6 +8680,10 @@ msgstr "Parar"
 msgid "Stop entry"
 msgstr "Parar"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Ir para o último canal"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -9098,13 +9049,6 @@ msgid "Thailand"
 msgstr "Tailandês"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Obrigado por usar o assistente.\n"
-"Pressione OK para continuar."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9228,13 +9172,6 @@ msgstr "Reiniciando interface. Aguarde..."
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"O plugin de rede sem fio não está instalado!\n"
-"Instale o plugin de rede sem fio e tente novamente."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "O plugin de rede sem fio não está instalado!\n"
@@ -9291,6 +9228,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -9480,6 +9420,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Este teste detecta as configurações do adaptador de rede."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10165,6 +10108,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "Manual"
@@ -10196,22 +10142,6 @@ msgstr "Configurar imagem"
 
 msgid "Video enhancement setup"
 msgstr "Configurar imagem"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Seleção da entrada de vídeo\n"
-"\n"
-"Pressione OK se esta tela está sendo exibida corretamente, ou selecione outra entrada.\n"
-"\n"
-"A próxima entrada será testada automaticamente em 20 segundos."
-
-msgid "Video mode selection."
-msgstr "Selecionar modo de vídeo"
 
 msgid "Video output"
 msgstr "Saída de vídeo"
@@ -10437,19 +10367,6 @@ msgstr ""
 "Vá ao o início do conteúdo que deseja cortar, pressione OK e selecione 'iniciar corte'.\n"
 "\n"
 "Em seguida, vá até o fim do conteúdo, pressione OK e selecione \"finalizar corte\"."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Bem-vindo.\n"
-"\n"
-"Se deseja conectar o receptor à internet, este assistente irá guiá-lo através da configuração básica de rede.\n"
-"\n"
-"Pressione OK para configurar a rede."
 
 msgid ""
 "Welcome.\n"
@@ -10718,12 +10635,6 @@ msgstr "Rede sem fio"
 msgid "Wireless network configuration..."
 msgstr "Configuração de rede sem fio"
 
-msgid "Wireless network connection setup"
-msgstr "Configurar rede sem fio"
-
-msgid "Wireless network connection setup."
-msgstr "Configurar rede sem fio."
-
 msgid "Wireless network state"
 msgstr "Estado da rede sem fio"
 
@@ -10945,13 +10856,6 @@ msgstr ""
 "Aguarde o receptor reiniciar.\n"
 "Isto poderá demorar alguns minutos"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"A conexão de internet não está funcionando!\n"
-"Escolha o que fazer a seguir."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Internet ativa. IP: %s"
@@ -10979,19 +10883,6 @@ msgstr ""
 "A conexão de internet está ativa.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"O receptor está pronto para uso.\n"
-"\n"
-"A conexão de internet está ativa.\n"
-"\n"
-"Pressione OK para continuar."
-
 msgid "Your receiver is rebooting"
 msgstr "Reiniciando o receptor. Aguarde..."
 
@@ -11009,17 +10900,6 @@ msgstr "O receptor será colocado em espera por inatividade."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Pressione OK para reiniciar o receptor."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"A conexão de internet sem fio não pôde ser iniciada!\n"
-"Há um adaptador wireless compatível conectado?\n"
-"\n"
-"Escolha o que fazer a seguir."
 
 msgid "Zambia"
 msgstr ""
