--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -1800,6 +1800,9 @@ msgstr ""
 msgid "Check the internet connection again"
 msgstr ""
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #, fuzzy
 msgid "Checking filesystem..."
 msgstr "Se verifica sistemul de fisiere..."
@@ -2054,9 +2057,6 @@ msgstr ""
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr ""
 
-msgid "Configure interface"
-msgstr ""
-
 msgid "Configure nameservers"
 msgstr ""
 
@@ -2309,9 +2309,6 @@ msgid "Configure which tuner will be preferred, when more than one tuner is avai
 msgstr ""
 
 msgid "Configure your internal LAN"
-msgstr ""
-
-msgid "Configure your network again"
 msgstr ""
 
 msgid "Configure your network settings and press OK to scan"
@@ -3478,6 +3475,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Introduceti pinul serviciului"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4419,7 +4419,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Doriti efectuarea unei scanari a serviciilor?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4997,9 +4997,6 @@ msgstr "Link:"
 msgid "Linked titles with a DVD menu"
 msgstr "Titluri legate cu un meniu DVD"
 
-msgid "List available networks"
-msgstr ""
-
 msgid "List mode"
 msgstr ""
 
@@ -5161,9 +5158,6 @@ msgstr ""
 
 msgid "Manual Scan"
 msgstr "Scanare manuala"
-
-msgid "Manual configuration"
-msgstr ""
 
 #, fuzzy
 msgid "Manual scan"
@@ -6065,6 +6059,9 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Actualizare lista pachet"
 
@@ -6254,17 +6251,7 @@ msgstr "Va rugam schimbati timpul final pentru inregistrare"
 msgid "Please choose an extension..."
 msgstr "Va rugam alegeti o extensie..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-
 msgid "Please configure the fallback tuner setup"
-msgstr ""
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
 msgstr ""
 
 msgid "Please connect your receiver to the internet"
@@ -6303,9 +6290,6 @@ msgstr ""
 msgid "Please enter the old PIN code"
 msgstr ""
 
-msgid "Please follow the instructions on the TV"
-msgstr "Va rugam sa urmati instructiunile de pe ecranul TV-ului"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Va rugam sa retineti ca sursa media selectata anterior nu a putut fi accesata sidirectorul implicit este folosit in locul acesteia."
 
@@ -6343,18 +6327,6 @@ msgstr "Va rugam selectati tag-ul care va fi filtrat..."
 
 msgid "Please select the movie path..."
 msgstr "Va rugam selectati calea pentru film..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
 
 #, fuzzy
 msgid "Please set up tuner A"
@@ -6940,9 +6912,6 @@ msgstr ""
 #, fuzzy
 msgid "Refresh rate"
 msgstr "Rata de reimprospatare"
-
-msgid "Refresh rate selection."
-msgstr "Selectie rata de reimprospatare"
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -7783,9 +7752,6 @@ msgstr "Alege directorul destinatie"
 msgid "Select provider to add..."
 msgstr "Alegeti furnizor pentru a fi adaugat..."
 
-msgid "Select refresh rate"
-msgstr "Selectati rata de reimprospatare"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -7881,16 +7847,7 @@ msgstr "Alege sursa de actualizare"
 msgid "Select update source to edit"
 msgstr ""
 
-msgid "Select video input with up/down buttons"
-msgstr "Selectati intrarea vieo cu tastele sus/jos"
-
-msgid "Select video mode"
-msgstr "Selectati modul vieo"
-
 msgid "Select whether your SCR device is externally powered."
-msgstr ""
-
-msgid "Select wireless network"
 msgstr ""
 
 #, fuzzy
@@ -8912,6 +8869,10 @@ msgstr "stop intrarea"
 msgid "Stop entry"
 msgstr "stop intrarea"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Servicii de protectie"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -9294,11 +9255,6 @@ msgid "Thailand"
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9419,11 +9375,6 @@ msgstr "Va rugam asteptati pana cand reteaua se va restarta..."
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Plugin-ul LAN wireless nu este instalat!\n"
@@ -9480,6 +9431,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -9671,6 +9625,9 @@ msgstr ""
 #, fuzzy
 msgid "This test detects your configured LAN adapter."
 msgstr "Acest test detecteaza Adaptorul-LAN configurat."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10367,6 +10324,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "manual"
@@ -10397,23 +10357,6 @@ msgstr ""
 
 msgid "Video enhancement setup"
 msgstr ""
-
-#, fuzzy
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Selectare intrare video\n"
-"\n"
-"Te rugam apasa Ok daca vezi aceasta pagina pe TV-ul tau(sau selecteaza un port de intrare diferit).\n"
-"\n"
-"Urmatorul port de intrare va fi automat probat in 10 secunde."
-
-msgid "Video mode selection."
-msgstr "Selectare MOD VIDEO"
 
 #, fuzzy
 msgid "Video output"
@@ -10647,14 +10590,6 @@ msgstr ""
 "Cauta inceputul listei care vrei sa o editezi. Apasa Ok pt a incepe cut'.\n"
 "\n"
 "Cauta sfarsitul listei.Apasa ok, apoi selecteaza 'end cut'. Asta este tot"
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
 
 msgid ""
 "Welcome.\n"
@@ -10916,12 +10851,6 @@ msgstr "Wireless Network"
 msgid "Wireless network configuration..."
 msgstr "Configurare retea..."
 
-msgid "Wireless network connection setup"
-msgstr ""
-
-msgid "Wireless network connection setup."
-msgstr ""
-
 msgid "Wireless network state"
 msgstr ""
 
@@ -11134,11 +11063,6 @@ msgid ""
 "This may take a few minutes"
 msgstr ""
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr ""
@@ -11162,14 +11086,6 @@ msgid ""
 "\n"
 msgstr ""
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
 msgid "Your receiver is rebooting"
 msgstr ""
 
@@ -11186,13 +11102,6 @@ msgid "Your receiver will got to standby due to inactivity."
 msgstr ""
 
 msgid "Your receiver will restart after pressing OK on your remote control."
-msgstr ""
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
 msgstr ""
 
 msgid "Zambia"
