--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2020-05-16 18:48+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -2056,6 +2056,9 @@ msgstr "Preverite vašo internetno povezavo"
 msgid "Check the internet connection again"
 msgstr "Ponovno preverite vašo internetno povezavo"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 msgid "Checking filesystem..."
 msgstr "Poteka preverjanje datotečnega sistema..."
@@ -2337,10 +2340,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr "Določitev možnosti preklapljanja podnapisov med navadnimi, poševnimi, odebeljenimi in poševnimi/odebeljenimi."
 
 #
-msgid "Configure interface"
-msgstr "Nastavite vmesnik"
-
-#
 msgid "Configure nameservers"
 msgstr "Nastavite imenske strežnike"
 
@@ -2601,10 +2600,6 @@ msgstr "Kateri kanalnik naj ima prednost pred drugimi kanalniki. Če je uporablj
 #
 msgid "Configure your internal LAN"
 msgstr "Nastavite LAN omrežje"
-
-#
-msgid "Configure your network again"
-msgstr "Ponovno nastavite omrežje"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3949,6 +3944,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Vnesite PIN kodo za kanale"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4991,7 +4989,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Želite iskati kanale?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5630,9 +5628,6 @@ msgstr "Stanje:"
 msgid "Linked titles with a DVD menu"
 msgstr "Povezani naslovi z DVD menujem"
 
-msgid "List available networks"
-msgstr "Prikaz razpoložljivih omrežij"
-
 msgid "List mode"
 msgstr "Polni način"
 
@@ -5814,9 +5809,6 @@ msgstr "Ročno"
 #
 msgid "Manual Scan"
 msgstr "Ročno iskanje"
-
-msgid "Manual configuration"
-msgstr "Ročna nastavitev"
 
 #
 msgid "Manual scan"
@@ -6820,6 +6812,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Iskanje posodobitev ..."
@@ -7028,25 +7023,9 @@ msgstr "Spremenite čas konca snemanja"
 msgid "Please choose an extension..."
 msgstr "Izbor razširitve"
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Preverite vaše imenske strežnike.\n"
-"Ko boste pripravljeni, pritisnite tipko OK."
-
 #, fuzzy
 msgid "Please configure the fallback tuner setup"
 msgstr "Naslov rezervnega oddaljenega sprejemnika"
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Nastavite vašo internetno povezavo.\n"
-"Po vnosu vseh podatkov, pritisnite OK."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Prosim, povežite vaš sprejemnik z internetom!"
@@ -7091,10 +7070,6 @@ msgstr "Prosim vnesi novo PIN kodo"
 
 msgid "Please enter the old PIN code"
 msgstr "Vnesite prejšnjo PIN kodo"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Prosim, da sledite navodilom na TV zaslonu"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -7142,26 +7117,6 @@ msgstr "Izberite oznako za filtriranje:"
 #
 msgid "Please select the movie path..."
 msgstr "Izberite pot do datotek:"
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Izberite omrežni vmesnik, ki ga želite uporabiti za internetno povezavo.\n"
-"\n"
-"Za nadaljevanje pritisnite OK."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Izberite brezžično omrežje na katerega se želite povezati.\n"
-"\n"
-"Za nadaljevanje pritisnite OK."
 
 #
 msgid "Please set up tuner A"
@@ -7845,10 +7800,6 @@ msgstr ""
 #
 msgid "Refresh rate"
 msgstr "Hitrost osveževanja"
-
-#
-msgid "Refresh rate selection."
-msgstr "Izbira hitrosti osveževanja."
 
 #
 #, fuzzy
@@ -8819,10 +8770,6 @@ msgid "Select provider to add..."
 msgstr "Izberite ponudnika, ki ga želite dodati."
 
 #
-msgid "Select refresh rate"
-msgstr "Izberite hitrost osveževanja"
-
-#
 msgid "Select satellites"
 msgstr "Izbor satelitov"
 
@@ -8925,20 +8872,8 @@ msgstr "Izberite vir nadgradnje"
 msgid "Select update source to edit"
 msgstr "Izberite vir, ki ga boste urejali"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Z gor in dol tipkami izberite video vhod"
-
-#
-msgid "Select video mode"
-msgstr "Izberite video način"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-#
-msgid "Select wireless network"
-msgstr "Izberite brezžično omrežje"
 
 #
 #, fuzzy
@@ -10081,6 +10016,11 @@ msgstr "Ustavi vsa trenutna snemanja"
 msgid "Stop entry"
 msgstr "Ustavitev vnosa"
 
+#
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Pojdi na zadnji kanal"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -10508,12 +10448,6 @@ msgstr ""
 
 #
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr "Hvala, da ste uporabili čarovnik. Za nadaljevanje pritisnite OK!"
-
-#
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -10643,14 +10577,6 @@ msgstr "Poteka ponovni zagon uporabniškega vmesnika (GUI) ..."
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Vtičnik za brezžično omrežje ni nameščen!\n"
-"Prosim, da ga namestite!"
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Vtičnik za brezžično mrežo ni nameščen!\n"
@@ -10715,6 +10641,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10914,6 +10843,9 @@ msgstr ""
 #
 msgid "This test detects your configured LAN adapter."
 msgstr "Ta preizkus preveri nastavljene omrežne vmesnike. "
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11702,6 +11634,9 @@ msgstr ""
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 #, fuzzy
 msgid "Vanuatu"
@@ -11738,24 +11673,6 @@ msgstr "Napredne nastavitve slike"
 #
 msgid "Video enhancement setup"
 msgstr "Nastavitve slike"
-
-#
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Izbira video vira\n"
-"\n"
-"Če vidite to sliko na zaslonu vašega TVja, pritisnite tipko OK ali pa izberite drugi vir.\n"
-"\n"
-"Naslednji video vir bo samodejno preverjen čez 10 sekund."
-
-#
-msgid "Video mode selection."
-msgstr "Izbira video načina."
 
 #
 msgid "Video output"
@@ -12023,19 +11940,6 @@ msgstr ""
 "Poiščite začetek dela, ki ga želite izrezati. Pritisnite OK, izberite 'Začni brisati'.\n"
 "\n"
 "Nato poiščite konec in pritisnite OK, izberite 'Končaj brisanje'."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Dobrodošli.\n"
-"\n"
-"Če želite sprejemnik povezati na internet, vas bo omenjeni čarovnik vodil skozi vse potrebne nastavitve, ki so potrebne za delovanje internetne povezave na vašem sprejemniku!\n"
-"\n"
-"Za nadaljevanje pritisnite tipko OK."
 
 msgid ""
 "Welcome.\n"
@@ -12312,12 +12216,6 @@ msgstr "Brezžično omrežje"
 msgid "Wireless network configuration..."
 msgstr "Nastavitve brezžičnega omrežja"
 
-msgid "Wireless network connection setup"
-msgstr "Nastavitve brezžične povezave"
-
-msgid "Wireless network connection setup."
-msgstr "Nastavitve brezžične povezave."
-
 msgid "Wireless network state"
 msgstr "Stanje brezžičnega omrežja"
 
@@ -12561,14 +12459,6 @@ msgid ""
 "This may take a few minutes"
 msgstr ""
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Internetna povezava ne deluje!\n"
-"Prosim, da izberete kaj želite storiti v nadaljevanju."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Internetna povezava deluje (IP naslov: %s)"
@@ -12598,19 +12488,6 @@ msgstr ""
 "Internetna povezava sedaj deluje.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Sprejemnik je sedaj pripravljen za uporabo.\n"
-"\n"
-"Internetna povezava sedaj deluje.\n"
-"\n"
-"Za nadaljevanje pritisnite tipko OK."
-
 msgid "Your receiver is rebooting"
 msgstr "Poteka ponovni zagon vašega sprejemnika ..."
 
@@ -12629,18 +12506,6 @@ msgstr "Sprejemnik bo prešel v spanje pripravljenosti zaradi neaktivnosti."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Sprejemnik se bo po pritisku tipke OK ponovno zagnal."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Brezžične internet povezave ni mogoče omogočiti!\n"
-"Ste priključili brezžični USB vmesnik?\n"
-"\n"
-"Izberite, kaj želite storiti v nadaljevanju."
 
 msgid "Zambia"
 msgstr ""
