--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -2044,6 +2044,9 @@ msgstr ""
 msgid "Check the internet connection again"
 msgstr ""
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Checking filesystem..."
@@ -2331,10 +2334,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr ""
 
 #
-msgid "Configure interface"
-msgstr "Konfiguriši interfejs"
-
-#
 msgid "Configure nameservers"
 msgstr "Konfiguriši nejmservere"
 
@@ -2606,10 +2605,6 @@ msgstr ""
 #
 msgid "Configure your internal LAN"
 msgstr "Konfiguriši svoj interni LAN"
-
-#
-msgid "Configure your network again"
-msgstr "Konfigurišite vašu mrežu ponovo"
 
 #
 #, fuzzy
@@ -3948,6 +3943,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Unesite pin kanala"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4992,7 +4990,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Želite li napraviti skeniranje kanala?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5647,9 +5645,6 @@ msgstr "Link:"
 msgid "Linked titles with a DVD menu"
 msgstr "Vezani naslovi sa DVD meniem"
 
-msgid "List available networks"
-msgstr ""
-
 msgid "List mode"
 msgstr ""
 
@@ -5835,9 +5830,6 @@ msgstr ""
 #
 msgid "Manual Scan"
 msgstr "Ručno skeniranje"
-
-msgid "Manual configuration"
-msgstr ""
 
 #
 #, fuzzy
@@ -6865,6 +6857,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Nadogradnja liste paketa"
@@ -7084,24 +7079,8 @@ msgstr "Molim promenite završno vreme snimanja"
 msgid "Please choose an extension..."
 msgstr "Molim odaberite proširenje..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Molim konfiguriši ili verifikuj svoje nejmservere popunjavajući tražene vrednosti.\n"
-"Kad si spreman pritisni OK da nastaviš."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Molim konfiguriši svoju internet vezu popunjavajući tražene vrednosti.\n"
-"Kad si spreman pritisni OK da nastaviš."
 
 msgid "Please connect your receiver to the internet"
 msgstr ""
@@ -7145,10 +7124,6 @@ msgstr ""
 
 msgid "Please enter the old PIN code"
 msgstr "Molim unesite stari PIN kod"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Molim,pratite uputstva na TV-u"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -7198,26 +7173,6 @@ msgstr "Molim izaberite oznaku za filter"
 #
 msgid "Please select the movie path..."
 msgstr "Molim izaberite putanju filma..."
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Molim izaberi mrežni interfejs koji želiš da koristiš za svoju internet vezu.\n"
-"\n"
-"Molim pritisni OK da nastaviš."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Molim izaberi bežičnu mrežu na koju želiš da se spojiš.\n"
-"\n"
-"Molim pritisni OK da nastaviš."
 
 #
 #, fuzzy
@@ -7892,10 +7847,6 @@ msgstr ""
 #, fuzzy
 msgid "Refresh rate"
 msgstr "Brzina osvježavanja"
-
-#
-msgid "Refresh rate selection."
-msgstr "Izbor vremena osvežavanja"
 
 #
 #, fuzzy
@@ -8864,10 +8815,6 @@ msgstr "Izaberite ciljnu fasciklu"
 msgid "Select provider to add..."
 msgstr "Izaberi provajdera za dodavanje"
 
-#
-msgid "Select refresh rate"
-msgstr "Izaberi vreme osvežavanja"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -8970,20 +8917,8 @@ msgstr "Izaberi izvor nadodradnje za uređivanje."
 msgid "Select update source to edit"
 msgstr "Izaberi izvor nadodradnje za uređivanje"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Izaberi video ulaz sa UP/DOWN tipkama"
-
-#
-msgid "Select video mode"
-msgstr "Izaberi video mod"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-#
-msgid "Select wireless network"
-msgstr "Izaberite bežičnu mrežu"
 
 #
 #, fuzzy
@@ -10136,6 +10071,11 @@ msgstr "zaustavi unos"
 msgid "Stop entry"
 msgstr "zaustavi unos"
 
+#
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Zaštiti kanale"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -10567,14 +10507,6 @@ msgid "Thailand"
 msgstr ""
 
 #
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Hvala vam na korišćenju čarobnjaka.\n"
-"Molim pritisnite OK da nastavite."
-
-#
 #, fuzzy
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
@@ -10713,14 +10645,6 @@ msgstr "Molim sačekajte dok se vaša mreža ponovo startuje"
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Bežični LAN dodatak nije instaliran!\n"
-"Molimo instalirajte ga i izaberite šta sledeće da činite."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Bežični LAN dodatak nije instaliran!\n"
@@ -10785,6 +10709,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10987,6 +10914,9 @@ msgstr ""
 #, fuzzy
 msgid "This test detects your configured LAN adapter."
 msgstr "Ovaj test otkriva vaš konfigurisani LAN-adapter"
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11782,6 +11712,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 #, fuzzy
 msgid "Vanuatu"
@@ -11817,25 +11750,6 @@ msgstr "Postavke video poboljšavanja"
 #
 msgid "Video enhancement setup"
 msgstr "Podešavanje video poboljšavanja"
-
-#
-#, fuzzy
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Izbor video ulaza\n"
-"\n"
-"Molim pritisnite OK ako možete da vidite ovu stranu na vašem TV (ili izaberite različit ulazni port).\n"
-"\n"
-"Sledeći ulazni port će biti automatski proban za 10 sekundi"
-
-#
-msgid "Video mode selection."
-msgstr "Izbor video načina"
 
 #
 #, fuzzy
@@ -12113,14 +12027,6 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-
-msgid ""
-"Welcome.\n"
-"\n"
 "This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
@@ -12386,12 +12292,6 @@ msgstr "Bežična mreža"
 msgid "Wireless network configuration..."
 msgstr "Mrežna konfiguracija..."
 
-msgid "Wireless network connection setup"
-msgstr ""
-
-msgid "Wireless network connection setup."
-msgstr ""
-
 msgid "Wireless network state"
 msgstr ""
 
@@ -12628,14 +12528,6 @@ msgid ""
 "This may take a few minutes"
 msgstr ""
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Vaša internet veza ne radi!\n"
-"Molim izaberite šta želite sledeće učiniti."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr ""
@@ -12666,14 +12558,6 @@ msgstr ""
 "Vaša internet veza sada radi.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
 msgid "Your receiver is rebooting"
 msgstr ""
 
@@ -12691,18 +12575,6 @@ msgstr ""
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr ""
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Vaša bežična LAN internet veza ne može biti pokrenuta!\n"
-"Da li ste spojili vaš USB WLAN stik?\n"
-"\n"
-"Molim izaberite šta želite sledeće da učinite."
 
 msgid "Zambia"
 msgstr ""
