--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -1998,6 +1998,9 @@ msgstr "Kontrollera internetanslutningen"
 msgid "Check the internet connection again"
 msgstr "Kontrollera internetanslutningen igen"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 msgid "Checking filesystem..."
 msgstr "Kontrollerar filsystem..."
@@ -2279,10 +2282,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr "Konfigurera om undertexten skall växla mellan normal, italic, bold och bolditalic."
 
 #
-msgid "Configure interface"
-msgstr "Konfigurera kort"
-
-#
 msgid "Configure nameservers"
 msgstr "Konfigurera namnservers"
 
@@ -2542,10 +2541,6 @@ msgstr "Konfigurera vilken tuner som kommer att föredras, då mer än en tuner 
 #
 msgid "Configure your internal LAN"
 msgstr "Konfigurera ditt interna LAN"
-
-#
-msgid "Configure your network again"
-msgstr "Konfigurera ditt nätverk igen"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3852,6 +3847,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Ange kanal pin"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4878,7 +4876,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Vill du söka efter kanaler?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5511,9 +5509,6 @@ msgstr "Länk :"
 msgid "Linked titles with a DVD menu"
 msgstr "Länkade titlar med en DVD meny"
 
-msgid "List available networks"
-msgstr "Lista med tillgängliga nätverk"
-
 msgid "List mode"
 msgstr "Listläge"
 
@@ -5689,9 +5684,6 @@ msgstr "Manuell"
 #
 msgid "Manual Scan"
 msgstr "Manuell sökning"
-
-msgid "Manual configuration"
-msgstr "Manuell konfiguration"
 
 #
 msgid "Manual scan"
@@ -6681,6 +6673,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Söker efter uppdateringar"
@@ -6885,24 +6880,9 @@ msgstr "Vänligen ändra inspelningens sluttid"
 msgid "Please choose an extension..."
 msgstr "Vänligen välj en utökning..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Vänligen konfigurera eller bekräfta din namnserver med att fylla i de begärda fälten.\n"
-"När du är klar tryck OK för att fortsätta."
-
 #, fuzzy
 msgid "Please configure the fallback tuner setup"
 msgstr "URL för reserv fjärrmottagare"
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Vänligen konfigurera din Internetanslutning med att fylla i begärda fält.\n"
-"När du är klar tryck OK för att forsätta."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Vänligen anslut din mottagare till Internet"
@@ -6945,10 +6925,6 @@ msgstr "Vänligen ange den nya PIN-koden"
 
 msgid "Please enter the old PIN code"
 msgstr "Vänligen ange den gamla PIN-koden"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Vänligen följ instruktionerna på TVn"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -6996,25 +6972,6 @@ msgstr "Vänligen välj märke för filtrering..."
 #
 msgid "Please select the movie path..."
 msgstr "Vänligen ange filmens sökväg..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vänligen välj nätverkskort som du vill använda för anslutning till Internet.\n"
-"\n"
-"Vänligen tryck OK för att fortsätta."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vänligen välj det trådlösa nätverk du vill ansluta till.\n"
-"\n"
-"Vänligen tryck OK för att forsätta."
 
 #
 msgid "Please set up tuner A"
@@ -7683,10 +7640,6 @@ msgstr "Uppdatera"
 #
 msgid "Refresh rate"
 msgstr "Uppdateringsfrekvens"
-
-#
-msgid "Refresh rate selection."
-msgstr "Val av uppdateringsfrekvens."
 
 #
 #, fuzzy
@@ -8626,10 +8579,6 @@ msgstr "Välj målkatalog"
 msgid "Select provider to add..."
 msgstr "Välj operatör att lägga till..."
 
-#
-msgid "Select refresh rate"
-msgstr "Välj uppdateringsfrekvens"
-
 msgid "Select satellites"
 msgstr "Välj satelliter"
 
@@ -8730,20 +8679,8 @@ msgstr "Ange uppdateringskälla."
 msgid "Select update source to edit"
 msgstr "Ange uppdateringskälla att ändra"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Välj videoingång med upp / ner knapparna"
-
-#
-msgid "Select video mode"
-msgstr "Välj videoläge"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-#
-msgid "Select wireless network"
-msgstr "Välj trådlöst nätverk"
 
 #, fuzzy
 msgid "Select your ATSC provider."
@@ -9848,6 +9785,10 @@ msgstr "Stoppa alla nuvarande inspelningar"
 msgid "Stop entry"
 msgstr "Slutpost"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Gå till senaste tjänsten"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -10254,14 +10195,6 @@ msgstr "Thailändska"
 msgid "Thailand"
 msgstr "Thailändska"
 
-#
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Tack för att du använde guiden.\n"
-"Vänligen tryck OK för att forsätta."
-
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
@@ -10414,14 +10347,6 @@ msgstr "Användargränssnittet för din mottagare startas om"
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Pluginet för trådlöst LAN är inte installerad!\n"
-"Vänligen installera den och välj vad du vill göra härnäst."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Pluginet för trådlöst LAN är inte installerad!\n"
@@ -10489,6 +10414,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10710,6 +10638,9 @@ msgstr ""
 #
 msgid "This test detects your configured LAN adapter."
 msgstr "Detta test upptäcker konfigurerad LAN adapter."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11491,6 +11422,9 @@ msgstr "VOB fil"
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "Manuell"
@@ -11526,24 +11460,6 @@ msgstr "Videoförbättringsintällningar"
 #
 msgid "Video enhancement setup"
 msgstr "Videoförbättringsinstallation"
-
-#
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video ingångsval\n"
-"\n"
-"Vänligen tryck OK om du kan se denna bild på din TV (eller välj annan ingångsport).\n"
-"\n"
-"Nästa ingångsport kommer automatiskt provas om 20 sekunder."
-
-#
-msgid "Video mode selection."
-msgstr "Videolägesval."
 
 #
 msgid "Video output"
@@ -11811,19 +11727,6 @@ msgstr ""
 "Sök början på det innehåll du vill klippa bort. Tryck OK, välj 'startklipp'.\n"
 "\n"
 "Sök därefter slutet på det innehåll du vill klippa bort, tryck OK, välj 'slutklipp'. Det var allt."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Välkommen.\n"
-"\n"
-"Om du vill ansluta din mottagare till Internet, då kommer den här guiden hjälpa dig genom grundläggande konfiguration av din mottagare.\n"
-"\n"
-"Tryck OK för att starta konfigurationen av ditt nätverk"
 
 msgid ""
 "Welcome.\n"
@@ -12099,12 +12002,6 @@ msgstr "Trådlöst nätverk"
 msgid "Wireless network configuration..."
 msgstr "Trådlös nätverksinställning..."
 
-msgid "Wireless network connection setup"
-msgstr "Trådlös nätverksinställning"
-
-msgid "Wireless network connection setup."
-msgstr "Trådlös nätverksinställning."
-
 msgid "Wireless network state"
 msgstr "Trådlöst nätverkstillstånd"
 
@@ -12365,14 +12262,6 @@ msgstr ""
 "Vänta tills din mottagare startat om\n"
 "Detta kan ta några minuter!"
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Din Internetanslutning fungerar inte!\n"
-"Vänligen välj vad du vill göra härnäst."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Din Internetanslutning fungerar (ip : %s)"
@@ -12402,19 +12291,6 @@ msgstr ""
 "Din Internetanslutning fungerar.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Din mottagare är nu klar för användning.\n"
-"\n"
-"Din Internetanslutning fungerar nu.\n"
-"\n"
-"Vänligen tryck OK för att forsätta."
-
 msgid "Your receiver is rebooting"
 msgstr "Din mottagare startar om"
 
@@ -12432,18 +12308,6 @@ msgstr "Din mottagare går i viloläge på grund av inaktivitet."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Din mottagare kommer att starta om när du trycker på OK på din fjärrkontroll."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Ditt trådlösa LAN Internetanslutning kunde inte startas!\n"
-"Har du anslutit ditt USB WLAN sticka?\n"
-"\n"
-"Vänligen välj vad du vill göra härnäst."
 
 msgid "Zambia"
 msgstr ""
