--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -1787,6 +1787,9 @@ msgstr "İnternet bağlantınızı kontrol edin"
 msgid "Check the internet connection again"
 msgstr "İnternet bağlantınızı tekrar kontrol edin"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Dosya sistemi kontrol ediliyor..."
 
@@ -2034,9 +2037,6 @@ msgstr ""
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Altyazıların normal italik, kalın ve kalın italik arasında geçiş gerekip gerekmediğini yapılandır"
-
-msgid "Configure interface"
-msgstr "Arabirim yapılandırması"
 
 msgid "Configure nameservers"
 msgstr "İsim sunucularını yapılandır"
@@ -2286,9 +2286,6 @@ msgstr "Birden fazla tuner varken, tercih edilen tuneri yapılandırın. 'Otomat
 
 msgid "Configure your internal LAN"
 msgstr "Yerel ağ ayarlarınızı yapılandırın"
-
-msgid "Configure your network again"
-msgstr "Ağınızı tekrar yapılandırın"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3443,6 +3440,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Kanal şifresini girin"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4380,7 +4380,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Servis taraması yapmak ister misiniz?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4942,9 +4942,6 @@ msgstr "Bağlantı:"
 msgid "Linked titles with a DVD menu"
 msgstr "DVD Menüsü ile bağlı başlıklar"
 
-msgid "List available networks"
-msgstr "Kullanılabilir ağ listesi"
-
 msgid "List mode"
 msgstr "Liste modu"
 
@@ -5099,9 +5096,6 @@ msgstr "Elle"
 
 msgid "Manual Scan"
 msgstr "Elle Tarama"
-
-msgid "Manual configuration"
-msgstr "El ile yapılandırma"
 
 msgid "Manual scan"
 msgstr "Elle Tarama"
@@ -5982,6 +5976,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Paket listesi güncelleniyor..."
 
@@ -6159,23 +6156,9 @@ msgstr "Lütfen kayıt bitiş saatini değiştirin"
 msgid "Please choose an extension..."
 msgstr "Lütfen kullanmak istediğiniz eklentiyi seçin..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Yapılandırın veya gerekli değerleri yazarak isim sunucusunu kontrol edin.\n"
-"Devam etmek için OK tuşuna basın."
-
 #, fuzzy
 msgid "Please configure the fallback tuner setup"
 msgstr "Yedek cihaz  URL"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Gerekli değerleri doldurarak internet bağlantınızı yapılandırın.\n"
-"Devam etmek için OK tuşuna basın."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Lütfen alıcınızı internete bağlayın."
@@ -6213,9 +6196,6 @@ msgstr "Yeni bir PIN kodu girin"
 msgid "Please enter the old PIN code"
 msgstr "Lütfen eşki şifreyi girin"
 
-msgid "Please follow the instructions on the TV"
-msgstr "TV'deki talimatları takip edin"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Seçtiğiniz medyaya erişilemedi, yerine varsayılan klasör kullanılıyor."
 
@@ -6251,24 +6231,6 @@ msgstr "Lütfen filtreleme için etiket seçin ..."
 
 msgid "Please select the movie path..."
 msgstr "Filmlerin bulunduğu  klasörü seçin..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"İnternet bağlantısı için kullanmak istediğiniz ağ ara yüzünü seçiniz.\n"
-"\n"
-"Devam etmek için OK tuşuna basın."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Kablosuz bağlantı için kullanmak istediğiniz ağ ara yüzünü seçiniz.\n"
-"\n"
-"Devam etmek için OK tuşuna basın."
 
 msgid "Please set up tuner A"
 msgstr "Tuner A'yı yapılandırın."
@@ -6850,9 +6812,6 @@ msgstr "Yenile"
 
 msgid "Refresh rate"
 msgstr "Tazeleme hızı"
-
-msgid "Refresh rate selection."
-msgstr "Yenileme hızı seçimi."
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -7673,9 +7632,6 @@ msgstr "Hedef klasörü seçin"
 msgid "Select provider to add..."
 msgstr "Eklenecek yayıncıyı seçin..."
 
-msgid "Select refresh rate"
-msgstr "Yenileme hızını seçin"
-
 msgid "Select satellites"
 msgstr "Uyduları seç"
 
@@ -7769,17 +7725,8 @@ msgstr "Güncelleme kaynağı seçin"
 msgid "Select update source to edit"
 msgstr "Düzenlemek istediğiniz güncelleme kaynağını seçin"
 
-msgid "Select video input with up/down buttons"
-msgstr "Yukarı / aşağı düğmeleri ile  video girişi seçin"
-
-msgid "Select video mode"
-msgstr "Video modu seç"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-msgid "Select wireless network"
-msgstr "Kablosuz ağ seçin"
 
 #, fuzzy
 msgid "Select your ATSC provider."
@@ -8772,6 +8719,10 @@ msgstr "Tüm güncel kayıtları durdur"
 msgid "Stop entry"
 msgstr "Durdur"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Son servise git"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -9146,13 +9097,6 @@ msgid "Thailand"
 msgstr "Tay Dili"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Sihirbazını kullandığınız için teşekkür ederiz.\n"
-"Devam etmek için OK tuşuna basın."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9276,13 +9220,6 @@ msgstr "Alıcınızın kullanıcı arayüzü yeniden başlatılıyor..."
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Kablosuz LAN eklentisi yüklü değil!\n"
-"Yüklemek için bir sonraki adımda yapmak istediğinizi seçin."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Kablosuz ağ (WLAN) eklentisi yüklenmemiş!\n"
@@ -9339,6 +9276,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -9540,6 +9480,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Bu test yapılandırılmış LAN bağdaştırıcısı tespit eder."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10229,6 +10172,9 @@ msgstr ""
 msgid "VU+"
 msgstr "Vu+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "Elle"
@@ -10260,22 +10206,6 @@ msgstr "Görüntü iyileştirme ayarları"
 
 msgid "Video enhancement setup"
 msgstr "Görüntü iyileştirme kurulumu"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video giriş seçimi\n"
-"\n"
-"TV'nizde bu sayfayı görüyorsanız (veya farklı bir giriş portu seçin) OK tuşuna basın.\n"
-"\n"
-"Sıradaki giriş portu  20 saniye içinde otomatik olarak seçilmiş olacak."
-
-msgid "Video mode selection."
-msgstr "Video modu seçimi."
 
 msgid "Video output"
 msgstr "Video çıkışı"
@@ -10501,19 +10431,6 @@ msgstr ""
 "Gördüğünüz yerden başlayabilirsiniz. OK tuşuna basın ve seçin 'kesme başlangıçı'\n"
 "\n"
 "Daha sonra kesmek istediğiniz yedere kadak bekleyin ve OK basın 'kesme sonu'. Bu kadar basit."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Hoşgeldiniz.\n"
-"\n"
-"Eğer internete alıcınızı bağlamak istiyorsanız, bu sihirbaz alıcınızın temel ağ kurulumu boyunca size rehberlik edecek.\n"
-"\n"
-"Ağ yapılandırmasını başlatmak için OK tuşuna basın."
 
 msgid ""
 "Welcome.\n"
@@ -10782,12 +10699,6 @@ msgstr "Kablosuz ağ"
 msgid "Wireless network configuration..."
 msgstr "Kablosuz ağ yapılandırması ..."
 
-msgid "Wireless network connection setup"
-msgstr "Kablosuz ağ bağlantısı kurulumu"
-
-msgid "Wireless network connection setup."
-msgstr "Kablosuz ağ bağlantısı kurulumu."
-
 msgid "Wireless network state"
 msgstr "Kablosuz ağ durumu"
 
@@ -11009,13 +10920,6 @@ msgstr ""
 "Alını yeniden başlatılana kadar bekleyi\n"
 "Bu işlem birkaç dakika sürebilir"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"İnternet bağlantısı çalışmıyor!\n"
-"Bir sonraki adımda ne yapmak istediğinizi seçin."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Internet bağlantısı çalışıyor (IP: %s)"
@@ -11043,19 +10947,6 @@ msgstr ""
 "Internet bağlantısı çalışıyor..\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Alıcınız artık kullanıma hazır.\n"
-"\n"
-"İnternet bağlantınız çalışıyor.\n"
-"\n"
-"Devam etmek için OK tuşuna basın."
-
 msgid "Your receiver is rebooting"
 msgstr "Uydu Alıcınız yeniden baştatılıyor."
 
@@ -11073,17 +10964,6 @@ msgstr "Hareket olmadığından Bekleme Moduna geçilecek."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Uydu alıcınız, uzaktan kumandadaki OK bastıktan sonra yeniden başlatıcak."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Kablosuz LAN internet bağlantısı başlatılamadı!\n"
-"USB WLAN Çubuk ile mi bağlanacaksınız?\n"
-"\n"
-"Bir sonraki adımda ne yapmak istediğinizi seçin."
 
 msgid "Zambia"
 msgstr ""
