--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 344784320@qq.com\n"
 "Language-Team: Openpli Team\n"
@@ -1773,6 +1773,9 @@ msgstr "检查英特网连接"
 msgid "Check the internet connection again"
 msgstr "再次检查英特网连接"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "检查文件系统中。。。"
 
@@ -2012,9 +2015,6 @@ msgstr "配置用来解决部分电视需要绕过HDMI EDID检测的问题。"
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "配置字幕字体（标准／斜体，粗体／粗斜）"
-
-msgid "Configure interface"
-msgstr "配置网卡"
 
 msgid "Configure nameservers"
 msgstr "配置DNS"
@@ -2261,9 +2261,6 @@ msgstr "多于一个调谐器可用是，配置使用哪一个调谐器。如果
 
 msgid "Configure your internal LAN"
 msgstr "配置本地网络"
-
-msgid "Configure your network again"
-msgstr "重新配置网络"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "配置你的网络，然后按OK开始扫描"
@@ -3377,6 +3374,9 @@ msgstr "输入与此卫星对应的定位器中存储的编号。"
 msgid "Enter the service pin"
 msgstr "输入服务密码"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "输入您当前的纬度。这是你从赤道到小数点的度数。"
 
@@ -4302,7 +4302,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "我不想执行任何服务扫描"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4853,9 +4853,6 @@ msgstr "连接:"
 msgid "Linked titles with a DVD menu"
 msgstr "与DVD菜单的连接的标题"
 
-msgid "List available networks"
-msgstr "列出可用网络"
-
 msgid "List mode"
 msgstr "输出模式"
 
@@ -5007,9 +5004,6 @@ msgstr "手动"
 
 msgid "Manual Scan"
 msgstr "手动扫描"
-
-msgid "Manual configuration"
-msgstr "手动配置"
 
 msgid "Manual scan"
 msgstr "手动扫描"
@@ -5864,6 +5858,9 @@ msgstr ""
 msgid "PPanel"
 msgstr "ppanel面板"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "更新软件列表"
 
@@ -6038,22 +6035,8 @@ msgstr "请更改录制结束时间"
 msgid "Please choose an extension..."
 msgstr "请选择增加部分。。。"
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"请配置或确认DNS地址。\n"
-"当您准备好后按OK键继续。"
-
 msgid "Please configure the fallback tuner setup"
 msgstr "请确认备用调谐器设置"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"下列数值必须设置正确才能连接到Internet。\n"
-"当您准备好后按OK键确认。"
 
 msgid "Please connect your receiver to the internet"
 msgstr "请设置接收机互联网连接"
@@ -6091,9 +6074,6 @@ msgstr "请输入新的PIN码"
 msgid "Please enter the old PIN code"
 msgstr "请输入旧密码"
 
-msgid "Please follow the instructions on the TV"
-msgstr "请依照电视屏幕指导操作。"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "请注意的是之前选择的媒体不能访问,默认的目录已被替换。"
 
@@ -6129,24 +6109,6 @@ msgstr "请选择过滤标签。。。"
 
 msgid "Please select the movie path..."
 msgstr "选择电影路径。。。"
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"请选择连接Internet的网络设备。\n"
-"\n"
-"按OK键确认。"
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"请选择您要接入的无线网络。\n"
-"\n"
-"按OK键确认"
 
 msgid "Please set up tuner A"
 msgstr "请设置调谐器 A"
@@ -6714,9 +6676,6 @@ msgstr "重新刷机"
 
 msgid "Refresh rate"
 msgstr "刷新频率"
-
-msgid "Refresh rate selection."
-msgstr "选择刷新率。"
 
 msgid "Refusing to move to the same directory"
 msgstr "拒绝移动到同一目录"
@@ -7514,9 +7473,6 @@ msgstr "选择日志文件的路径"
 msgid "Select provider to add..."
 msgstr "选择要添加的提供商。。。"
 
-msgid "Select refresh rate"
-msgstr "选择刷新率"
-
 msgid "Select satellites"
 msgstr "选择卫星"
 
@@ -7607,17 +7563,8 @@ msgstr "选择升级源"
 msgid "Select update source to edit"
 msgstr "选泽升级源进行编辑"
 
-msgid "Select video input with up/down buttons"
-msgstr "用上下键选择视频"
-
-msgid "Select video mode"
-msgstr "设置视频模式"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "选择您的SCR设备是否由外部供电。"
-
-msgid "Select wireless network"
-msgstr "选择无线网络"
 
 msgid "Select your ATSC provider."
 msgstr "选择您的ATSC提供商。"
@@ -8587,6 +8534,10 @@ msgstr "停止当前流媒体"
 msgid "Stop entry"
 msgstr "停止登录"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "转到最近频道（最后观看的）"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -8948,13 +8899,6 @@ msgid "Thailand"
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"感谢您使用设置向导。\n"
-"按OK键确认。"
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9095,13 +9039,6 @@ msgstr "接收器的用户界面正在调试模式下重新启动"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"无线网络插件未安装!\n"
-"请安装并选择下一步做什么。"
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "WLAN插件未安装!\n"
@@ -9160,6 +9097,9 @@ msgstr "这是一个多类型调谐器。可用选项取决于硬件。"
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "这是向天线系统发送DISEQC命令的顺序。顺序必须与物理设备沿信号电缆（从接收器端开始）的排列顺序完全一致。"
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "此选项允许减少图片中的块噪声。显然这是以牺牲图片的清晰度为代价的。"
@@ -9348,6 +9288,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "此测试用以检测LAN适配器配置。"
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10014,6 +9957,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr ""
 
@@ -10043,22 +9989,6 @@ msgstr "视频增强器设置"
 
 msgid "Video enhancement setup"
 msgstr "视频增强器设置"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"视频输入选择\n"
-"\n"
-"如果你能看到此页面,请按 确定(或则选择不同输入端口) \n"
-"\n"
-" "
-
-msgid "Video mode selection."
-msgstr "选择视频模式。"
 
 msgid "Video output"
 msgstr "视频输出端口"
@@ -10285,19 +10215,6 @@ msgstr ""
 "选取要切去的部分。按OK键，选择“开始剪切”。\n"
 "\n"
 "剪切结束后，按OK键，选择“结束剪切”。就是这么简单。"
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"网络设置向导。\n"
-"\n"
-"如果你想你的机顶盒连接到Internet，该向导将引导您完成机顶盒的基本网络设置。\n"
-"\n"
-"按OK键开始配置您的网络"
 
 msgid ""
 "Welcome.\n"
@@ -10562,12 +10479,6 @@ msgstr "无线网络"
 msgid "Wireless network configuration..."
 msgstr "无线网络配置。。。"
 
-msgid "Wireless network connection setup"
-msgstr "无线网络连接设置"
-
-msgid "Wireless network connection setup."
-msgstr "无线网络连接设置。"
-
 msgid "Wireless network state"
 msgstr "无线网络状态"
 
@@ -10798,13 +10709,6 @@ msgstr ""
 "请等待接收机重启\n"
 "此过程需要消耗几分钟时间"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Internet连接不正常！\n"
-"请选择下一步做什么"
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "互联网连接正常，ip地址为：%s"
@@ -10832,19 +10736,6 @@ msgstr ""
 "互联网连接已正常。\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"机顶盒现在准备使用。\n"
-"\n"
-"互联网连接已正常。\n"
-"按OK键继续\n"
-"按Ok键继续。"
-
 msgid "Your receiver is rebooting"
 msgstr "接收机正在重启中。"
 
@@ -10862,17 +10753,6 @@ msgstr "由于长时间无动作，接收机将进入待机状态。"
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "按下遥控器上的OK后，您的机顶盒将重新启动。"
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"无线网络不能连接！\n"
-"是否连接了USB无线网卡?\n"
-"\n"
-"请选择下一步做什么。"
 
 msgid "Zambia"
 msgstr ""
