--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 王彪 <satfan@163.com>\n"
 "Language-Team: 中國\n"
@@ -1759,6 +1759,9 @@ msgstr ""
 msgid "Check the internet connection again"
 msgstr ""
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr ""
 
@@ -2006,9 +2009,6 @@ msgstr ""
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr ""
 
-msgid "Configure interface"
-msgstr "配置網卡"
-
 msgid "Configure nameservers"
 msgstr "配置功能變數名稱伺服器"
 
@@ -2254,9 +2254,6 @@ msgstr ""
 
 msgid "Configure your internal LAN"
 msgstr "配置無線網路"
-
-msgid "Configure your network again"
-msgstr "重新配置網路"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3389,6 +3386,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "輸入密碼"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4314,7 +4314,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr " 是否開始頻道掃描?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4868,9 +4868,6 @@ msgstr "連接:"
 msgid "Linked titles with a DVD menu"
 msgstr "與DVD功能表的連接的標題"
 
-msgid "List available networks"
-msgstr ""
-
 msgid "List mode"
 msgstr ""
 
@@ -5024,9 +5021,6 @@ msgstr ""
 
 msgid "Manual Scan"
 msgstr "手動掃描"
-
-msgid "Manual configuration"
-msgstr ""
 
 msgid "Manual scan"
 msgstr ""
@@ -5906,6 +5900,9 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "升級軟體列表"
 
@@ -6081,22 +6078,8 @@ msgstr "請更改錄製結束時間"
 msgid "Please choose an extension..."
 msgstr "請選擇增加部分..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"請設定或核實填寫您的功能變數名稱伺服器.\n"
-"準備好後按OK繼續."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"下列數值必須設定正確才能連接到Internet.\n"
-"當您準備好後按OK鍵確認."
 
 msgid "Please connect your receiver to the internet"
 msgstr ""
@@ -6134,9 +6117,6 @@ msgstr ""
 msgid "Please enter the old PIN code"
 msgstr ""
 
-msgid "Please follow the instructions on the TV"
-msgstr "請依照電視螢幕指導操作."
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "請注意的是之前選擇的媒體不能訪問,預設的目錄已被替換."
 
@@ -6172,24 +6152,6 @@ msgstr ""
 
 msgid "Please select the movie path..."
 msgstr "請選擇電影路徑..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"請選擇連接Internet的網路裝置.\n"
-"\n"
-"按OK鍵確認."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"請選擇您要接入的無線網路.\n"
-"\n"
-"按OK鍵確認"
 
 msgid "Please set up tuner A"
 msgstr ""
@@ -6766,9 +6728,6 @@ msgstr ""
 
 msgid "Refresh rate"
 msgstr ""
-
-msgid "Refresh rate selection."
-msgstr "選擇刷新率."
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -7588,9 +7547,6 @@ msgstr "選擇一部電影"
 msgid "Select provider to add..."
 msgstr "選擇並添加供應商..."
 
-msgid "Select refresh rate"
-msgstr "選擇刷新率"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -7682,17 +7638,8 @@ msgstr ""
 msgid "Select update source to edit"
 msgstr "選擇並編輯升級來源"
 
-msgid "Select video input with up/down buttons"
-msgstr "選擇視頻輸入(上/下 鍵)"
-
-msgid "Select video mode"
-msgstr "設定視頻模式"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-msgid "Select wireless network"
-msgstr "選擇無線網路"
 
 #, fuzzy
 msgid "Select your ATSC provider."
@@ -8678,6 +8625,10 @@ msgid "Stop entry"
 msgstr ""
 
 #, fuzzy
+msgid "Stop live TV service"
+msgstr "保護服務"
+
+#, fuzzy
 msgid "Stop play TV"
 msgstr "停止SoftCam: "
 
@@ -9039,13 +8990,6 @@ msgid "Thailand"
 msgstr ""
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"感謝您使用設定嚮導.\n"
-"按OK鍵確認."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9160,13 +9104,6 @@ msgstr ""
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"無線網路插件未安裝!\n"
-"請安裝並選擇下一步做什麼."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "WLAN插件未安裝!\n"
@@ -9223,6 +9160,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -9399,6 +9339,9 @@ msgstr ""
 " - 證明您的DHCP伺服器配置正確,並能連接到網路."
 
 msgid "This test detects your configured LAN adapter."
+msgstr ""
+
+msgid "This valid ONID/TSID"
 msgstr ""
 
 msgid ""
@@ -10079,6 +10022,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "手動"
@@ -10109,17 +10055,6 @@ msgstr "視頻增強"
 
 msgid "Video enhancement setup"
 msgstr "視頻增強設定"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-
-msgid "Video mode selection."
-msgstr "選擇視頻模式."
 
 msgid "Video output"
 msgstr ""
@@ -10335,14 +10270,6 @@ msgid ""
 "Seek to the start of the stuff you want to cut away. Press OK, select 'start cut'.\n"
 "\n"
 "Then seek to the end, press OK, select 'end cut'. That's it."
-msgstr ""
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
 msgstr ""
 
 msgid ""
@@ -10601,12 +10528,6 @@ msgstr ""
 msgid "Wireless network configuration..."
 msgstr ""
 
-msgid "Wireless network connection setup"
-msgstr ""
-
-msgid "Wireless network connection setup."
-msgstr ""
-
 msgid "Wireless network state"
 msgstr ""
 
@@ -10818,13 +10739,6 @@ msgid ""
 "This may take a few minutes"
 msgstr ""
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Internet連接不正常！\n"
-"請選擇下一步做什麼"
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr ""
@@ -10848,14 +10762,6 @@ msgid ""
 "\n"
 msgstr ""
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
 msgid "Your receiver is rebooting"
 msgstr ""
 
@@ -10873,17 +10779,6 @@ msgstr ""
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr ""
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"無線網路不能連接！\n"
-"是否連接了USB無線網卡?\n"
-"\n"
-"請選擇下一步做什麼."
 
 msgid "Zambia"
 msgstr ""
