--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -1999,6 +1999,9 @@ msgstr "Tjek internet forbindelsen"
 msgid "Check the internet connection again"
 msgstr "Tjek internet forbindelsen igen"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 msgid "Checking filesystem..."
 msgstr "Undersøger filsystemet..."
@@ -2282,10 +2285,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr "Konfigurer om underteksterne skal skifte mellem normal, kursiv, fed og fedkursiv"
 
 #
-msgid "Configure interface"
-msgstr "Konfigurer interface"
-
-#
 msgid "Configure nameservers"
 msgstr "Konfigurer navneservere"
 
@@ -2546,10 +2545,6 @@ msgstr "Konfigurer hvilken tuner der er foretrukket når flere tunere er tilgæn
 #
 msgid "Configure your internal LAN"
 msgstr "Konfigurer dit interne LAN"
-
-#
-msgid "Configure your network again"
-msgstr "Konfigurer dit netværk igen"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3865,6 +3860,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Skriv service koden"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4892,7 +4890,7 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Vil du lave en kanal søgning?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5528,9 +5526,6 @@ msgstr "Link:"
 msgid "Linked titles with a DVD menu"
 msgstr "Lænkede titler med en DVD menu"
 
-msgid "List available networks"
-msgstr "Tilgængelige netværk"
-
 msgid "List mode"
 msgstr "Listningsmetode"
 
@@ -5709,9 +5704,6 @@ msgstr "Manuel"
 #
 msgid "Manual Scan"
 msgstr "Manuel søgning"
-
-msgid "Manual configuration"
-msgstr "Manuel konfiguration"
 
 #
 msgid "Manual scan"
@@ -6712,6 +6704,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Pakke liste opdatering"
@@ -6918,25 +6913,9 @@ msgstr "Venligst skift optagelses sluttid"
 msgid "Please choose an extension..."
 msgstr "Vælg venligst en udvidelse..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Opsæt venligst eller bekræft dine navneservere ved at udfylde de ønskede værdier.\n"
-"Tryk på OK når du er færdig, for at fortsætte."
-
 #, fuzzy
 msgid "Please configure the fallback tuner setup"
 msgstr "Fallback remote receiver URL"
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Opsæt venligst din internetforbindelse ved at udfylde de ønskede værdier.\n"
-"Tryk på OK når du er færdig, for at fortsætte."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Forbind venligst receiveren til internettet"
@@ -6980,10 +6959,6 @@ msgstr "Indtast ny PIN kode"
 
 msgid "Please enter the old PIN code"
 msgstr "Indtast den gamle pin kode"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Følg venligst instruktionerne på dit TV"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -7031,26 +7006,6 @@ msgstr "Vælg venligst tag til filtrering..."
 #
 msgid "Please select the movie path..."
 msgstr "Venligst vælg en film sti..."
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vælg venligst det netværk interface, som du vil benytte til din internet forbindelse.\n"
-"\n"
-"Tryk venligst på OK for at fortsætte."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vælg venligst det trådløse netværk, som du vil oprette forbindelse til.\n"
-"\n"
-"Tryk venligst på OK for at fortsætte."
 
 #
 msgid "Please set up tuner A"
@@ -7720,10 +7675,6 @@ msgstr "Genopfrisk"
 #
 msgid "Refresh rate"
 msgstr "Opdateringshastighed"
-
-#
-msgid "Refresh rate selection."
-msgstr "Opdateringsrate vælger."
 
 #
 #, fuzzy
@@ -8667,10 +8618,6 @@ msgstr "Vælg målfolderen"
 msgid "Select provider to add..."
 msgstr "Vælg udbyder, der skal tilføjes..."
 
-#
-msgid "Select refresh rate"
-msgstr "Vælg opdaterings hastighed"
-
 msgid "Select satellites"
 msgstr "Vælg satelitter"
 
@@ -8771,20 +8718,8 @@ msgstr "Vælg opgraderingskilde"
 msgid "Select update source to edit"
 msgstr "Vælg opgraderingskilde til redigering"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Vælg video input med op/ned knapperne"
-
-#
-msgid "Select video mode"
-msgstr "Vælg video type"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-#
-msgid "Select wireless network"
-msgstr "Vælg trådløst netværk"
 
 #, fuzzy
 msgid "Select your ATSC provider."
@@ -9892,6 +9827,10 @@ msgstr "Stop alle nuværende optagelser"
 msgid "Stop entry"
 msgstr "Stop punkt"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Gå til sidste kanal"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -10304,14 +10243,6 @@ msgstr "Thai"
 
 #
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Tak for brug af hjælperen.\n"
-"Tryk venligst OK for at fortsætte."
-
-#
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -10451,14 +10382,6 @@ msgstr "Brugerinterfacet på din modtager genstarter"
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Det trådløs LAN plugin er ikke installeret!\n"
-"Installer det venligst og vælg hvad du herefter vil gøre."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Trådløs LAN plugin er ikke installeret!\n"
@@ -10526,6 +10449,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10746,6 +10672,9 @@ msgstr ""
 #
 msgid "This test detects your configured LAN adapter."
 msgstr "Denne test finder din konfigurerede LAN adapter."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11529,6 +11458,9 @@ msgstr "VOB fil"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "Manuel"
@@ -11564,24 +11496,6 @@ msgstr "Indstillinger af videoforbedring"
 #
 msgid "Video enhancement setup"
 msgstr "Opsæt videoforbedring"
-
-#
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video indgangs vælger\n"
-"\n"
-"Venligst tryk OK hvis du kan se denne side på dit TV (eller vælg en anden indgangs port).\n"
-"\n"
-"Næste indgangs port vil automatisk blive testet om 20 sekunder."
-
-#
-msgid "Video mode selection."
-msgstr "Video type vælger."
 
 #
 msgid "Video output"
@@ -11850,19 +11764,6 @@ msgstr ""
 "Søg til starten af det materiale, du vil skære væk. Tryk OK, vælg 'start klip'.\n"
 "\n"
 "Søg derefter til slutningen, tryk OK, vælg 'afslut klip'. Det er det hele."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Velkommen.\n"
-"\n"
-"hvis du vil forbinde din receiver til internettet, så vil denne assisten guide dig igennem en grundlæggende opsætning af din receiver.\n"
-"\n"
-"Tryk OK for at starte en konfiguration af dit netværk"
 
 msgid ""
 "Welcome.\n"
@@ -12138,12 +12039,6 @@ msgstr "Trådløst netværk"
 msgid "Wireless network configuration..."
 msgstr "Konfiguration af trådløst netværk..."
 
-msgid "Wireless network connection setup"
-msgstr "Opsæt trådløs netværksforbindelse"
-
-msgid "Wireless network connection setup."
-msgstr "Opsæt trådløs netværksforbindelse."
-
 msgid "Wireless network state"
 msgstr "Status trådløs netværksforbindelse"
 
@@ -12388,14 +12283,6 @@ msgstr ""
 "Vent venligst til din modtager genstarter\n"
 "Dette kan tage nogle minutter"
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Din internetforbindelse virker ikke!\n"
-"Vælg hvad du vil gøre herefter."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Din internetforbindelse virker (ip: %s)"
@@ -12425,19 +12312,6 @@ msgstr ""
 "Din internetforbindelse fungerer nu.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Din receiver er klar til brug.\n"
-"\n"
-"Din internetforbindelse fungerer nu.\n"
-"\n"
-"Tryk på OK for at fortsætte."
-
 msgid "Your receiver is rebooting"
 msgstr "Din modtager genstarter"
 
@@ -12455,18 +12329,6 @@ msgstr "Din receiver vil gå i standby på grund af inaktivitet."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Din receiver vil genstarte efter at du trykke OK på fjernbetjeningen."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Din trådløse LAN internetforbindelse kunne ikke startes!\n"
-"Har du forbundet din USB WLAN Stick?\n"
-"\n"
-"Vælg hvad du herefter vil gøre."
 
 msgid "Zambia"
 msgstr ""
