--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Openpli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -1781,6 +1781,9 @@ msgstr "Kontrolli internetiühendust"
 msgid "Check the internet connection again"
 msgstr "Kontrolli uuesti internetiühendust"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Failisüsteemi kontroll..."
 
@@ -2022,9 +2025,6 @@ msgstr "Määra, kui HDMI EDID kontrollist peaks mööduma, kuivõrd see võib k
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Määra, kas subtiitreid peaks saama ümber lülitada normaalse, poolpaksu, kursiivi ja poolpaksu kursiivi vahel."
-
-msgid "Configure interface"
-msgstr "Seadista liides"
 
 msgid "Configure nameservers"
 msgstr "Seadista nimeserverid"
@@ -2273,9 +2273,6 @@ msgstr "Määra, millist tuunerit eelistatakse, kui saadaval on rohkem kui üks 
 
 msgid "Configure your internal LAN"
 msgstr "Seadista sisemine LAN võrk"
-
-msgid "Configure your network again"
-msgstr "Seadista võrk uuesti"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Seadista võrk ja vajuta otsingu alustamiseks OK"
@@ -3411,6 +3408,9 @@ msgstr "Sisesta positioneeri salvestatud number, mis vastab sellele satelliidile
 msgid "Enter the service pin"
 msgstr "Sisesta teenuse pin kood"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Sisesta asukoha laiuskraad. See on kraadide arv ekvaatorist kümnendväärtusena."
 
@@ -4341,7 +4341,7 @@ msgstr "I"
 msgid "I do not want to perform any service scans"
 msgstr "Ei soovi mingeid teenuse otsinguid"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4896,9 +4896,6 @@ msgstr "Link:"
 msgid "Linked titles with a DVD menu"
 msgstr "DVD menüüga seotud pealkirjad"
 
-msgid "List available networks"
-msgstr "Näita leitud võrgud"
-
 msgid "List mode"
 msgstr "Nimekirja laad"
 
@@ -5051,9 +5048,6 @@ msgstr "Käsitsi"
 
 msgid "Manual Scan"
 msgstr "Käsiotsing"
-
-msgid "Manual configuration"
-msgstr "Käsitsi seadistamine"
 
 msgid "Manual scan"
 msgstr "Käsiotsing"
@@ -5922,6 +5916,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPaneel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Pakettide nimekirja uuendus"
 
@@ -6097,23 +6094,9 @@ msgstr "Muuda salvestamise lõpuaega"
 msgid "Please choose an extension..."
 msgstr "Vali laiendus"
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Kontrolli ja täida nimeserveri nõutavad väljad.\n"
-"Kui oled valmis, vajuta jätkamiseks OK."
-
 #, fuzzy
 msgid "Please configure the fallback tuner setup"
 msgstr "Kaugvastuvõtja tuuneri seaded"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Täida interneti ühenduse seadistamiseks nõutavad väljad.\n"
-"Kui oled valmis, vajuta jätkamiseks OK."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Ühenda vastuvõtja internetti"
@@ -6151,9 +6134,6 @@ msgstr "Sisesta uus PIN kood"
 msgid "Please enter the old PIN code"
 msgstr "Sisesta vana PIN kood"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Jälgi ekraanil olevaid juhiseid"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Eelnevalt valitud asukoht ei ole kättesaadav ja selle asemel kasutatakse vaikimisi määratud kataloogi."
 
@@ -6189,24 +6169,6 @@ msgstr "Vali otsingusõna"
 
 msgid "Please select the movie path..."
 msgstr "Vali salvestise kataloog"
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vali võrguliides, mida  soovid kasutada interneti ühenduseks.\n"
-"\n"
-"Jätkamiseks vajuta OK ."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vali WiFi võrk ühenduseks.\n"
-"\n"
-"Jätkamiseks vajuta OK."
 
 msgid "Please set up tuner A"
 msgstr "Seadista tuuner A"
@@ -6780,9 +6742,6 @@ msgstr "Värskenda"
 
 msgid "Refresh rate"
 msgstr "Värskendussagedus"
-
-msgid "Refresh rate selection."
-msgstr "Värskendussageduse valik."
 
 msgid "Refusing to move to the same directory"
 msgstr "Keeldub liigutamast samasse kausta"
@@ -7592,9 +7551,6 @@ msgstr "Vali tee logifailini"
 msgid "Select provider to add..."
 msgstr "Vali levitaja lisamiseks"
 
-msgid "Select refresh rate"
-msgstr "Vali värskendussagedus"
-
 msgid "Select satellites"
 msgstr "Vali satelliidid"
 
@@ -7693,17 +7649,8 @@ msgstr "Vali uuenduste allikas"
 msgid "Select update source to edit"
 msgstr "Vali uuenduste allikas muutmiseks"
 
-msgid "Select video input with up/down buttons"
-msgstr "Vali video sisend"
-
-msgid "Select video mode"
-msgstr "Vali video töörežiim"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-msgid "Select wireless network"
-msgstr "Vali WiFi võrk"
 
 msgid "Select your ATSC provider."
 msgstr "Vali oma ATSC levitaja."
@@ -8681,6 +8628,10 @@ msgstr "Peata praegune voog"
 msgid "Stop entry"
 msgstr "Peata"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Mine viimasele kanalile"
+
 msgid "Stop play TV"
 msgstr "Peata telekanali esitus"
 
@@ -9051,13 +9002,6 @@ msgid "Thailand"
 msgstr "Tai"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Täname, et kasutasid abilist.\n"
-"Jätkamiseks vajuta OK."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9196,13 +9140,6 @@ msgstr "Vastuvõtja kasutajaliides taaskäivitub."
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Wifi laiendus-plugin ei ole paigaldatud!\n"
-"Palun paigalda see ja vali mida soovid teha järgmiseks."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Wifi laiendus-plugin ei ole paigaldatud!\n"
@@ -9263,6 +9200,9 @@ msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Selles järjekorras saadetakse DiSEqC käsud antennisüsteemile. See järjekord peab vastama täpselt järjekorrale, millega füüsilised seadmed on antennikaabli abil ühendatud (alates vastuvõtjast)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Siin saab vähendada pildi plokkmüra (block-noise). Seda tehakse pildi teravuse arvelt."
@@ -9464,6 +9404,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "See test tuvastab seadistatud võrgukaardi."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10146,6 +10089,9 @@ msgstr "VOB fail"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10175,22 +10121,6 @@ msgstr "Pildi paranduste seaded"
 
 msgid "Video enhancement setup"
 msgstr "Pildi paranduste seaded"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video sisendi valik\n"
-"\n"
-"Vajuta OK, kui näed seda lehekülge TV ekraanil (või vali teine sisend).\n"
-"\n"
-"Järgmist sisendit proovitakse automaatselt 20 sekundi möödudes."
-
-msgid "Video mode selection."
-msgstr "Video valik."
 
 msgid "Video output"
 msgstr "Video väljund"
@@ -10418,19 +10348,6 @@ msgstr ""
 "Keri lõike koha algusesse.Vajuta OK, 'lõike algus'.\n"
 "\n"
 "Edasi otsi lõike lõpp, vajuta OK. Tehtud."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Tere tulemast.\n"
-"\n"
-"Kui tahad vastuvõtja ühendada internetti, siis see abiline juhendab võrgu seadistamisel.\n"
-"\n"
-"Võrgu seadistamise alustamiseks vajuta OK"
 
 msgid ""
 "Welcome.\n"
@@ -10700,12 +10617,6 @@ msgstr "Traadita võrk"
 msgid "Wireless network configuration..."
 msgstr "Wifi võrgu häälestamine..."
 
-msgid "Wireless network connection setup"
-msgstr "Wifi võrgu seadistus"
-
-msgid "Wireless network connection setup."
-msgstr "Wifi võrgu seadistus."
-
 msgid "Wireless network state"
 msgstr "Wifi võrgu olek"
 
@@ -10939,13 +10850,6 @@ msgstr ""
 "Oota vastuvõtja taaskäivitumist\n"
 "See võib võtta mõne minuti"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Interneti ühendus ei tööta!\n"
-"Vali mida soovid teha edasi."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Internetiühendus töötab (ip: %s)"
@@ -10973,19 +10877,6 @@ msgstr ""
 "Interneti ühendus töötab.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Vastuvõtja on kasutamiseks valmis.\n"
-"\n"
-"Internetiühendus töötab.\n"
-"\n"
-"Jätkamiseks vajuta OK."
-
 msgid "Your receiver is rebooting"
 msgstr "Vastuvõtja taaskäivitub"
 
@@ -11003,17 +10894,6 @@ msgstr "Vastuvõtja läheb ootele tegevusetuse tõttu."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Vastuvõtja taaskäivitub pärast puldil OK vajutamist."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"WLAN ühendust ei saa tööle!\n"
-"Kas WLAN USB pulk on ühendatud?\n"
-"\n"
-"Vali, mida soovid teha edasi."
 
 msgid "Zambia"
 msgstr "Sambia"
