--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -2007,6 +2007,9 @@ msgstr ""
 msgid "Check the internet connection again"
 msgstr ""
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Checking filesystem..."
@@ -2294,10 +2297,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr ""
 
 #
-msgid "Configure interface"
-msgstr ""
-
-#
 msgid "Configure nameservers"
 msgstr ""
 
@@ -2559,10 +2558,6 @@ msgstr ""
 
 #
 msgid "Configure your internal LAN"
-msgstr ""
-
-#
-msgid "Configure your network again"
 msgstr ""
 
 msgid "Configure your network settings and press OK to scan"
@@ -3888,6 +3883,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Fier de service pin yn"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4923,7 +4921,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Wolle jo no nei kanalen sykje ?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5568,9 +5566,6 @@ msgstr "Link:"
 msgid "Linked titles with a DVD menu"
 msgstr "Keppele titels mei in DVD menu"
 
-msgid "List available networks"
-msgstr ""
-
 msgid "List mode"
 msgstr ""
 
@@ -5755,9 +5750,6 @@ msgstr ""
 #
 msgid "Manual Scan"
 msgstr "Hanmatig sykje"
-
-msgid "Manual configuration"
-msgstr ""
 
 #
 #, fuzzy
@@ -6777,6 +6769,9 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Bywurkje pakketlyst  "
@@ -6996,19 +6991,7 @@ msgstr "Graach eintiid fan it opnimmen feroarje."
 msgid "Please choose an extension..."
 msgstr "Kies in uitbreiding..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-
 msgid "Please configure the fallback tuner setup"
-msgstr ""
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
 msgstr ""
 
 msgid "Please connect your receiver to the internet"
@@ -7053,10 +7036,6 @@ msgstr ""
 
 msgid "Please enter the old PIN code"
 msgstr ""
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Folgje de ynstruksjes op TV"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -7106,20 +7085,6 @@ msgstr "Selektearje diel foar it filterjen..."
 #
 msgid "Please select the movie path..."
 msgstr "Selektearje it paad nei de film"
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
 
 #
 #, fuzzy
@@ -7793,10 +7758,6 @@ msgstr ""
 #, fuzzy
 msgid "Refresh rate"
 msgstr "Fernij faasje"
-
-#
-msgid "Refresh rate selection."
-msgstr "Fernij faasje seleksje"
 
 #
 #, fuzzy
@@ -8761,10 +8722,6 @@ msgstr "Kies doel map"
 msgid "Select provider to add..."
 msgstr ""
 
-#
-msgid "Select refresh rate"
-msgstr "Kies faasje fan fernije"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -8867,19 +8824,7 @@ msgstr "Kies fideo moadus"
 msgid "Select update source to edit"
 msgstr ""
 
-#
-msgid "Select video input with up/down buttons"
-msgstr ""
-
-#
-msgid "Select video mode"
-msgstr "Kies fideo moadus"
-
 msgid "Select whether your SCR device is externally powered."
-msgstr ""
-
-#
-msgid "Select wireless network"
 msgstr ""
 
 #
@@ -10005,6 +9950,11 @@ msgstr "stopje rigele"
 msgid "Stop entry"
 msgstr "stopje rigele"
 
+#
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Befeilich kanalen"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -10428,12 +10378,6 @@ msgstr ""
 msgid "Thailand"
 msgstr ""
 
-#
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
@@ -10567,12 +10511,6 @@ msgstr "Wachtsje oant it netwurk opnei start is..."
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "De WLAN ynstekker is net ynstallearre!\n"
@@ -10636,6 +10574,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10838,6 +10779,9 @@ msgstr ""
 #, fuzzy
 msgid "This test detects your configured LAN adapter."
 msgstr "Dizze test syket nei de ynstelde LAN-Adapter"
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11635,6 +11579,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 #, fuzzy
 msgid "Vanuatu"
@@ -11670,25 +11617,6 @@ msgstr ""
 #
 msgid "Video enhancement setup"
 msgstr ""
-
-#
-#, fuzzy
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Fideo yngong seleksje\n"
-"\n"
-"Druk OK wannear jo dit sjen kinne op jo TV (of kies in oare yngong).\n"
-"\n"
-"De folgende yngong wurd automatysk probearre yn 10 seconden."
-
-#
-msgid "Video mode selection."
-msgstr "Fideo moadus seleksje"
 
 #
 #, fuzzy
@@ -11962,14 +11890,6 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-
-msgid ""
-"Welcome.\n"
-"\n"
 "This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
@@ -12235,12 +12155,6 @@ msgstr "Triidloas netwurk"
 msgid "Wireless network configuration..."
 msgstr "Netwurk configuraasje"
 
-msgid "Wireless network connection setup"
-msgstr ""
-
-msgid "Wireless network connection setup."
-msgstr ""
-
 msgid "Wireless network state"
 msgstr ""
 
@@ -12471,12 +12385,6 @@ msgid ""
 "This may take a few minutes"
 msgstr ""
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr ""
@@ -12501,14 +12409,6 @@ msgid ""
 "\n"
 msgstr ""
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
 msgid "Your receiver is rebooting"
 msgstr ""
 
@@ -12525,14 +12425,6 @@ msgid "Your receiver will got to standby due to inactivity."
 msgstr ""
 
 msgid "Your receiver will restart after pressing OK on your remote control."
-msgstr ""
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
 msgstr ""
 
 msgid "Zambia"
