--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -1909,6 +1909,9 @@ msgstr ""
 msgid "Check the internet connection again"
 msgstr ""
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #, fuzzy
 msgid "Checking filesystem..."
 msgstr "...בודק קבצי מערכת"
@@ -2164,9 +2167,6 @@ msgstr ""
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr ""
-
-msgid "Configure interface"
-msgstr "הגדרת ממשק"
 
 msgid "Configure nameservers"
 msgstr "Configure nameservers"
@@ -2428,9 +2428,6 @@ msgstr ""
 
 msgid "Configure your internal LAN"
 msgstr "הגדרת הרשת הפנימית שלך"
-
-msgid "Configure your network again"
-msgstr "הגדרת הרשת שלך שוב"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3647,6 +3644,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "הכנס קוד האבטחה של השירות"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4625,7 +4625,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "?האם ברצונך לבצע סריקת שירותים"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5244,9 +5244,6 @@ msgstr ""
 msgid "Linked titles with a DVD menu"
 msgstr ""
 
-msgid "List available networks"
-msgstr ""
-
 msgid "List mode"
 msgstr ""
 
@@ -5422,9 +5419,6 @@ msgstr ""
 #
 msgid "Manual Scan"
 msgstr "סריקה ידנית"
-
-msgid "Manual configuration"
-msgstr ""
 
 #
 #, fuzzy
@@ -6388,6 +6382,9 @@ msgstr ""
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "עדכון רשימת חבילות"
@@ -6590,22 +6587,8 @@ msgstr "אנא שנה את זמן סוף ההקלטה"
 msgid "Please choose an extension..."
 msgstr "Please choose an extension..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
 
 msgid "Please connect your receiver to the internet"
 msgstr ""
@@ -6642,9 +6625,6 @@ msgstr ""
 
 msgid "Please enter the old PIN code"
 msgstr ""
-
-msgid "Please follow the instructions on the TV"
-msgstr "אנא עקוב אחר ההוראות בטלויזיה"
 
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -6686,24 +6666,6 @@ msgstr ""
 
 msgid "Please select the movie path..."
 msgstr "Please select the movie path..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
 
 #, fuzzy
 msgid "Please set up tuner A"
@@ -7316,9 +7278,6 @@ msgstr ""
 #, fuzzy
 msgid "Refresh rate"
 msgstr "Refresh Rate"
-
-msgid "Refresh rate selection."
-msgstr "Refresh rate selection."
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -8206,9 +8165,6 @@ msgstr "בחר תיקיית יעד"
 msgid "Select provider to add..."
 msgstr "Select provider to add..."
 
-msgid "Select refresh rate"
-msgstr "Select refresh rate"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -8305,18 +8261,8 @@ msgstr ""
 msgid "Select update source to edit"
 msgstr "Select update source to edit"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Select video input with up/down buttons"
-
-msgid "Select video mode"
-msgstr "Select video mode"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-msgid "Select wireless network"
-msgstr "בחר רשת אלחוטית"
 
 #, fuzzy
 msgid "Select your ATSC provider."
@@ -9406,6 +9352,10 @@ msgstr "עצור בדיקה"
 msgid "Stop entry"
 msgstr "עצור בדיקה"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Protect services"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -9818,13 +9768,6 @@ msgstr ""
 msgid "Thailand"
 msgstr ""
 
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-
 #, fuzzy
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
@@ -9956,13 +9899,6 @@ msgstr "...נא המתן בעת איתחול הרשת"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "The wireless LAN plugin is not installed!\n"
@@ -10022,6 +9958,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10208,6 +10147,9 @@ msgstr ""
 #, fuzzy
 msgid "This test detects your configured LAN adapter."
 msgstr "This test detects your configured LAN-Adapter."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10966,6 +10908,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #
 #, fuzzy
 msgid "Vanuatu"
@@ -10997,17 +10942,6 @@ msgstr "Video enhancement settings"
 
 msgid "Video enhancement setup"
 msgstr "Video enhancement setup"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-
-msgid "Video mode selection."
-msgstr "Video mode selection."
 
 #
 #, fuzzy
@@ -11261,14 +11195,6 @@ msgid ""
 "Seek to the start of the stuff you want to cut away. Press OK, select 'start cut'.\n"
 "\n"
 "Then seek to the end, press OK, select 'end cut'. That's it."
-msgstr ""
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
 msgstr ""
 
 msgid ""
@@ -11534,12 +11460,6 @@ msgstr "Wireless Network"
 msgid "Wireless network configuration..."
 msgstr "...הגדרת רשת"
 
-msgid "Wireless network connection setup"
-msgstr ""
-
-msgid "Wireless network connection setup."
-msgstr ""
-
 msgid "Wireless network state"
 msgstr ""
 
@@ -11758,13 +11678,6 @@ msgid ""
 "This may take a few minutes"
 msgstr ""
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr ""
@@ -11793,14 +11706,6 @@ msgstr ""
 "Your internet connection is working now.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-
 msgid "Your receiver is rebooting"
 msgstr ""
 
@@ -11817,14 +11722,6 @@ msgid "Your receiver will got to standby due to inactivity."
 msgstr ""
 
 msgid "Your receiver will restart after pressing OK on your remote control."
-msgstr ""
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
 msgstr ""
 
 msgid "Zambia"
