--- a/po/ku.po
+++ b/po/ku.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 Kurdish translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -1793,6 +1793,9 @@ msgstr "Girédayiya İnterneté Qonrol Bike"
 msgid "Check the internet connection again"
 msgstr "Disa Qontrola İnternet Bikin"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Sistema dosya binéri"
 
@@ -2039,9 +2042,6 @@ msgstr ""
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr ""
-
-msgid "Configure interface"
-msgstr "Configure interface"
 
 msgid "Configure nameservers"
 msgstr "Configure nameservers"
@@ -2290,9 +2290,6 @@ msgstr "Configure which tuner will be preferred, when more than one tuner is ava
 
 msgid "Configure your internal LAN"
 msgstr "Configure your internal LAN"
-
-msgid "Configure your network again"
-msgstr "Configure your network again"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3437,6 +3434,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Enter the service pin"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4361,7 +4361,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Do you want to do a service scan?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -4919,9 +4919,6 @@ msgstr "Link:"
 msgid "Linked titles with a DVD menu"
 msgstr "Linked titles with a DVD menu"
 
-msgid "List available networks"
-msgstr "List available networks"
-
 msgid "List mode"
 msgstr "List mode"
 
@@ -5077,9 +5074,6 @@ msgstr ""
 
 msgid "Manual Scan"
 msgstr "Bi dest Légerin"
-
-msgid "Manual configuration"
-msgstr "Manual configuration"
 
 msgid "Manual scan"
 msgstr "Manual scan"
@@ -5959,6 +5953,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Package list update"
 
@@ -6136,22 +6133,8 @@ msgstr "Please change recording endtime"
 msgid "Please choose an extension..."
 msgstr "Please choose an extension..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Please connect your receiver to the internet"
@@ -6189,9 +6172,6 @@ msgstr ""
 msgid "Please enter the old PIN code"
 msgstr "Please enter the old PIN code"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Please follow the instructions on the TV"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 
@@ -6227,24 +6207,6 @@ msgstr "Please select tag to filter..."
 
 msgid "Please select the movie path..."
 msgstr "Please select the movie path..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
 
 msgid "Please set up tuner A"
 msgstr "Please set up tuner A"
@@ -6823,9 +6785,6 @@ msgstr ""
 
 msgid "Refresh rate"
 msgstr "Refresh rate"
-
-msgid "Refresh rate selection."
-msgstr "Refresh rate selection."
 
 #, fuzzy
 msgid "Refusing to move to the same directory"
@@ -7646,9 +7605,6 @@ msgstr "Select target folder"
 msgid "Select provider to add..."
 msgstr "Select provider to add..."
 
-msgid "Select refresh rate"
-msgstr "Select refresh rate"
-
 msgid "Select satellites"
 msgstr ""
 
@@ -7741,17 +7697,8 @@ msgstr "Select update source"
 msgid "Select update source to edit"
 msgstr "Select update source to edit"
 
-msgid "Select video input with up/down buttons"
-msgstr "Select video input with up/down buttons"
-
-msgid "Select video mode"
-msgstr "Select video mode"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-msgid "Select wireless network"
-msgstr "Select wireless network"
 
 #, fuzzy
 msgid "Select your ATSC provider."
@@ -8742,6 +8689,10 @@ msgstr "Stop entry"
 msgid "Stop entry"
 msgstr "Stop entry"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Go to last service"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -9108,13 +9059,6 @@ msgid "Thailand"
 msgstr "Thai"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9238,13 +9182,6 @@ msgstr "The user interface of your receiver is restarting"
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "The wireless LAN plugin is not installed!\n"
@@ -9301,6 +9238,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -9490,6 +9430,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "This test detects your configured LAN adapter."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10173,6 +10116,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "manual"
@@ -10204,22 +10150,6 @@ msgstr "Video enhancement settings"
 
 msgid "Video enhancement setup"
 msgstr "Video enhancement setup"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-
-msgid "Video mode selection."
-msgstr "Video mode selection."
 
 msgid "Video output"
 msgstr "Video output"
@@ -10445,19 +10375,6 @@ msgstr ""
 "Seek to the start of the stuff you want to cut away. Press OK, select 'start cut'.\n"
 "\n"
 "Then seek to the end, press OK, select 'end cut'. That's it."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
 
 msgid ""
 "Welcome.\n"
@@ -10725,12 +10642,6 @@ msgstr "Wireless network"
 msgid "Wireless network configuration..."
 msgstr "Wireless network configuration..."
 
-msgid "Wireless network connection setup"
-msgstr "Wireless network connection setup"
-
-msgid "Wireless network connection setup."
-msgstr "Wireless network connection setup."
-
 msgid "Wireless network state"
 msgstr "Wireless network state"
 
@@ -10952,13 +10863,6 @@ msgstr ""
 "Please wait until your receiver reboots\n"
 "This may take a few minutes"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Your internet connection is working (ip: %s)"
@@ -10986,19 +10890,6 @@ msgstr ""
 "Your internet connection is working.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-
 msgid "Your receiver is rebooting"
 msgstr "Your receiver is rebooting"
 
@@ -11016,17 +10907,6 @@ msgstr ""
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Your receiver will restart after pressing OK on your remote control."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
 
 msgid "Zambia"
 msgstr ""
