--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -2017,6 +2017,9 @@ msgstr "Verifique a ligação à Internet"
 msgid "Check the internet connection again"
 msgstr "Verifique novamente a ligação à Internet"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 #
 #, fuzzy
 msgid "Checking filesystem..."
@@ -2304,10 +2307,6 @@ msgid "Configure if the subtitle should switch between normal, italic, bold and 
 msgstr ""
 
 #
-msgid "Configure interface"
-msgstr "Configurar interface"
-
-#
 msgid "Configure nameservers"
 msgstr "Configurar servidor DNS"
 
@@ -2580,10 +2579,6 @@ msgstr "Configurar qual sintonizador preferido, quando mais de um sintonizador e
 #
 msgid "Configure your internal LAN"
 msgstr "Configure a sua rede LAN interna"
-
-#
-msgid "Configure your network again"
-msgstr "Configure a sua rede outra vez"
 
 #, fuzzy
 msgid "Configure your network settings and press OK to scan"
@@ -3912,6 +3907,9 @@ msgstr ""
 msgid "Enter the service pin"
 msgstr "Introduzir código PIN do canal"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr ""
 
@@ -4944,7 +4942,7 @@ msgstr ""
 msgid "I do not want to perform any service scans"
 msgstr "Deseja fazer uma pesquisa de canais?"
 
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr ""
 
 msgid "IDLE"
@@ -5597,9 +5595,6 @@ msgstr "Ligação:"
 msgid "Linked titles with a DVD menu"
 msgstr "Corresponder títulos com menu de DVD"
 
-msgid "List available networks"
-msgstr "Lista de redes disponíveis"
-
 msgid "List mode"
 msgstr "Tipo de lista"
 
@@ -5785,9 +5780,6 @@ msgstr "Manual"
 #
 msgid "Manual Scan"
 msgstr "Pesquisa manual"
-
-msgid "Manual configuration"
-msgstr "Configuração manual"
 
 #
 #, fuzzy
@@ -6809,6 +6801,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr ""
 
+msgid "PULSe 4K"
+msgstr ""
+
 #
 msgid "Package list update"
 msgstr "Actualização da lista de pacotes"
@@ -7028,24 +7023,8 @@ msgstr "Altere o tempo final da gravação"
 msgid "Please choose an extension..."
 msgstr "Por favor escolha uma extensão..."
 
-#
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Por favor configure ou verifique o servidor DNS preenchendo os valores necessários.\n"
-"Quando estiver pronto pressione OK para continuar."
-
 msgid "Please configure the fallback tuner setup"
 msgstr ""
-
-#
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Por favor configure a ligação de internet preenchendo os valores necessários.\n"
-"Quando estiver preparado pressione OK para continuar."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Por favor ligue o seu receptor à Internet"
@@ -7089,10 +7068,6 @@ msgstr ""
 
 msgid "Please enter the old PIN code"
 msgstr "Por favor introduza o código PIN antigo"
-
-#
-msgid "Please follow the instructions on the TV"
-msgstr "Por favor siga as instruções na TV"
 
 #
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
@@ -7142,26 +7117,6 @@ msgstr "Por favor teste o filtro de etiquetas..."
 #
 msgid "Please select the movie path..."
 msgstr "Por favor seleccione o caminho para a gravação..."
-
-#
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Por favor seleccione um interface de rede para usar como ligação de Internet.\n"
-"\n"
-"Prima OK para continuar."
-
-#
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Por favor escolha a rede sem fios ao qual se quer ligar.\n"
-"\n"
-"Por favor pressione OK para continuar."
 
 #
 #, fuzzy
@@ -7846,10 +7801,6 @@ msgstr ""
 #, fuzzy
 msgid "Refresh rate"
 msgstr "Taxa de refrescamento"
-
-#
-msgid "Refresh rate selection."
-msgstr "Selecção da taxa de refrescamento."
 
 #
 #, fuzzy
@@ -8818,10 +8769,6 @@ msgstr "Seleccione directório de destino"
 msgid "Select provider to add..."
 msgstr "Seleccionar operador para adicionar..."
 
-#
-msgid "Select refresh rate"
-msgstr "Seleccione a taxa de refrescamento"
-
 msgid "Select satellites"
 msgstr "Seleccione satélites"
 
@@ -8925,20 +8872,8 @@ msgstr "Seleccionar fonte de actualizações"
 msgid "Select update source to edit"
 msgstr "Seleccionar fonte de actualizações para editar"
 
-#
-msgid "Select video input with up/down buttons"
-msgstr "Seleccionar entrada de vídeo com os botões de cima/baixo"
-
-#
-msgid "Select video mode"
-msgstr "Seleccione modo de vídeo"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr ""
-
-#
-msgid "Select wireless network"
-msgstr "Seleccionar rede sem fios"
 
 #
 #, fuzzy
@@ -10091,6 +10026,10 @@ msgstr "Parar entrada"
 msgid "Stop entry"
 msgstr "Parar entrada"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Ir para o último canal"
+
 msgid "Stop play TV"
 msgstr ""
 
@@ -10520,14 +10459,6 @@ msgid "Thailand"
 msgstr "Tailandês"
 
 #
-msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Obrigado por usar o assistente.\n"
-"Por favor pressione OK para continuar."
-
-#
 #, fuzzy
 msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
@@ -10666,14 +10597,6 @@ msgstr "O interface gráfico está a reiniciar"
 #
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"O plugin de rede sem fios não está instalado!\n"
-"Por favor instale-o e escolha o que fazer a seguir."
-
-#
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "O plugin de rede sem fios não está instalado!\n"
@@ -10738,6 +10661,9 @@ msgid "This is a multitype tuner. Available options depend on the hardware."
 msgstr ""
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
+msgstr ""
+
+msgid "This not valid ONID/TSID"
 msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
@@ -10940,6 +10866,9 @@ msgstr ""
 #, fuzzy
 msgid "This test detects your configured LAN adapter."
 msgstr "Este teste detecta as configurações do adaptador LAN."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -11743,6 +11672,9 @@ msgstr ""
 msgid "VU+"
 msgstr ""
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 #, fuzzy
 msgid "Vanuatu"
 msgstr "Manual"
@@ -11778,25 +11710,6 @@ msgstr "Definições de imagem"
 #
 msgid "Video enhancement setup"
 msgstr "Definições de imagem"
-
-#
-#, fuzzy
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Selecção da entrada de vídeo\n"
-"\n"
-"Por favor carregue OK se consegue ver esta página (ou seleccione outra porta de entrada).\n"
-"\n"
-"A porta seleccionada será usada automaticamente dentro de 20 segundos."
-
-#
-msgid "Video mode selection."
-msgstr "Selecção do modo de vídeo"
 
 #
 #, fuzzy
@@ -12078,19 +11991,6 @@ msgstr ""
 msgid ""
 "Welcome.\n"
 "\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Bem-vindo.\n"
-"\n"
-"Se deseja ligar o receptor à Internet, este assistente irá guiá-lo para realizar a configuração da rede básica.\n"
-"\n"
-"Pressione OK para iniciar a configuração de sua rede"
-
-msgid ""
-"Welcome.\n"
-"\n"
 "This start wizard will guide you through the basic setup of your receiver.\n"
 "Press the OK button on your remote control to move to the next step."
 msgstr ""
@@ -12366,12 +12266,6 @@ msgstr "Rede sem fios"
 msgid "Wireless network configuration..."
 msgstr "Configuração da rede sem fios..."
 
-msgid "Wireless network connection setup"
-msgstr "Configuração da rede sem fios"
-
-msgid "Wireless network connection setup."
-msgstr "Configuração da rede sem fios."
-
 msgid "Wireless network state"
 msgstr "Estado da rede sem fios"
 
@@ -12615,14 +12509,6 @@ msgstr ""
 "Por favor aguarde até o receptor reiniciar.\n"
 "Isto poderá demorar alguns minutos..."
 
-#
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"A ligação à Internet não está a funcionar!\n"
-"Por favor escolha o que fazer a seguir."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "A sua ligação à Internet está a funcionar correctamente.(IP: %s)"
@@ -12653,19 +12539,6 @@ msgstr ""
 "A ligação à Internet está agora a funcionar.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"O receptor está pronto para ser usado.\n"
-"\n"
-"A ligação à Internet está agora a funcionar.\n"
-"\n"
-"Pressione OK para continuar..."
-
 msgid "Your receiver is rebooting"
 msgstr "O receptor está a reiniciar..."
 
@@ -12683,18 +12556,6 @@ msgstr "O receptor irá entrar em Standby devido a inactividade."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "O receptor vai reiniciar depois de pressionar OK."
-
-#
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Não foi possível iniciar a ligação sem fios!\n"
-"A Pen USB WLAN foi inserida?\n"
-"\n"
-"Por favor escolha o que fazer a seguir."
 
 msgid "Zambia"
 msgstr ""
