--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-06-05 17:29+0200\n"
+"POT-Creation-Date: 2021-07-13 15:39+0200\n"
 "PO-Revision-Date: 2021-02-25 12:06+0100\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -1792,6 +1792,9 @@ msgstr "Skontrolujte pripojenie k internetu"
 msgid "Check the internet connection again"
 msgstr "Znovu skontrolujte pripojenie k internetu"
 
+msgid "Checking ONID/TSID"
+msgstr ""
+
 msgid "Checking filesystem..."
 msgstr "Kontrolujem systém súborov..."
 
@@ -2031,9 +2034,6 @@ msgstr "Nastavenie vynechania kontroly HDMI EDID, ktorá môže vyriešiť probl
 
 msgid "Configure if the subtitle should switch between normal, italic, bold and bolditalic"
 msgstr "Nastaviť či sa majú titulky automaticky prepínať medzi normálnym fontom, kurzívou a tučnou kurzívou"
-
-msgid "Configure interface"
-msgstr "Nakonfigurujte rozhranie"
 
 msgid "Configure nameservers"
 msgstr "Nastavenie DNS serverov"
@@ -2280,9 +2280,6 @@ msgstr "Konfigurácia uprednostňovania tuneru, pokiaľ je k dispozícii viac ak
 
 msgid "Configure your internal LAN"
 msgstr "Nakonfigurujte internú LAN"
-
-msgid "Configure your network again"
-msgstr "Znova nakonfigurujte sieť"
 
 msgid "Configure your network settings and press OK to scan"
 msgstr "Nakonfigurujte vaše sieťové nastavenia a stlačte OK pre prehľadávanie"
@@ -3398,6 +3395,9 @@ msgstr "Vložte číslo uložené v pozicionéri, ktoré korešponduje s týmto 
 msgid "Enter the service pin"
 msgstr "Zadajte PIN stanice"
 
+msgid "Enter valid ONID/TSID"
+msgstr ""
+
 msgid "Enter your current latitude. This is the number of degrees you are from the equator as a decimal."
 msgstr "Vložte aktuálnu zemepisnú šírku (latitude). Je to počet stupňov (desatinné číslo), ktoré ste od rovníka."
 
@@ -4320,7 +4320,7 @@ msgid "I do not want to perform any service scans"
 msgstr "Nechcem vykonať žiadne prehľadávanie staníc"
 
 #, fuzzy
-msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10"
+msgid "I55SE/H7(new model)/H9(new model)/H9COMBO/H9TWIN/H9SE/H9COMBOSE/H10/H11"
 msgstr "Zgemma H7(nový model)/H9(nový model)/H9COMBO/H9TWIN/H10"
 
 msgid "IDLE"
@@ -4874,9 +4874,6 @@ msgstr "Spojenie:"
 msgid "Linked titles with a DVD menu"
 msgstr "Tituly prepojené s menu DVD"
 
-msgid "List available networks"
-msgstr "Zoznam dostupných sietí"
-
 msgid "List mode"
 msgstr "Formát zobrazenia zoznamu"
 
@@ -5030,9 +5027,6 @@ msgstr "Ručne"
 
 msgid "Manual Scan"
 msgstr "Ručné vyhľadávanie"
-
-msgid "Manual configuration"
-msgstr "Ručná konfigurácia"
 
 msgid "Manual scan"
 msgstr "Ručné vyhľadávanie"
@@ -5886,6 +5880,9 @@ msgstr "PMT PID"
 msgid "PPanel"
 msgstr "PPanel"
 
+msgid "PULSe 4K"
+msgstr ""
+
 msgid "Package list update"
 msgstr "Aktualizácia zoznamu balíčkov"
 
@@ -6059,22 +6056,8 @@ msgstr "Prosím, zmeňte koniec nahrávania"
 msgid "Please choose an extension..."
 msgstr "Prosím, zvoľte rozšírenie..."
 
-msgid ""
-"Please configure or verify your Nameservers by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Nakonfigurujte alebo skontrolujte názvy serverov vyplnením požadovaných hodnôt.\n"
-"Po skončení stlačte OK a pokračujte."
-
 msgid "Please configure the fallback tuner setup"
 msgstr "Nakonfigurovať nastavenie záložného tuneru"
-
-msgid ""
-"Please configure your internet connection by filling out the required values.\n"
-"When you are ready press OK to continue."
-msgstr ""
-"Nakonfigurujte si internetové pripojenie vyplnením požadovaných hodnôt.\n"
-"Po skončení stlačte OK a pokračujte."
 
 msgid "Please connect your receiver to the internet"
 msgstr "Prosím, pripojte prijímač k internetu"
@@ -6112,9 +6095,6 @@ msgstr "Prosím, zadajte nový PIN kód"
 msgid "Please enter the old PIN code"
 msgstr "Prosím, zadajte starý PIN kód"
 
-msgid "Please follow the instructions on the TV"
-msgstr "Riaďte sa pokynmi na televíznej obrazovke"
-
 msgid "Please note that the previously selected media could not be accessed and therefore the default directory is being used instead."
 msgstr "Nie je prístup k predtým zvolenému médiu, preto sa namiesto neho použije predvolený adresár."
 
@@ -6150,24 +6130,6 @@ msgstr "Prosím, zvoľte štítok na filtrovanie..."
 
 msgid "Please select the movie path..."
 msgstr "Prosím, zvoľte cestu k filmu..."
-
-msgid ""
-"Please select the network interface that you want to use for your internet connection.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Prosím, vyberte sieťové rozhranie, ktoré chcete použiť na pripojenie k internetu.\n"
-"\n"
-"Prosím stlačte tlačidlo OK pre pokračovanie."
-
-msgid ""
-"Please select the wireless network that you want to connect to.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Zvoľte bezdrôtovú sieť, ku ktorej sa chcete pripojiť.\n"
-"\n"
-"Pokračujte stlačením OK."
 
 msgid "Please set up tuner A"
 msgstr "Nastavte tuner A"
@@ -6733,9 +6695,6 @@ msgstr "Obnoviť"
 
 msgid "Refresh rate"
 msgstr "Obnovovacia frekvencia"
-
-msgid "Refresh rate selection."
-msgstr "Voľba obnovovacej frekvencie."
 
 msgid "Refusing to move to the same directory"
 msgstr "Nie je možné presunúť do rovnakej zložky"
@@ -7535,9 +7494,6 @@ msgstr "Voľba cesty pre log súbor"
 msgid "Select provider to add..."
 msgstr "Zvoľte poskytovateľa, ktorého chcete pridať..."
 
-msgid "Select refresh rate"
-msgstr "Zvoľte obnovovaciu frekvenciu"
-
 msgid "Select satellites"
 msgstr "Zvoľte satelity"
 
@@ -7628,17 +7584,8 @@ msgstr "Zvoľte zdroj aktualizácie"
 msgid "Select update source to edit"
 msgstr "Zvoľte zdroj aktualizácie, ktorý chcete upraviť"
 
-msgid "Select video input with up/down buttons"
-msgstr "Tlačidlami nahor a nadol zvoľte vstup obrazu"
-
-msgid "Select video mode"
-msgstr "Zvoľte režim obrazu"
-
 msgid "Select whether your SCR device is externally powered."
 msgstr "Vyberte, či je vaše SCR zariadenie externe napájané."
-
-msgid "Select wireless network"
-msgstr "Zvoľte bezdrôtovú sieť"
 
 msgid "Select your ATSC provider."
 msgstr "Vyberte vášho ATSC poskytovateľa."
@@ -8604,6 +8551,10 @@ msgstr "Zastaviť aktuálny stream"
 msgid "Stop entry"
 msgstr "Zastaviť záznam"
 
+#, fuzzy
+msgid "Stop live TV service"
+msgstr "Prejsť na poslednú stanicu"
+
 msgid "Stop play TV"
 msgstr "Zastaviť prehrávanie TV"
 
@@ -8964,13 +8915,6 @@ msgid "Thailand"
 msgstr "Thajsko"
 
 msgid ""
-"Thank you for using the wizard.\n"
-"Please press OK to continue."
-msgstr ""
-"Ďakujeme, že ste použili sprievodcu.\n"
-"Pokračujte stlačením OK."
-
-msgid ""
 "Thank you for using the wizard. Your receiver is now ready for use.\n"
 "Press OK to start using your receiver."
 msgstr ""
@@ -9110,13 +9054,6 @@ msgstr "Užívateľské rozhranie prijímača sa reštartuje v debug režime..."
 
 msgid ""
 "The wireless LAN plugin is not installed!\n"
-"Please install it and choose what you want to do next."
-msgstr ""
-"Doplnok bezdrôtovej LAN nie je nainštalovaný.\n"
-"Nainštalujte ho a zvoľte, čo chcete robiť ďalej."
-
-msgid ""
-"The wireless LAN plugin is not installed!\n"
 "Please install it."
 msgstr ""
 "Doplnok bezdrôtovej LAN nie je nainštalovaný!\n"
@@ -9175,6 +9112,9 @@ msgstr "Toto je viactypový tuner. Dostupné možnosti závisia na hardvéri."
 
 msgid "This is the order in which DiSEqC commands are sent to the aerial system. The order must correspond exactly with the order the physical devices are arranged along the signal cable (starting from the receiver end)."
 msgstr "Toto je poradie, v ktorom sú DiSEqC príkazy posielané do anténneho systému. Poradie musí presne korešpondovať s poradím, v akom sú fyzické zariadenia zoskupené so signálnym káblom (začínajúcim od koncu prijímača)."
+
+msgid "This not valid ONID/TSID"
+msgstr ""
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Táto voľba umožňuje znížiť blokový šum v obraze za cenu zníženej ostrosti obrazu."
@@ -9362,6 +9302,9 @@ msgstr ""
 
 msgid "This test detects your configured LAN adapter."
 msgstr "Tento test detekuje nakonfigurovanú sieťovú kartu."
+
+msgid "This valid ONID/TSID"
+msgstr ""
 
 msgid ""
 "This will (re-)calculate all positions of your rotor and may remove previously memorised positions and fine-tuning!\n"
@@ -10026,6 +9969,9 @@ msgstr "VOB súbor"
 msgid "VU+"
 msgstr "VU+"
 
+msgid "Valid ONID/TSID look at www.lyngsat.com..."
+msgstr ""
+
 msgid "Vanuatu"
 msgstr "Vanuatu"
 
@@ -10055,20 +10001,6 @@ msgstr "Rozšírené nastavenia obrazu"
 
 msgid "Video enhancement setup"
 msgstr "Rozšírené nastavenie obrazu"
-
-msgid ""
-"Video input selection\n"
-"\n"
-"Please press OK if you can see this page on your TV (or select a different input port).\n"
-"\n"
-"The next input port will be automatically probed in 20 seconds."
-msgstr ""
-"Voľba video vstupu\n"
-"Prosím, stlačte OK, ak vidíte túto stránku na svojom televízore (alebo vyberte iný vstupný port).\n"
-"Ďalší vstupný port sa automaticky otestuje za 20 sekúnd."
-
-msgid "Video mode selection."
-msgstr "Voľba režimu obrazu."
 
 msgid "Video output"
 msgstr "Video výstup"
@@ -10293,19 +10225,6 @@ msgstr ""
 "Nájdite začiatok materiálu, ktorý chcete vystrihnúť. Stlačte OK, zvoľte „začiatok strihu“\n"
 "\n"
 "Potom nájdite koniec, stlačte OK, zvoľte „koniec strihu“ To je všetko."
-
-msgid ""
-"Welcome.\n"
-"\n"
-"If you want to connect your receiver to the Internet, this wizard will guide you through the basic network setup of your receiver.\n"
-"\n"
-"Press OK to start configuring your network"
-msgstr ""
-"Vitajte.\n"
-"\n"
-"Ak chcete pripojiť Váš prijímač k internetu, tento sprievodca vás povedie základnými nastaveniami siete.\n"
-"\n"
-"Stlačením tlačidla OK spustite konfiguráciu siete"
 
 msgid ""
 "Welcome.\n"
@@ -10567,12 +10486,6 @@ msgstr "Bezdrôtová sieť"
 msgid "Wireless network configuration..."
 msgstr "Nastavenie bezdrôtovej siete..."
 
-msgid "Wireless network connection setup"
-msgstr "Nastavenie bezdrôtovej siete"
-
-msgid "Wireless network connection setup."
-msgstr "Nastavenie bezdrôtovej siete."
-
 msgid "Wireless network state"
 msgstr "Stav bezdrôtovej siete"
 
@@ -10802,13 +10715,6 @@ msgstr ""
 "Čakajte, kým sa váš prijímač nereštartuje\n"
 "To môže trvať niekoľko minút"
 
-msgid ""
-"Your internet connection is not working!\n"
-"Please choose what you want to do next."
-msgstr ""
-"Vaše internetové pripojenie nefunguje!\n"
-"Zvoľte prosím, čo chcete robiť ďalej."
-
 #, python-format
 msgid "Your internet connection is working (ip: %s)"
 msgstr "Vaše pripojenie k internetu je funkčné (ip: %s)"
@@ -10836,19 +10742,6 @@ msgstr ""
 "Pripojenie k internetu pracuje správne.\n"
 "\n"
 
-msgid ""
-"Your receiver is now ready to use.\n"
-"\n"
-"Your internet connection is working now.\n"
-"\n"
-"Please press OK to continue."
-msgstr ""
-"Váš prijímač je teraz pripravený na používanie.\n"
-"\n"
-"Pripojenie k internetu pracuje správne.\n"
-"\n"
-"Prosím, stlačte OK pre pokračovanie."
-
 msgid "Your receiver is rebooting"
 msgstr "Prijímač sa reštartuje..."
 
@@ -10866,17 +10759,6 @@ msgstr "Prijímač prejde do pohotovostného režimu z dôvodu nečinnosti."
 
 msgid "Your receiver will restart after pressing OK on your remote control."
 msgstr "Váš prijímač bude reštartovaný po stlačení tlačidla OK na diaľkovom ovládači."
-
-msgid ""
-"Your wireless LAN internet connection could not be started!\n"
-"Have you attached your USB WLAN Stick?\n"
-"\n"
-"Please choose what you want to do next."
-msgstr ""
-"Internetové pripojenie bezdrôtovou LAN sa nedá spustiť!\n"
-"Pripojili ste kľúč USB WLAN?\n"
-"\n"
-"Zvoľte, čo chcete robiť ďalej."
 
 msgid "Zambia"
 msgstr "Zambia"
